Added translated country lists to locale INI files
- from geonames.org

--- a/share/locale/ara-SA.ini
+++ b/share/locale/ara-SA.ini
@@ -102,3 +102,259 @@ thu=الخميس
 fri=الجمعة
 sat=السبت
 sun=الأحد
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=ar
+[CountryNames]
+
+Countries[AD]=اندورا
+Countries[AE]=الامارات العربية المتحدة
+Countries[AF]=افغانستان
+Countries[AG]=أنتيجوا وبربودا
+Countries[AI]=أنغويلا
+Countries[AL]=ألبانيا
+Countries[AM]=ارمينيا
+Countries[AO]=أنجولا
+Countries[AQ]=القطب الجنوبي
+Countries[AR]=الارجنتين
+Countries[AS]=ساموا الأمريكية
+Countries[AT]=النمسا
+Countries[AU]=استراليا
+Countries[AW]=آروبا
+Countries[AX]=أولان
+Countries[AZ]=آذربيجان
+Countries[BA]=البوسنة والهرسك
+Countries[BB]=بربادوس
+Countries[BD]=بنجلاديش
+Countries[BE]=بلجيكا
+Countries[BF]=بوركينا فاسو
+Countries[BG]=بلغاريا
+Countries[BH]=البحرين
+Countries[BI]=بوروندي
+Countries[BJ]=بنين
+Countries[BL]=سان بارتليمي
+Countries[BM]=برمودا
+Countries[BN]=بروناي
+Countries[BO]=بوليفيا
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=البرازيل
+Countries[BS]=الباهاما
+Countries[BT]=بوتان
+Countries[BV]=جزيرة بوفيه
+Countries[BW]=بوتسوانا
+Countries[BY]=روسيا البيضاء
+Countries[BZ]=بليز
+Countries[CA]=كندا
+Countries[CC]=جزر كوكوس
+Countries[CD]=الكونغو - كينشاسا
+Countries[CF]=جمهورية افريقيا الوسطى
+Countries[CG]=الكونغو - برازافيل
+Countries[CH]=سويسرا
+Countries[CI]=ساحل العاج
+Countries[CK]=جزر كوك
+Countries[CL]=تشيلي
+Countries[CM]=الكاميرون
+Countries[CN]=الصين
+Countries[CO]=كولومبيا
+Countries[CR]=كوستاريكا
+Countries[CU]=كوبا
+Countries[CV]=الرأس الأخضر
+Countries[CW]=Land Curaçao
+Countries[CX]=جزيرة الكريسماس
+Countries[CY]=قبرص
+Countries[CZ]=جمهورية التشيك
+Countries[DE]=المانيا
+Countries[DJ]=جيبوتي
+Countries[DK]=الدانمرك
+Countries[DM]=دومينيكا
+Countries[DO]=جمهورية الدومينيك
+Countries[DZ]=الجزائر
+Countries[EC]=الاكوادور
+Countries[EE]=أستونيا
+Countries[EG]=مصر
+Countries[EH]=الصحراء الغربية
+Countries[ER]=اريتريا
+Countries[ES]=أسبانيا
+Countries[ET]=اثيوبيا
+Countries[FI]=فنلندا
+Countries[FJ]=فيجي
+Countries[FK]=جزر فوكلاند
+Countries[FM]=ميكرونيزيا
+Countries[FO]=جزر فارو
+Countries[FR]=فرنسا
+Countries[GA]=الجابون
+Countries[GB]=المملكة المتحدة
+Countries[GD]=غرينادا
+Countries[GE]=جورجيا
+Countries[GF]=غويانا الفرنسية
+Countries[GG]=غيرنزي
+Countries[GH]=غانا
+Countries[GI]=جبل طارق
+Countries[GL]=غرينلاند
+Countries[GM]=غامبيا
+Countries[GN]=غينيا
+Countries[GP]=جوادلوب
+Countries[GQ]=غينيا الاستوائية
+Countries[GR]=اليونان
+Countries[GS]=جورجيا الجنوبية وجزر ساندويتش الجنوبية
+Countries[GT]=جواتيمالا
+Countries[GU]=غوام
+Countries[GW]=غينيا بيساو
+Countries[GY]=غوايانا
+Countries[HK]=هونغ كونغ
+Countries[HM]=جزيرة هيرد وجزر ماكدونالد
+Countries[HN]=هندوراس
+Countries[HR]=كرواتيا
+Countries[HT]=هايتي
+Countries[HU]=المجر
+Countries[ID]=اندونيسيا
+Countries[IE]=أيرلاندا
+Countries[IL]=اسرائيل
+Countries[IM]=جزيرة مان
+Countries[IN]=الهند
+Countries[IO]=الإقليم البريطاني في المحيط الهندي
+Countries[IQ]=العراق
+Countries[IR]=ايران
+Countries[IS]=أيسلندا
+Countries[IT]=ايطاليا
+Countries[JE]=جيرسي
+Countries[JM]=جامايكا
+Countries[JO]=الأردن
+Countries[JP]=اليابان
+Countries[KE]=كينيا
+Countries[KG]=قيرغيزستان
+Countries[KH]=كمبوديا
+Countries[KI]=كيريباتي
+Countries[KM]=جزر القمر
+Countries[KN]=سانت كيتس ونيفيس
+Countries[KP]=كوريا الشمالية
+Countries[KR]=كوريا الجنوبية
+Countries[KW]=الكويت
+Countries[KY]=جزر الكايمن
+Countries[KZ]=كازاخستان
+Countries[LA]=لاوس
+Countries[LB]=لبنان
+Countries[LC]=سانت لوسيا
+Countries[LI]=ليختنشتاين
+Countries[LK]=سريلانكا
+Countries[LR]=ليبيريا
+Countries[LS]=ليسوتو
+Countries[LT]=ليتوانيا
+Countries[LU]=لوكسمبورج
+Countries[LV]=لاتفيا
+Countries[LY]=ليبيا
+Countries[MA]=المغرب
+Countries[MC]=موناكو
+Countries[MD]=مولدوفا
+Countries[ME]=الجبل الأسود
+Countries[MF]=سانت مارتين
+Countries[MG]=مدغشقر
+Countries[MH]=جزر المارشال
+Countries[MK]=مقدونيا
+Countries[ML]=مالي
+Countries[MM]=ميانمار -بورما
+Countries[MN]=منغوليا
+Countries[MO]=ماكاو
+Countries[MP]=جزر ماريانا الشمالية
+Countries[MQ]=مارتينيك
+Countries[MR]=موريتانيا
+Countries[MS]=مونتسرات
+Countries[MT]=مالطا
+Countries[MU]=موريشوس
+Countries[MV]=جزر الملديف
+Countries[MW]=ملاوي
+Countries[MX]=المكسيك
+Countries[MY]=ماليزيا
+Countries[MZ]=موزمبيق
+Countries[NA]=ناميبيا
+Countries[NC]=كاليدونيا الجديدة
+Countries[NE]=النيجر
+Countries[NF]=جزيرة نورفوك
+Countries[NG]=نيجيريا
+Countries[NI]=نيكاراغوا
+Countries[NL]=هولندا
+Countries[NO]=النرويج
+Countries[NP]=النيبال
+Countries[NR]=نورو
+Countries[NU]=نيوي
+Countries[NZ]=نيوزيلاندا
+Countries[OM]=عمان
+Countries[PA]=بنما
+Countries[PE]=بيرو
+Countries[PF]=بولينيزيا الفرنسية
+Countries[PG]=بابوا غينيا الجديدة
+Countries[PH]=الفيلبين
+Countries[PK]=الباكستان
+Countries[PL]=بولندا
+Countries[PM]=سانت بيير وميكولون
+Countries[PN]=جزر بيتكيرن
+Countries[PR]=بورتوريكو
+Countries[PS]=فلسطين
+Countries[PT]=البرتغال
+Countries[PW]=بالاو
+Countries[PY]=باراجواي
+Countries[QA]=قطر
+Countries[RE]=روينيون
+Countries[RO]=رومانيا
+Countries[RS]=صربيا
+Countries[RU]=روسيا
+Countries[RW]=رواندا
+Countries[SA]=المملكة العربية السعودية
+Countries[SB]=جزر سليمان
+Countries[SC]=سيشل
+Countries[SD]=السودان
+Countries[SE]=السويد
+Countries[SG]=سنغافورة
+Countries[SH]=سانت هيلنا
+Countries[SI]=سلوفينيا
+Countries[SJ]=سفالبارد وجان مايان
+Countries[SK]=سلوفاكيا
+Countries[SL]=سيراليون
+Countries[SM]=سان مارينو
+Countries[SN]=السنغال
+Countries[SO]=الصومال
+Countries[SR]=سورينام
+Countries[SS]=South Sudan
+Countries[ST]=سان تومي وبرينسيبي
+Countries[SV]=السلفادور
+Countries[SX]=Land Sint Maarten
+Countries[SY]=سورية
+Countries[SZ]=سوازيلاند
+Countries[TC]=جزر الترك وجايكوس
+Countries[TD]=تشاد
+Countries[TF]=المقاطعات الجنوبية الفرنسية
+Countries[TG]=توجو
+Countries[TH]=تايلند
+Countries[TJ]=طاجكستان
+Countries[TK]=توكيلو
+Countries[TL]=تيمور الشرقية
+Countries[TM]=تركمانستان
+Countries[TN]=تونس
+Countries[TO]=تونغا
+Countries[TR]=تركيا
+Countries[TT]=ترينيداد وتوباغو
+Countries[TV]=توفالو
+Countries[TW]=تايوان
+Countries[TZ]=تانزانيا
+Countries[UA]=اوكرانيا
+Countries[UG]=اوغندا
+Countries[UM]=جزر الولايات المتحدة البعيدة الصغيرة
+Countries[US]=الولايات المتحدة الأمريكية
+Countries[UY]=أورجواي
+Countries[UZ]=ازبكستان
+Countries[VA]=الفاتيكان
+Countries[VC]=سانت فنسنت وغرنادين
+Countries[VE]=فنزويلا
+Countries[VG]=جزر فرجين البريطانية
+Countries[VI]=جزر فرجين الأمريكية
+Countries[VN]=فيتنام
+Countries[VU]=فانوآتو
+Countries[WF]=جزر والس وفوتونا
+Countries[WS]=ساموا
+Countries[XK]=كوسوفو
+Countries[YE]=اليمن
+Countries[YT]=مايوت
+Countries[ZA]=جمهورية جنوب افريقيا
+Countries[ZM]=زامبيا
+Countries[ZW]=زيمبابوي
