--- a/share/locale/cat-ES.ini
+++ b/share/locale/cat-ES.ini
@@ -93,3 +93,259 @@ thu=dijous
 fri=divendres
 sat=dissabte
 sun=diumenge
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=ca
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Unió dels Emirats Àrabs
+Countries[AF]=Afganistan
+Countries[AG]=Antigua i Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albània
+Countries[AM]=Armènia
+Countries[AO]=Angola
+Countries[AQ]=Antàrtida
+Countries[AR]=Argentina
+Countries[AS]=Samoa Americana
+Countries[AT]=Àustria
+Countries[AU]=Austràlia
+Countries[AW]=Aruba
+Countries[AX]=Illes Åland
+Countries[AZ]=Azerbaidjan
+Countries[BA]=Bòsnia i Hercegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangla Desh
+Countries[BE]=Bèlgica
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgària
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint Barthélemy
+Countries[BM]=Bermudes
+Countries[BN]=Brunei
+Countries[BO]=Bolívia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brasil
+Countries[BS]=Bahames
+Countries[BT]=Bhutan
+Countries[BV]=Illa Bouvet
+Countries[BW]=Botswana
+Countries[BY]=Bielorússia
+Countries[BZ]=Belize
+Countries[CA]=Canadà
+Countries[CC]=Illes Cocos
+Countries[CD]=Congo - Kinshasa
+Countries[CF]=República Centrafricana
+Countries[CG]=Congo - Brazzaville
+Countries[CH]=Suïssa
+Countries[CI]=Costa d’Ivori
+Countries[CK]=Illes Cook
+Countries[CL]=Xile
+Countries[CM]=Camerun
+Countries[CN]=Xina
+Countries[CO]=Colòmbia
+Countries[CR]=Costa Rica
+Countries[CU]=Cuba
+Countries[CV]=Cap Verd
+Countries[CW]=Land Curaçao
+Countries[CX]=Illa Christmas
+Countries[CY]=Xipre
+Countries[CZ]=Txèquia
+Countries[DE]=Alemanya
+Countries[DJ]=Djibouti
+Countries[DK]=Dinamarca
+Countries[DM]=Dominica
+Countries[DO]=República Dominicana
+Countries[DZ]=Algèria
+Countries[EC]=Equador
+Countries[EE]=Estònia
+Countries[EG]=Egipte
+Countries[EH]=Sàhara Occidental
+Countries[ER]=Eritrea
+Countries[ES]=Espanya
+Countries[ET]=Etiòpia
+Countries[FI]=Finlàndia
+Countries[FJ]=Fiji
+Countries[FK]=Illes Malvines
+Countries[FM]=Micronèsia
+Countries[FO]=Illes Fèroe
+Countries[FR]=França
+Countries[GA]=El Gabon
+Countries[GB]=Regne Unit
+Countries[GD]=Grenada
+Countries[GE]=Geòrgia
+Countries[GF]=Guaiana Francesa
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grenlàndia
+Countries[GM]=Gàmbia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Guinea Equatorial
+Countries[GR]=Grècia
+Countries[GS]=Illes Geòrgia del Sud i Sandwich del Sud
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hong Kong
+Countries[HM]=Illa Heard i Illes McDonald
+Countries[HN]=Hondures
+Countries[HR]=Croàcia
+Countries[HT]=Haití
+Countries[HU]=Hongria
+Countries[ID]=Indonèsia
+Countries[IE]=Irlanda
+Countries[IL]=Israel
+Countries[IM]=Illa de Man
+Countries[IN]=Índia
+Countries[IO]=Territori Britànic de l'Oceà Índic
+Countries[IQ]=Iraq
+Countries[IR]=Iran
+Countries[IS]=Islàndia
+Countries[IT]=Itàlia
+Countries[JE]=Jersey
+Countries[JM]=Jamaica
+Countries[JO]=Jordània
+Countries[JP]=Japó
+Countries[KE]=Kènia
+Countries[KG]=Kirguizistan
+Countries[KH]=Cambodja
+Countries[KI]=Kiribati
+Countries[KM]=Comores
+Countries[KN]=Saint Christopher i Nevis
+Countries[KP]=Corea del Nord
+Countries[KR]=Corea del Sud
+Countries[KW]=Kuwait
+Countries[KY]=Illes Caiman
+Countries[KZ]=Kazakhstan
+Countries[LA]=Laos
+Countries[LB]=Líban
+Countries[LC]=Saint Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Libèria
+Countries[LS]=Lesotho
+Countries[LT]=Lituània
+Countries[LU]=Luxemburg
+Countries[LV]=Letònia
+Countries[LY]=Líbia
+Countries[MA]=Marroc
+Countries[MC]=Mònaco
+Countries[MD]=Moldàvia
+Countries[ME]=Montenegro
+Countries[MF]=Saint Martin
+Countries[MG]=Madagascar
+Countries[MH]=Illes Marshall
+Countries[MK]=Macedònia
+Countries[ML]=Mali
+Countries[MM]=Myanmar [Birmània]
+Countries[MN]=Mongòlia
+Countries[MO]=Macao
+Countries[MP]=Illes Mariannes del Nord
+Countries[MQ]=Martinica
+Countries[MR]=Mauritània
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Maurici
+Countries[MV]=Maldives
+Countries[MW]=Malawi
+Countries[MX]=Mèxic
+Countries[MY]=Malàisia
+Countries[MZ]=Moçambic
+Countries[NA]=Namíbia
+Countries[NC]=Nova Caledònia
+Countries[NE]=Níger
+Countries[NF]=Illa Norfolk
+Countries[NG]=Nigèria
+Countries[NI]=Nicaragua
+Countries[NL]=Països Baixos
+Countries[NO]=Noruega
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Nova Zelanda
+Countries[OM]=Oman
+Countries[PA]=Panamà
+Countries[PE]=Perú
+Countries[PF]=Polinèsia Francesa
+Countries[PG]=Papua Nova Guinea
+Countries[PH]=Filipines
+Countries[PK]=Pakistan
+Countries[PL]=Polònia
+Countries[PM]=Saint Pierre i Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Puerto Rico
+Countries[PS]=Palestina
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paraguai
+Countries[QA]=Qatar
+Countries[RE]=Illa de la Reunió
+Countries[RO]=Romania
+Countries[RS]=Sèrbia
+Countries[RU]=Rússia
+Countries[RW]=Rwanda
+Countries[SA]=Aràbia Saudita
+Countries[SB]=Illes Salomó
+Countries[SC]=Seychelles
+Countries[SD]=El Sudan
+Countries[SE]=Suècia
+Countries[SG]=Singapur
+Countries[SH]=Saint Helena
+Countries[SI]=Eslovènia
+Countries[SJ]=Svalbard i Jan Mayen
+Countries[SK]=Eslovàquia
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somàlia
+Countries[SR]=Surinam
+Countries[SS]=South Sudan
+Countries[ST]=São Tomé i Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Síria
+Countries[SZ]=Swazilàndia
+Countries[TC]=Turks i Caicos
+Countries[TD]=Txad
+Countries[TF]=Territoris Francesos del Sud
+Countries[TG]=Togo
+Countries[TH]=Tailàndia
+Countries[TJ]=Tadjikistan
+Countries[TK]=Tokelau
+Countries[TL]=Timor Oriental
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunísia
+Countries[TO]=Tonga
+Countries[TR]=Turquia
+Countries[TT]=Trinitat i Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tanzània
+Countries[UA]=Ucraïna
+Countries[UG]=Uganda
+Countries[UM]=Illes Perifèriques Menors dels EUA
+Countries[US]=Estats Units
+Countries[UY]=Uruguai
+Countries[UZ]=Uzbekistan
+Countries[VA]=Ciutat del Vaticà
+Countries[VC]=Saint Vincent i les Grenadines
+Countries[VE]=Veneçuela
+Countries[VG]=Illes Verges Britàniques
+Countries[VI]=Illes Verges nord-americanes
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis i Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosovo
+Countries[YE]=Iemen
+Countries[YT]=Mayotte
+Countries[ZA]=Sudàfrica
+Countries[ZM]=Zàmbia
+Countries[ZW]=Zimbabwe
