--- a/share/locale/chi-CN.ini
+++ b/share/locale/chi-CN.ini
@@ -83,3 +83,259 @@ thu=星期四
 fri=星期五
 sat=星期六
 sun=星期天
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=zh
+[CountryNames]
+
+Countries[AD]=安道尔
+Countries[AE]=阿拉伯联合酋长国
+Countries[AF]=阿富汗
+Countries[AG]=安提瓜和巴布达
+Countries[AI]=安圭拉
+Countries[AL]=阿尔巴尼亚
+Countries[AM]=亚美尼亚
+Countries[AO]=安哥拉
+Countries[AQ]=南极洲
+Countries[AR]=阿根廷
+Countries[AS]=美属萨摩亚
+Countries[AT]=奥地利
+Countries[AU]=澳大利亚
+Countries[AW]=阿鲁巴
+Countries[AX]=奥兰群岛
+Countries[AZ]=阿塞拜疆
+Countries[BA]=波斯尼亚和黑山共和国
+Countries[BB]=巴巴多斯
+Countries[BD]=孟加拉
+Countries[BE]=比利时
+Countries[BF]=布基纳法索
+Countries[BG]=保加利亚
+Countries[BH]=巴林
+Countries[BI]=布隆迪
+Countries[BJ]=贝宁
+Countries[BL]=圣巴泰勒米
+Countries[BM]=百慕大
+Countries[BN]=文莱
+Countries[BO]=玻利维亚
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=巴西
+Countries[BS]=巴哈马
+Countries[BT]=不丹
+Countries[BV]=布维特岛
+Countries[BW]=博茨瓦纳
+Countries[BY]=白俄罗斯
+Countries[BZ]=伯利兹
+Countries[CA]=加拿大
+Countries[CC]=科科斯群岛
+Countries[CD]=扎伊尔
+Countries[CF]=中非共和国
+Countries[CG]=刚果
+Countries[CH]=瑞士
+Countries[CI]=象牙海岸
+Countries[CK]=库克群岛
+Countries[CL]=智利
+Countries[CM]=喀麦隆
+Countries[CN]=中国
+Countries[CO]=哥伦比亚
+Countries[CR]=哥斯达黎加
+Countries[CU]=古巴
+Countries[CV]=佛得角
+Countries[CW]=Land Curaçao
+Countries[CX]=圣诞岛
+Countries[CY]=塞浦路斯
+Countries[CZ]=捷克共和国
+Countries[DE]=德国
+Countries[DJ]=吉布提
+Countries[DK]=丹麦
+Countries[DM]=多米尼加
+Countries[DO]=多米尼加共和国
+Countries[DZ]=阿尔及利亚
+Countries[EC]=厄瓜多尔
+Countries[EE]=爱沙尼亚
+Countries[EG]=埃及
+Countries[EH]=西撒哈拉
+Countries[ER]=厄立特里亚
+Countries[ES]=西班牙
+Countries[ET]=埃塞俄比亚
+Countries[FI]=芬兰
+Countries[FJ]=斐济
+Countries[FK]=福克兰群岛
+Countries[FM]=密克罗尼西亚
+Countries[FO]=法罗群岛
+Countries[FR]=法国
+Countries[GA]=加蓬
+Countries[GB]=英国
+Countries[GD]=格林纳达
+Countries[GE]=格鲁吉亚
+Countries[GF]=法属圭亚那
+Countries[GG]=格恩西岛
+Countries[GH]=加纳
+Countries[GI]=直布罗陀
+Countries[GL]=格陵兰
+Countries[GM]=冈比亚
+Countries[GN]=几内亚
+Countries[GP]=瓜德罗普岛
+Countries[GQ]=赤道几内亚
+Countries[GR]=希腊
+Countries[GS]=南乔治亚岛和南桑威齐群岛
+Countries[GT]=危地马拉
+Countries[GU]=关岛
+Countries[GW]=几内亚比绍
+Countries[GY]=圭亚那
+Countries[HK]=香港
+Countries[HM]=赫德与麦克唐纳群岛
+Countries[HN]=洪都拉斯
+Countries[HR]=克罗地亚
+Countries[HT]=海地
+Countries[HU]=匈牙利
+Countries[ID]=印度尼西亚
+Countries[IE]=爱尔兰
+Countries[IL]=以色列
+Countries[IM]=曼岛
+Countries[IN]=印度
+Countries[IO]=英属印度洋领地
+Countries[IQ]=伊拉克
+Countries[IR]=伊朗伊斯兰共和国
+Countries[IS]=冰岛
+Countries[IT]=意大利
+Countries[JE]=泽西岛
+Countries[JM]=牙买加
+Countries[JO]=约旦
+Countries[JP]=日本
+Countries[KE]=肯尼亚
+Countries[KG]=吉尔吉克斯坦
+Countries[KH]=柬埔寨
+Countries[KI]=基里巴斯
+Countries[KM]=科摩罗
+Countries[KN]=圣基茨和尼维斯
+Countries[KP]=朝鲜民主共和国
+Countries[KR]=韩国
+Countries[KW]=科威特
+Countries[KY]=开曼群岛
+Countries[KZ]=哈萨克斯坦
+Countries[LA]=老挝人民民主共和国
+Countries[LB]=黎巴嫩
+Countries[LC]=圣卢西亚
+Countries[LI]=列支敦士登
+Countries[LK]=斯里兰卡
+Countries[LR]=利比里亚
+Countries[LS]=莱索托
+Countries[LT]=立陶宛
+Countries[LU]=卢森堡
+Countries[LV]=拉脱维亚
+Countries[LY]=阿拉伯利比亚民众国
+Countries[MA]=摩洛哥
+Countries[MC]=摩纳哥
+Countries[MD]=摩尔多瓦共和国
+Countries[ME]=黑山共和国
+Countries[MF]=圣马丁
+Countries[MG]=马达加斯加
+Countries[MH]=马绍尔群岛
+Countries[MK]=前南斯拉夫马其顿共和国
+Countries[ML]=马里
+Countries[MM]=缅甸
+Countries[MN]=蒙古
+Countries[MO]=澳门
+Countries[MP]=北马里亚纳群岛
+Countries[MQ]=马提尼克群岛
+Countries[MR]=毛里塔尼亚
+Countries[MS]=蒙塞拉特群岛
+Countries[MT]=马耳他
+Countries[MU]=毛里求斯
+Countries[MV]=马尔代夫
+Countries[MW]=马拉维
+Countries[MX]=墨西哥
+Countries[MY]=马来西亚
+Countries[MZ]=莫桑比克
+Countries[NA]=纳米比亚
+Countries[NC]=新喀里多尼亚
+Countries[NE]=尼日尔
+Countries[NF]=诺福克岛
+Countries[NG]=尼日利亚
+Countries[NI]=尼加拉瓜
+Countries[NL]=荷兰
+Countries[NO]=挪威
+Countries[NP]=尼泊尔
+Countries[NR]=瑙鲁
+Countries[NU]=纽埃
+Countries[NZ]=新西兰
+Countries[OM]=阿曼
+Countries[PA]=巴拿马
+Countries[PE]=秘鲁
+Countries[PF]=法属波利尼西亚
+Countries[PG]=巴布亚新几内亚
+Countries[PH]=菲律宾
+Countries[PK]=巴基斯坦
+Countries[PL]=波兰
+Countries[PM]=圣皮埃尔和密克隆
+Countries[PN]=皮特凯恩群岛
+Countries[PR]=波多黎各
+Countries[PS]=巴勒斯坦领土
+Countries[PT]=葡萄牙
+Countries[PW]=帕劳
+Countries[PY]=巴拉圭
+Countries[QA]=卡塔尔
+Countries[RE]=留尼汪
+Countries[RO]=罗马尼亚
+Countries[RS]=塞尔维亚
+Countries[RU]=俄罗斯
+Countries[RW]=卢旺达
+Countries[SA]=沙特阿拉伯
+Countries[SB]=所罗门群岛
+Countries[SC]=塞舌尔群岛
+Countries[SD]=苏丹
+Countries[SE]=瑞典
+Countries[SG]=新加坡
+Countries[SH]=圣赫勒拿
+Countries[SI]=斯洛文尼亚
+Countries[SJ]=斯瓦尔巴特和扬马延
+Countries[SK]=斯洛伐克共和国
+Countries[SL]=塞拉利昂
+Countries[SM]=圣马力诺
+Countries[SN]=塞内加尔
+Countries[SO]=索马里
+Countries[SR]=苏里南
+Countries[SS]=South Sudan
+Countries[ST]=圣多美和普林西比
+Countries[SV]=萨尔瓦多
+Countries[SX]=Land Sint Maarten
+Countries[SY]=叙利亚
+Countries[SZ]=斯威士兰
+Countries[TC]=特克斯和凯科斯群岛
+Countries[TD]=乍得
+Countries[TF]=法属南部领土
+Countries[TG]=多哥
+Countries[TH]=泰国
+Countries[TJ]=塔吉克斯坦
+Countries[TK]=托克劳
+Countries[TL]=东帝汶
+Countries[TM]=土库曼斯坦
+Countries[TN]=突尼斯
+Countries[TO]=汤加
+Countries[TR]=土耳其
+Countries[TT]=特立尼达和多巴哥
+Countries[TV]=图瓦卢
+Countries[TW]=台湾
+Countries[TZ]=坦桑尼亚
+Countries[UA]=乌克兰
+Countries[UG]=乌干达
+Countries[UM]=美国边远小岛
+Countries[US]=美国
+Countries[UY]=乌拉圭
+Countries[UZ]=乌兹别克斯坦
+Countries[VA]=圣座（梵蒂冈）
+Countries[VC]=圣文森特和格林纳丁斯
+Countries[VE]=委内瑞拉
+Countries[VG]=英属维京群岛
+Countries[VI]=美属维京群岛
+Countries[VN]=越南
+Countries[VU]=瓦努阿图
+Countries[WF]=瓦利斯和富图纳
+Countries[WS]=萨摩亚
+Countries[XK]=科索沃
+Countries[YE]=也门
+Countries[YT]=马约特
+Countries[ZA]=南非
+Countries[ZM]=赞比亚
+Countries[ZW]=津巴布韦
