--- a/share/locale/cro-HR.ini
+++ b/share/locale/cro-HR.ini
@@ -102,3 +102,259 @@ thu=četvrtak
 fri=petak
 sat=subota
 sun=nedjelja
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=hr
+[CountryNames]
+
+Countries[AD]=Andora
+Countries[AE]=Ujedinjeni Arapski Emirati
+Countries[AF]=Afganistan
+Countries[AG]=Antigua i Barbuda
+Countries[AI]=Anguila
+Countries[AL]=Albanija
+Countries[AM]=Armenija
+Countries[AO]=Angola
+Countries[AQ]=Antarktik
+Countries[AR]=Argentina
+Countries[AS]=Američka Samoa
+Countries[AT]=Austrija
+Countries[AU]=Australija
+Countries[AW]=Aruba
+Countries[AX]=Alandski otoci
+Countries[AZ]=Azerbajdžan
+Countries[BA]=Bosna i Hercegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladeš
+Countries[BE]=Belgija
+Countries[BF]=Burkina Faso
+Countries[BG]=Bugarska
+Countries[BH]=Bahrein
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Sveti Bartolomej
+Countries[BM]=Bermuda
+Countries[BN]=Brunei Darussalam
+Countries[BO]=Bolivija
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brazil
+Countries[BS]=Bahami
+Countries[BT]=Butan
+Countries[BV]=Otok Bouvet
+Countries[BW]=Bocvana
+Countries[BY]=Bjelorusija
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Kokosovi Otoci
+Countries[CD]=Kongo, Demokratska Republika
+Countries[CF]=Srednjoafrička Republika
+Countries[CG]=Kongo
+Countries[CH]=Švicarska
+Countries[CI]=Obala Slonovače
+Countries[CK]=Kukovi Otoci
+Countries[CL]=Čile
+Countries[CM]=Kamerun
+Countries[CN]=Kina
+Countries[CO]=Kolumbija
+Countries[CR]=Kostarika
+Countries[CU]=Kuba
+Countries[CV]=Zeleni Rt
+Countries[CW]=Land Curaçao
+Countries[CX]=Božićni Otok
+Countries[CY]=Cipar
+Countries[CZ]=Republika Češka
+Countries[DE]=Njemačka
+Countries[DJ]=Džibuti
+Countries[DK]=Danska
+Countries[DM]=Dominika
+Countries[DO]=Dominikanska Republika
+Countries[DZ]=Alžir
+Countries[EC]=Ekvador
+Countries[EE]=Estonija
+Countries[EG]=Egipat
+Countries[EH]=Zapadna Sahara
+Countries[ER]=Eritreja
+Countries[ES]=Španjolska
+Countries[ET]=Etiopija
+Countries[FI]=Finska
+Countries[FJ]=Fidži
+Countries[FK]=Falklandi
+Countries[FM]=Mikronezija
+Countries[FO]=Farski Otoci
+Countries[FR]=Francuska
+Countries[GA]=Gabon
+Countries[GB]=Velika Britanija
+Countries[GD]=Grenada
+Countries[GE]=Gruzija
+Countries[GF]=Francuska Gvajana
+Countries[GG]=Guernsey
+Countries[GH]=Gana
+Countries[GI]=Gibraltar
+Countries[GL]=Grenland
+Countries[GM]=Gambija
+Countries[GN]=Gvineja
+Countries[GP]=Guadeloupe
+Countries[GQ]=Ekvatorska Gvineja
+Countries[GR]=Grčka
+Countries[GS]=Južna Gruzija i Južni Sendvič Otoci
+Countries[GT]=Gvatemala
+Countries[GU]=Guam
+Countries[GW]=Gvineja Bisau
+Countries[GY]=Gvajana
+Countries[HK]=Hong Kong
+Countries[HM]=Otok Heard i Otoci McDonald
+Countries[HN]=Honduras
+Countries[HR]=Hrvatska
+Countries[HT]=Haiti
+Countries[HU]=Mađarska
+Countries[ID]=Indonezija
+Countries[IE]=Irska
+Countries[IL]=Izrael
+Countries[IM]=Isle Of Man
+Countries[IN]=Indija
+Countries[IO]=Britanski Teritorij Indijskog Oceana
+Countries[IQ]=Irak
+Countries[IR]=Iran, Islamska Republika
+Countries[IS]=Island
+Countries[IT]=Italija
+Countries[JE]=Jersey
+Countries[JM]=Jamajka
+Countries[JO]=Jordan
+Countries[JP]=Japan
+Countries[KE]=Kenija
+Countries[KG]=Kirgistan
+Countries[KH]=Kambodža
+Countries[KI]=Kiribati
+Countries[KM]=Komori
+Countries[KN]=Sv. Kristofor i Nevis
+Countries[KP]=Koreja, Sjeverna
+Countries[KR]=Koreja, Južna
+Countries[KW]=Kuvajt
+Countries[KY]=Kajmanski Otoci
+Countries[KZ]=Kazakstan
+Countries[LA]=Laoska Narodna Demokratska Republika
+Countries[LB]=Libanon
+Countries[LC]=Sv. Lucija
+Countries[LI]=Lihtenštajn
+Countries[LK]=Šri Lanka
+Countries[LR]=Liberija
+Countries[LS]=Lesoto
+Countries[LT]=Litva
+Countries[LU]=Luksemburg
+Countries[LV]=Latvija
+Countries[LY]=Libijska Arapska Džamahirija
+Countries[MA]=Maroko
+Countries[MC]=Monako
+Countries[MD]=Moldavija, Republika
+Countries[ME]=Crna Gora
+Countries[MF]=Sveti Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Maršalovi Otoci
+Countries[MK]=Makedonija
+Countries[ML]=Mali
+Countries[MM]=Mijanmar
+Countries[MN]=Mongolija
+Countries[MO]=Makao
+Countries[MP]=Sjeverni Marijanski Otoci
+Countries[MQ]=Martinik
+Countries[MR]=Mauritanija
+Countries[MS]=Montserat
+Countries[MT]=Malta
+Countries[MU]=Mauricijus
+Countries[MV]=Maldivi
+Countries[MW]=Malavi
+Countries[MX]=Meksiko
+Countries[MY]=Malezija
+Countries[MZ]=Mozambik
+Countries[NA]=Namibija
+Countries[NC]=Nova Kaledonija
+Countries[NE]=Niger
+Countries[NF]=Otok Norfolk
+Countries[NG]=Nigerija
+Countries[NI]=Nikaragva
+Countries[NL]=Nizozemska
+Countries[NO]=Norveška
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Novi Zeland
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Francuska Polinezija
+Countries[PG]=Papua Nova Gvineja
+Countries[PH]=Filipini
+Countries[PK]=Pakistan
+Countries[PL]=Poljska
+Countries[PM]=Sveti Petar i Miguel
+Countries[PN]=Pitcairn
+Countries[PR]=Portoriko
+Countries[PS]=Palestinsko Područje
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paragvaj
+Countries[QA]=Katar
+Countries[RE]=Reunion
+Countries[RO]=Rumunjska
+Countries[RS]=Srbija
+Countries[RU]=Rusija
+Countries[RW]=Ruanda
+Countries[SA]=Saudijska Arabija
+Countries[SB]=Salamunovi Otoci
+Countries[SC]=Sejšeli
+Countries[SD]=Sudan
+Countries[SE]=Švedska
+Countries[SG]=Singapur
+Countries[SH]=Sveta Helena
+Countries[SI]=Slovenija
+Countries[SJ]=Svalbard i Jan Mayen
+Countries[SK]=Slovačka
+Countries[SL]=Sijera Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalija
+Countries[SR]=Surinam
+Countries[SS]=South Sudan
+Countries[ST]=São Tomé and Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Sirija
+Countries[SZ]=Svaziland
+Countries[TC]=Turkski i Kaikos Otoci
+Countries[TD]=Čad
+Countries[TF]=Francuski Južni Teritoriji
+Countries[TG]=Togo
+Countries[TH]=Tajland
+Countries[TJ]=Tadžikistan
+Countries[TK]=Tokelau
+Countries[TL]=Istočni Timor
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunis
+Countries[TO]=Tonga
+Countries[TR]=Turska
+Countries[TT]=Trinidad i Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Tajvan
+Countries[TZ]=Tanzanija
+Countries[UA]=Ukrajina
+Countries[UG]=Uganda
+Countries[UM]=Ujedinjene Države Manjih Pacifičkih Otoka
+Countries[US]=Amerika
+Countries[UY]=Urugvaj
+Countries[UZ]=Uzbekistan
+Countries[VA]=Grad Vatikan
+Countries[VC]=Sv. Vincent i Grenadini
+Countries[VE]=Venezuela
+Countries[VG]=Britanski Djevičanski Otoci
+Countries[VI]=Američki Djevičanski Otoci
+Countries[VN]=Vijetnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis i Futuna
+Countries[WS]=Samoa
+Countries[XK]=Republic of Kosovo
+Countries[YE]=Jemen
+Countries[YT]=Majote
+Countries[ZA]=Južna Afrika
+Countries[ZM]=Zambija
+Countries[ZW]=Zimbabve
