--- a/share/locale/cze-CZ.ini
+++ b/share/locale/cze-CZ.ini
@@ -88,3 +88,259 @@ thu=čtvrtek
 fri=pátek
 sat=sobota
 sun=neděle
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=cs
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Spojené arabské emiráty
+Countries[AF]=Afghánistán
+Countries[AG]=Antigua a Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albánie
+Countries[AM]=Arménie
+Countries[AO]=Angola
+Countries[AQ]=Antarktida
+Countries[AR]=Argentina
+Countries[AS]=Americká Samoa
+Countries[AT]=Rakousko
+Countries[AU]=Austrálie
+Countries[AW]=Aruba
+Countries[AX]=Alandy
+Countries[AZ]=Ázerbájdžán
+Countries[BA]=Bosna a Hercegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladéš
+Countries[BE]=Belgie
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulharsko
+Countries[BH]=Bahrajn
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Svatý Bartoloměj
+Countries[BM]=Bermudy
+Countries[BN]=Brunej Darussalam
+Countries[BO]=Bolívie
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brazílie
+Countries[BS]=Bahamy
+Countries[BT]=Bhútán
+Countries[BV]=Bouvetův ostrov
+Countries[BW]=Botswana
+Countries[BY]=Bělorusko
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Kokosové ostrovy
+Countries[CD]=Kongo - DRK
+Countries[CF]=Středoafrická republika
+Countries[CG]=Kongo [Republika]
+Countries[CH]=Švýcarsko
+Countries[CI]=Pobřeží slonoviny
+Countries[CK]=Cookovy ostrovy
+Countries[CL]=Chile
+Countries[CM]=Kamerun
+Countries[CN]=Čína
+Countries[CO]=Kolumbie
+Countries[CR]=Kostarika
+Countries[CU]=Kuba
+Countries[CV]=Kapverdy
+Countries[CW]=Land Curaçao
+Countries[CX]=Vánoční ostrovy
+Countries[CY]=Kypr
+Countries[CZ]=Česko
+Countries[DE]=Německo
+Countries[DJ]=Džibuti
+Countries[DK]=Dánsko
+Countries[DM]=Dominika
+Countries[DO]=Dominikánská republika
+Countries[DZ]=Alžírsko
+Countries[EC]=Ekvádor
+Countries[EE]=Estonsko
+Countries[EG]=Egypt
+Countries[EH]=Západní Sahara
+Countries[ER]=Eritrea
+Countries[ES]=Španělsko
+Countries[ET]=Etiopie
+Countries[FI]=Finsko
+Countries[FJ]=Fidži
+Countries[FK]=Falklandské ostrovy
+Countries[FM]=Mikronézie
+Countries[FO]=Faerské ostrovy
+Countries[FR]=Francie
+Countries[GA]=Gabon
+Countries[GB]=Velká Británie
+Countries[GD]=Grenada
+Countries[GE]=Gruzie
+Countries[GF]=Francouzská Guyana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grónsko
+Countries[GM]=Gambie
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Rovníková Guinea
+Countries[GR]=Řecko
+Countries[GS]=Jižní Georgie a Jižní Sandwichovy ostrovy
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hongkong
+Countries[HM]=Heardův ostrov a McDonaldovy ostrovy
+Countries[HN]=Honduras
+Countries[HR]=Chorvatsko
+Countries[HT]=Haiti
+Countries[HU]=Maďarsko
+Countries[ID]=Indonésie
+Countries[IE]=Irsko
+Countries[IL]=Izrael
+Countries[IM]=Ostrov Man
+Countries[IN]=Indie
+Countries[IO]=Britské indickooceánské území
+Countries[IQ]=Irák
+Countries[IR]=Írán
+Countries[IS]=Island
+Countries[IT]=Itálie
+Countries[JE]=Jersey
+Countries[JM]=Jamajka
+Countries[JO]=Jordánsko
+Countries[JP]=Japonsko
+Countries[KE]=Keňa
+Countries[KG]=Kyrgyzstán
+Countries[KH]=Kambodža
+Countries[KI]=Karibati
+Countries[KM]=Komory
+Countries[KN]=Sv. Kitts a Nevis
+Countries[KP]=Severní Korea
+Countries[KR]=Jižní Korea
+Countries[KW]=Kuvajt
+Countries[KY]=Kajmanské ostrovy
+Countries[KZ]=Kazachstán
+Countries[LA]=Lidově demokratická republika Laos
+Countries[LB]=Libanon
+Countries[LC]=Svatá Lucie
+Countries[LI]=Lichtenštejnsko
+Countries[LK]=Srí Lanka
+Countries[LR]=Libérie
+Countries[LS]=Lesotho
+Countries[LT]=Lotyšsko
+Countries[LU]=Lucembursko
+Countries[LV]=Lotyšsko
+Countries[LY]=Libye
+Countries[MA]=Maroko
+Countries[MC]=Monako
+Countries[MD]=Moldavská republika
+Countries[ME]=Černá Hora
+Countries[MF]=Svatý Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Marshallovy ostrovy
+Countries[MK]=Makedonie
+Countries[ML]=Mali
+Countries[MM]=Myanmar (Burma)
+Countries[MN]=Mongolsko
+Countries[MO]=Macao
+Countries[MP]=Severní Mariany
+Countries[MQ]=Martinik
+Countries[MR]=Mauretánie
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauricius
+Countries[MV]=Maladivy
+Countries[MW]=Malawi
+Countries[MX]=Mexiko
+Countries[MY]=Malajsie
+Countries[MZ]=Mozambik
+Countries[NA]=Namibie
+Countries[NC]=Nová Kaledonie
+Countries[NE]=Niger
+Countries[NF]=Norfolk
+Countries[NG]=Nigérie
+Countries[NI]=Nikaragua
+Countries[NL]=Nizozemsko
+Countries[NO]=Norsko
+Countries[NP]=Nepál
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Nový Zéland
+Countries[OM]=Omán
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Francouzská Polynésie
+Countries[PG]=Papua Nová Guinea
+Countries[PH]=Filipíny
+Countries[PK]=Pákistán
+Countries[PL]=Polsko
+Countries[PM]=Svatý Pierre a Miquelon
+Countries[PN]=Pitcairnovy ostrovy
+Countries[PR]=Portoriko
+Countries[PS]=Palestinská území
+Countries[PT]=Portugalsko
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Katar
+Countries[RE]=Réunion
+Countries[RO]=Rumunsko
+Countries[RS]=Srbsko
+Countries[RU]=Rusko
+Countries[RW]=Rwanda
+Countries[SA]=Saudská Arábie
+Countries[SB]=Šalamounovy ostrovy
+Countries[SC]=Seychely
+Countries[SD]=Súdán
+Countries[SE]=Švédsko
+Countries[SG]=Singapur
+Countries[SH]=Svatá Helena
+Countries[SI]=Slovinsko
+Countries[SJ]=Špicberky a Jan Mayen
+Countries[SK]=Slovensko
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somálsko
+Countries[SR]=Surinam
+Countries[SS]=South Sudan
+Countries[ST]=Svatý Tomáš
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Sýrie
+Countries[SZ]=Swazijsko
+Countries[TC]=Ostrovy Turks a Caicos
+Countries[TD]=Čad
+Countries[TF]=Francouzská jižní teritoria
+Countries[TG]=Togo
+Countries[TH]=Thajsko
+Countries[TJ]=Tádžikistán
+Countries[TK]=Tokelau
+Countries[TL]=Východní Timor
+Countries[TM]=Turkmenistán
+Countries[TN]=Tunisko
+Countries[TO]=Tonga
+Countries[TR]=Turecko
+Countries[TT]=Trinidad a Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Tajwan
+Countries[TZ]=Tanzánie
+Countries[UA]=Ukrajina
+Countries[UG]=Uganda
+Countries[UM]=Menší odlehlé ostrovy USA
+Countries[US]=Spojené státy americké
+Countries[UY]=Uruguay
+Countries[UZ]=Uzbekistán
+Countries[VA]=Vatikán
+Countries[VC]=Sv. Vincent a Grenadiny
+Countries[VE]=Venezuela
+Countries[VG]=Britské Panenské ostrovy
+Countries[VI]=Americké Panenské ostrovy
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis a Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosovo
+Countries[YE]=Jemen
+Countries[YT]=Mayotte
+Countries[ZA]=Jižní Afrika
+Countries[ZM]=Zambie
+Countries[ZW]=Zimbabwe
