--- a/share/locale/dut-NL.ini
+++ b/share/locale/dut-NL.ini
@@ -89,3 +89,259 @@ thu=donderdag
 fri=vrijdag
 sat=zaterdag
 sun=zondag
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=nl
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Verenigde Arabische Emiraten
+Countries[AF]=Afghanistan
+Countries[AG]=Antigua en Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albanië
+Countries[AM]=Armenië
+Countries[AO]=Angola
+Countries[AQ]=Antarctica
+Countries[AR]=Argentinië
+Countries[AS]=Amerikaans Samoa
+Countries[AT]=Oostenrijk
+Countries[AU]=Australië
+Countries[AW]=Aruba
+Countries[AX]=Ålandeilanden
+Countries[AZ]=Azerbeidzjan
+Countries[BA]=Bosnië-Herzegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesh
+Countries[BE]=België
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgarije
+Countries[BH]=Bahrein
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint Barthélemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei Darussalam
+Countries[BO]=Bolivia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brazilië
+Countries[BS]=Bahama’s
+Countries[BT]=Bhutan
+Countries[BV]=Bouveteiland
+Countries[BW]=Botswana
+Countries[BY]=Wit-Rusland
+Countries[BZ]=Belize
+Countries[CA]=Canada
+Countries[CC]=Cocoseilanden
+Countries[CD]=Congo [DRC]
+Countries[CF]=Centraal-Afrikaanse Republiek
+Countries[CG]=Congo [Republiek]
+Countries[CH]=Zwitserland
+Countries[CI]=Ivoorkust
+Countries[CK]=Cookeilanden
+Countries[CL]=Chili
+Countries[CM]=Kameroen
+Countries[CN]=China
+Countries[CO]=Colombia
+Countries[CR]=Costa Rica
+Countries[CU]=Cuba
+Countries[CV]=Kaapverdië
+Countries[CW]=Land Curaçao
+Countries[CX]=Christmaseiland
+Countries[CY]=Cyprus
+Countries[CZ]=Tsjechië
+Countries[DE]=Duitsland
+Countries[DJ]=Djibouti
+Countries[DK]=Denemarken
+Countries[DM]=Dominica
+Countries[DO]=Dominicaanse Republiek
+Countries[DZ]=Algerije
+Countries[EC]=Ecuador
+Countries[EE]=Estland
+Countries[EG]=Egypte
+Countries[EH]=Westelijke Sahara
+Countries[ER]=Eritrea
+Countries[ES]=Spanje
+Countries[ET]=Ethiopië
+Countries[FI]=Finland
+Countries[FJ]=Fiji
+Countries[FK]=Falklandeilanden
+Countries[FM]=Micronesië
+Countries[FO]=Faeröer
+Countries[FR]=Frankrijk
+Countries[GA]=Gabon
+Countries[GB]=Verenigd Koninkrijk
+Countries[GD]=Grenada
+Countries[GE]=Georgië
+Countries[GF]=Frans-Guyana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Groenland
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Equatoriaal-Guinea
+Countries[GR]=Griekenland
+Countries[GS]=Zuid-Georgië en Zuidelijke Sandwicheilanden
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinee-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hongkong
+Countries[HM]=Heard- en McDonaldeilanden
+Countries[HN]=Honduras
+Countries[HR]=Kroatië
+Countries[HT]=Haïti
+Countries[HU]=Hongarije
+Countries[ID]=Indonesië
+Countries[IE]=Ierland
+Countries[IL]=Israël
+Countries[IM]=Isle of Man
+Countries[IN]=India
+Countries[IO]=Britse Gebieden in de Indische Oceaan
+Countries[IQ]=Irak
+Countries[IR]=Iran (Islamitische Republiek)
+Countries[IS]=IJsland
+Countries[IT]=Italië
+Countries[JE]=Jersey
+Countries[JM]=Jamaica
+Countries[JO]=Jordanië
+Countries[JP]=Japan
+Countries[KE]=Kenia
+Countries[KG]=Kirgizstan
+Countries[KH]=Cambodja
+Countries[KI]=Kiribati
+Countries[KM]=Comoren
+Countries[KN]=St. Kitts en Nevis
+Countries[KP]=Korea, Democratische Volksrepubliek
+Countries[KR]=Korea, Republiek
+Countries[KW]=Koeweit
+Countries[KY]=Caymaneilanden
+Countries[KZ]=Kazachstan
+Countries[LA]=Laos
+Countries[LB]=Libanon
+Countries[LC]=St. Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Litouwen
+Countries[LU]=Luxemburg
+Countries[LV]=Letland
+Countries[LY]=Libische Arabische Republiek
+Countries[MA]=Marokko
+Countries[MC]=Monaco
+Countries[MD]=Republiek Moldavië
+Countries[ME]=Montenegro
+Countries[MF]=Sint-Maarten
+Countries[MG]=Madagaskar
+Countries[MH]=Marshalleilanden
+Countries[MK]=Voormalige Joegoslavische Republiek Macedonië
+Countries[ML]=Mali
+Countries[MM]=Myanmar
+Countries[MN]=Mongolië
+Countries[MO]=Macao
+Countries[MP]=Noordelijke Marianeneilanden
+Countries[MQ]=Martinique
+Countries[MR]=Mauritanië
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Maldiven
+Countries[MW]=Malawi
+Countries[MX]=Mexico
+Countries[MY]=Maleisië
+Countries[MZ]=Mozambique
+Countries[NA]=Namibië
+Countries[NC]=Nieuw-Caledonië
+Countries[NE]=Niger
+Countries[NF]=Norfolkeiland
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Nederland
+Countries[NO]=Noorwegen
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Nieuw-Zeeland
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Frans-Polynesië
+Countries[PG]=Papoea-Nieuw-Guinea
+Countries[PH]=Filipijnen
+Countries[PK]=Pakistan
+Countries[PL]=Polen
+Countries[PM]=Saint Pierre en Miquelon
+Countries[PN]=Pitcairneilanden
+Countries[PR]=Puerto Rico
+Countries[PS]=Palestijnse gebieden
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Réunion
+Countries[RO]=Roemenië
+Countries[RS]=Servië
+Countries[RU]=Rusland
+Countries[RW]=Rwanda
+Countries[SA]=Saudi-Arabië
+Countries[SB]=Salomonseilanden
+Countries[SC]=Seychellen
+Countries[SD]=Soedan
+Countries[SE]=Zweden
+Countries[SG]=Singapore
+Countries[SH]=Sint-Helena
+Countries[SI]=Slovenië
+Countries[SJ]=Svalbard en Jan Mayen
+Countries[SK]=Slowakije (Slowaakse Republiek)
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalië
+Countries[SR]=Republiek Suriname
+Countries[SS]=South Sudan
+Countries[ST]=São Tomé and Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Syrië
+Countries[SZ]=Swaziland
+Countries[TC]=Turks- en Caicoseilanden
+Countries[TD]=Tsjaad
+Countries[TF]=Franse Gebieden in de zuidelijke Indische Oceaan
+Countries[TG]=Togo
+Countries[TH]=Thailand
+Countries[TJ]=Tadzjikistan
+Countries[TK]=Tokelau
+Countries[TL]=Oost-Timor
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunesië
+Countries[TO]=Tonga
+Countries[TR]=Turkije
+Countries[TT]=Trinidad en Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tanzania
+Countries[UA]=Oekraïne
+Countries[UG]=Oeganda
+Countries[UM]=Kleine afgelegen eilanden van de Verenigde Staten
+Countries[US]=Verenigde Staten
+Countries[UY]=Uruguay
+Countries[UZ]=Oezbekistan
+Countries[VA]=Heilige stoel (Vaticaanstad)
+Countries[VC]=St. Vincent en de Grenadines
+Countries[VE]=Venezuela
+Countries[VG]=Britse Maagdeneilanden
+Countries[VI]=Amerikaanse Maagdeneilanden
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis en Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosovo
+Countries[YE]=Jemen
+Countries[YT]=Mayotte
+Countries[ZA]=Zuid-Afrika
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
