--- a/share/locale/ell-GR.ini
+++ b/share/locale/ell-GR.ini
@@ -102,3 +102,259 @@ thu=Πέμπτη
 fri=Παρασκευή
 sat=Σάββατο
 sun=Κυριακή
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=el
+[CountryNames]
+
+Countries[AD]=Ανδόρα
+Countries[AE]=Ηνωμένα Αραβικά Εμιράτα
+Countries[AF]=Αφγανιστάν
+Countries[AG]=Αντίγκουα και Μπαρμπούντα
+Countries[AI]=Ανγκουίλα
+Countries[AL]=Αλβανία
+Countries[AM]=Αρμενία
+Countries[AO]=Ανγκόλα
+Countries[AQ]=Ανταρκτική
+Countries[AR]=Αργεντινή
+Countries[AS]=Αμερικανική Σαμόα
+Countries[AT]=Αυστρία
+Countries[AU]=Αυστραλία
+Countries[AW]=Αρούμπα
+Countries[AX]=Νήσοι Άλαντ
+Countries[AZ]=Αζερμπαϊτζάν
+Countries[BA]=Βοσνία - Ερζεγοβίνη
+Countries[BB]=Μπαρμπάντος
+Countries[BD]=Μπανγκλαντές
+Countries[BE]=Βέλγιο
+Countries[BF]=Μπουρκίνα Φάσο
+Countries[BG]=Βουλγαρία
+Countries[BH]=Μπαχρέιν
+Countries[BI]=Μπουρούντι
+Countries[BJ]=Μπένιν
+Countries[BL]=Άγιος Βαρθολομαίος
+Countries[BM]=Βερμούδες
+Countries[BN]=Μπρουνέι Νταρουσαλάμ
+Countries[BO]=Βολιβία
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Βραζιλία
+Countries[BS]=Μπαχάμες
+Countries[BT]=Μπουτάν
+Countries[BV]=Νήσος Μπουβέ
+Countries[BW]=Μποτσουάνα
+Countries[BY]=Λευκορωσία
+Countries[BZ]=Μπελίσε
+Countries[CA]=Καναδάς
+Countries[CC]=Νήσοι Κόκος
+Countries[CD]=Κονγκό, Δημοκρατία του
+Countries[CF]=Κεντρική Αφρικανική Δημοκρατία
+Countries[CG]=Κονγκό - Μπραζαβίλ
+Countries[CH]=Ελβετία
+Countries[CI]=Ακτή Ελεφαντόδοντος
+Countries[CK]=Νήσοι Κουκ
+Countries[CL]=Χιλή
+Countries[CM]=Καμερούν
+Countries[CN]=Κίνα
+Countries[CO]=Κολομβία
+Countries[CR]=Κόστα Ρίκα
+Countries[CU]=Κούβα
+Countries[CV]=Πράσινο Ακρωτήριο
+Countries[CW]=Land Curaçao
+Countries[CX]=Νήσος Χριστουγέννων
+Countries[CY]=Κύπρος
+Countries[CZ]=Τσεχία
+Countries[DE]=Γερμανία
+Countries[DJ]=Τζιμπουτί
+Countries[DK]=Δανία
+Countries[DM]=Ντομίνικα
+Countries[DO]=Δομινικανή Δημοκρατία
+Countries[DZ]=Αλγερία
+Countries[EC]=Εκουαδόρ
+Countries[EE]=Εσθονία
+Countries[EG]=Αίγυπτος
+Countries[EH]=Δυτική Σαχάρα
+Countries[ER]=Ερυθραία
+Countries[ES]=Ισπανία
+Countries[ET]=Αιθιοπία
+Countries[FI]=Φινλανδία
+Countries[FJ]=Φίτζι
+Countries[FK]=Νήσοι Φώκλαντ
+Countries[FM]=Μικρονησία
+Countries[FO]=Νήσοι Φερόε
+Countries[FR]=Γαλλία
+Countries[GA]=Γκαμπόν
+Countries[GB]=Ηνωμένο Βασίλειο
+Countries[GD]=Γρενάδα
+Countries[GE]=Γεωργία
+Countries[GF]=Γαλλική Γουιάνα
+Countries[GG]=Γκερνσέι
+Countries[GH]=Γκάνα
+Countries[GI]=Γιβραλτάρ
+Countries[GL]=Γροιλανδία
+Countries[GM]=Γκάμπια
+Countries[GN]=Γουινέα
+Countries[GP]=Γουαδελούπη
+Countries[GQ]=Ισημερινή Γουινέα
+Countries[GR]=Ελλάδα
+Countries[GS]=Νότια Γεωργία και Νότιες Νήσοι Σάντουιτς
+Countries[GT]=Γουατεμάλα
+Countries[GU]=Γκουάμ
+Countries[GW]=Γουινέα-Μπισάου
+Countries[GY]=Γουιάνα
+Countries[HK]=Χονγκ Κονγκ
+Countries[HM]=Νήσοι Χερντ και Μακντόναλντ
+Countries[HN]=Ονδούρα
+Countries[HR]=Κροατία
+Countries[HT]=Αϊτή
+Countries[HU]=Ουγγαρία
+Countries[ID]=Ινδονησία
+Countries[IE]=Ιρλανδία
+Countries[IL]=Ισραήλ
+Countries[IM]=Νήσος Μαν
+Countries[IN]=Ινδία
+Countries[IO]=Βρετανικά Εδάφη Ινδικού Ωκεανού
+Countries[IQ]=Ιράκ
+Countries[IR]=Ιράν, Ισλαμική Δημοκρατία του
+Countries[IS]=Ισλανδία
+Countries[IT]=Ιταλία
+Countries[JE]=Υερσέη
+Countries[JM]=Τζαμάικα
+Countries[JO]=Ιορδανία
+Countries[JP]=Ιαπωνία
+Countries[KE]=Κένυα
+Countries[KG]=Κιργιστάν
+Countries[KH]=Καμπότζη
+Countries[KI]=Κιριμπάτι
+Countries[KM]=Κομόρος
+Countries[KN]=Άγιος Κιτς και Νέβις
+Countries[KP]=Κορέα, Βόρεια
+Countries[KR]=Κορέα, Νότια
+Countries[KW]=Κουβέιτ
+Countries[KY]=Νήσοι Κέιμαν
+Countries[KZ]=Καζακστάν
+Countries[LA]=Λατινική Αμερική
+Countries[LB]=Λίβανος
+Countries[LC]=Αγία Λουκία
+Countries[LI]=Λιχτενστάιν
+Countries[LK]=Σρι Λάνκα
+Countries[LR]=Λιβερία
+Countries[LS]=Λεσότο
+Countries[LT]=Λιθουανία
+Countries[LU]=Λουξεμβούργο
+Countries[LV]=Λετονία
+Countries[LY]=Λιβυκή Αραβική Τζαμαχιρία
+Countries[MA]=Μαρόκο
+Countries[MC]=Μονακό
+Countries[MD]=Μολδαβία, Δημοκρατία της
+Countries[ME]=Μαυροβούνιο
+Countries[MF]=Άγιος Μαρτίνος
+Countries[MG]=Μαδαγασκάρη
+Countries[MH]=Νήσοι Μάρσαλ
+Countries[MK]=Π.Γ.Δ. Μακεδονίας
+Countries[ML]=Μάλι
+Countries[MM]=Μιανμάρ
+Countries[MN]=Μογγολία
+Countries[MO]=Μακάο
+Countries[MP]=Βόρειες Μαριάνες Νήσοι
+Countries[MQ]=Μαρτινίκα
+Countries[MR]=Μαυριτανία
+Countries[MS]=Μονσεράτ
+Countries[MT]=Μάλτα
+Countries[MU]=Μαυρίκιος
+Countries[MV]=Μαλδίβες
+Countries[MW]=Μαλάουι
+Countries[MX]=Μεξικό
+Countries[MY]=Μαλαισία
+Countries[MZ]=Μοζαμβίκη
+Countries[NA]=Ναμίμπια
+Countries[NC]=Νέα Καληδονία
+Countries[NE]=Νίγηρ
+Countries[NF]=Νήσος Νόρφολκ
+Countries[NG]=Νιγηρία
+Countries[NI]=Νικαράγουα
+Countries[NL]=Ολλανδία
+Countries[NO]=Νορβηγία
+Countries[NP]=Νεπάλ
+Countries[NR]=Ναούρου
+Countries[NU]=Νιούε
+Countries[NZ]=Νέα Ζηλανδία
+Countries[OM]=Ομάν
+Countries[PA]=Παναμάς
+Countries[PE]=Περού
+Countries[PF]=Γαλλική Πολυνησία
+Countries[PG]=Παπούα - Νέα Γουινέα
+Countries[PH]=Φιλιππίνες
+Countries[PK]=Πακιστάν
+Countries[PL]=Πολωνία
+Countries[PM]=Σαιντ Πιέρ και Μικελόν
+Countries[PN]=Πίτκερν
+Countries[PR]=Πουέρτο Ρίκο
+Countries[PS]=Παλαιστινιακά Εδάφη
+Countries[PT]=Πορτογαλία
+Countries[PW]=Παλάου
+Countries[PY]=Παραγουάη
+Countries[QA]=Κατάρ
+Countries[RE]=Ρεϋνιόν
+Countries[RO]=Ρουμανία
+Countries[RS]=Σερβία
+Countries[RU]=Ρωσία
+Countries[RW]=Ρουάντα
+Countries[SA]=Σαουδική Αραβία
+Countries[SB]=Νησιά Σολομώντα
+Countries[SC]=Σεϋχέλλες
+Countries[SD]=Σουδάν
+Countries[SE]=Σουηδία
+Countries[SG]=Σιγκαπούρη
+Countries[SH]=Αγία Ελένη
+Countries[SI]=Σλοβενία
+Countries[SJ]=Σβάλμπαρντ και Νήσοι Γιάν Μέϋεν
+Countries[SK]=Σλοβακία
+Countries[SL]=Σιέρα Λεόνε
+Countries[SM]=Άγιος Μαρίνος
+Countries[SN]=Σενεγάλη
+Countries[SO]=Σομαλία
+Countries[SR]=Σουρινάμ
+Countries[SS]=South Sudan
+Countries[ST]=Άγιος Θωμάς και Πρίνσιπε
+Countries[SV]=Ελ Σαλβαδόρ
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Συρία, Αραβική Δημοκρατία της
+Countries[SZ]=Ζουαζηλάνδη
+Countries[TC]=Νήσοι Τερκς και Κάικος
+Countries[TD]=Τσαντ
+Countries[TF]=Γαλλικά Νότια Εδάφη
+Countries[TG]=Τόγκο
+Countries[TH]=Ταϊλάνδη
+Countries[TJ]=Τατζικιστάν
+Countries[TK]=Τοκελάου
+Countries[TL]=Ανατολικό Τιμόρ
+Countries[TM]=Τουρκμενιστάν
+Countries[TN]=Τυνησία
+Countries[TO]=Τόνγκα
+Countries[TR]=Τουρκία
+Countries[TT]=Τρινιδάδ και Τομπάγκο
+Countries[TV]=Τουβαλού
+Countries[TW]=Ταϊβάν
+Countries[TZ]=Τανζανία
+Countries[UA]=Ουκρανία
+Countries[UG]=Ουγκάντα
+Countries[UM]=Απομακρυσμένες Νησίδες Η.Π.Α.
+Countries[US]=Ηνωμένες Πολιτείες της Αμερικής
+Countries[UY]=Ουρουγουάη
+Countries[UZ]=Ουζμπεκιστάν
+Countries[VA]=Βατικανό
+Countries[VC]=Άγιος Βικέντιος και Γρεναδίνες
+Countries[VE]=Βενεζουέλα
+Countries[VG]=Βρετανικές Παρθένοι Νήσοι
+Countries[VI]=Αμερικανικές Παρθένοι Νήσοι
+Countries[VN]=Βιετνάμ
+Countries[VU]=Βανουάτου
+Countries[WF]=Νήσοι Ουαλλίς και Φουτουνά
+Countries[WS]=Σαμόα
+Countries[XK]=Republic of Kosovo
+Countries[YE]=Υεμένη
+Countries[YT]=Μαγιότ
+Countries[ZA]=Νότια Αφρική
+Countries[ZM]=Ζάμπια
+Countries[ZW]=Ζιμπάμπουε
