--- a/share/locale/epo-EO.ini
+++ b/share/locale/epo-EO.ini
@@ -87,3 +87,259 @@ thu=ĵaŭdo
 fri=vendredo
 sat=sabato
 sun=dimanĉo
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=eo
+[CountryNames]
+
+Countries[AD]=Andoro
+Countries[AE]=Unuiĝintaj Arabaj Emirlandos
+Countries[AF]=Afganujo
+Countries[AG]=Antigvo-Barbudo
+Countries[AI]=Angvilo
+Countries[AL]=Albanujo
+Countries[AM]=Armenujo
+Countries[AO]=Angolo
+Countries[AQ]=Antarkto
+Countries[AR]=Argentino
+Countries[AS]=American Samoa, Territory of
+Countries[AT]=Aŭstrujo
+Countries[AU]=Aŭstralio
+Countries[AW]=Arubo
+Countries[AX]=Ahvenanmaa
+Countries[AZ]=Azerbajĝano
+Countries[BA]=Bosnio-Hercegovino
+Countries[BB]=Barbado
+Countries[BD]=Bangladeŝo
+Countries[BE]=Belgujo
+Countries[BF]=Burkino
+Countries[BG]=Bulgarujo
+Countries[BH]=Barejno
+Countries[BI]=Burundo
+Countries[BJ]=Benino
+Countries[BL]=Saint-Barthélemy
+Countries[BM]=Bermudoj
+Countries[BN]=Brunejo
+Countries[BO]=Bolivio
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brazilo
+Countries[BS]=Bahamoj
+Countries[BT]=Butano
+Countries[BV]=Bouvet Island
+Countries[BW]=Bocvano
+Countries[BY]=Belorusujo
+Countries[BZ]=Belizo
+Countries[CA]=Kanado
+Countries[CC]=Territory of Cocos (Keeling) Islands
+Countries[CD]=Kongo Kinŝasa
+Countries[CF]=Centr-Afrika Respubliko
+Countries[CG]=Kongolo
+Countries[CH]=Svisujo
+Countries[CI]=Ebur-Bordo
+Countries[CK]=Kukinsuloj
+Countries[CL]=Ĉilio
+Countries[CM]=Kameruno
+Countries[CN]=Ĉinujo
+Countries[CO]=Kolombio
+Countries[CR]=Kostariko
+Countries[CU]=Kubo
+Countries[CV]=Kabo-Verdo
+Countries[CW]=Land Curaçao
+Countries[CX]=Territory of Christmas Island
+Countries[CY]=Kipro
+Countries[CZ]=Ĉeĥujo
+Countries[DE]=Germanujo
+Countries[DJ]=Ĝibutio
+Countries[DK]=Danujo
+Countries[DM]=Dominiko
+Countries[DO]=Domingo
+Countries[DZ]=Alĝerio
+Countries[EC]=Ekvadoro
+Countries[EE]=Estonujo
+Countries[EG]=Egipto
+Countries[EH]=Okcidenta Saharo
+Countries[ER]=Eritreo
+Countries[ES]=Hispanujo
+Countries[ET]=Etiopujo
+Countries[FI]=Finnlando
+Countries[FJ]=Fiĝoj
+Countries[FK]=Falkland Islands (Islas Malvinas)
+Countries[FM]=Mikronezio
+Countries[FO]=Ferooj
+Countries[FR]=Francujo
+Countries[GA]=Gabono
+Countries[GB]=Unuiĝinta Reĝlando
+Countries[GD]=Grenado
+Countries[GE]=Kartvelujo
+Countries[GF]=Franca Gviano
+Countries[GG]=Bailiwick of Guernsey
+Countries[GH]=Ganao
+Countries[GI]=Ĝibraltaro
+Countries[GL]=Gronlando
+Countries[GM]=Gambio
+Countries[GN]=Gvineo
+Countries[GP]=Gvadelupo
+Countries[GQ]=Ekvatora Gvineo
+Countries[GR]=Grekujo
+Countries[GS]=Sud-Georgio kaj Sud-Sandviĉinsuloj
+Countries[GT]=Gvatemalo
+Countries[GU]=Gvamo
+Countries[GW]=Gvineo-Bisaŭo
+Countries[GY]=Gujano
+Countries[HK]=Hong Kong Special Administrative Region
+Countries[HM]=Herda kaj Makdonaldaj Insuloj
+Countries[HN]=Honduro
+Countries[HR]=Kroatujo
+Countries[HT]=Haitio
+Countries[HU]=Hungarujo
+Countries[ID]=Indonezio
+Countries[IE]=Irlando
+Countries[IL]=Israelo
+Countries[IM]=Manksinsulo
+Countries[IN]=Hindujo
+Countries[IO]=Brita Hindoceana Teritorio
+Countries[IQ]=Irako
+Countries[IR]=Irano
+Countries[IS]=Islando
+Countries[IT]=Italujo
+Countries[JE]=Bailiwick of Jersey
+Countries[JM]=Jamajko
+Countries[JO]=Jordanio
+Countries[JP]=Japanujo
+Countries[KE]=Kenjo
+Countries[KG]=Kirgizistano
+Countries[KH]=Kamboĝo
+Countries[KI]=Kiribato
+Countries[KM]=Komoroj
+Countries[KN]=Sent-Kristofo kaj Neviso
+Countries[KP]=Nord-Koreo
+Countries[KR]=Sud-Koreo
+Countries[KW]=Kuvajto
+Countries[KY]=Kejmanoj
+Countries[KZ]=Kazaĥstano
+Countries[LA]=Laoso
+Countries[LB]=Libano
+Countries[LC]=Sent-Lucio
+Countries[LI]=Liĥtenŝtejno
+Countries[LK]=Sri-Lanko
+Countries[LR]=Liberio
+Countries[LS]=Lesoto
+Countries[LT]=Litovujo
+Countries[LU]=Luksemburgo
+Countries[LV]=Latvujo
+Countries[LY]=Libio
+Countries[MA]=Maroko
+Countries[MC]=Monako
+Countries[MD]=Moldavujo
+Countries[ME]=Montenegro
+Countries[MF]=Saint-Martin
+Countries[MG]=Madagaskaro
+Countries[MH]=Marŝaloj
+Countries[MK]=Makedonujo
+Countries[ML]=Malio
+Countries[MM]=Mjanmao
+Countries[MN]=Mongolujo
+Countries[MO]=Makao
+Countries[MP]=Nord-Marianoj
+Countries[MQ]=Martiniko
+Countries[MR]=Maŭritanujo
+Countries[MS]=Moncerato
+Countries[MT]=Malto
+Countries[MU]=Maŭricio
+Countries[MV]=Maldivoj
+Countries[MW]=Malavio
+Countries[MX]=Meksiko
+Countries[MY]=Malajzio
+Countries[MZ]=Mozambiko
+Countries[NA]=Namibio
+Countries[NC]=Nov-Kaledonio
+Countries[NE]=Niĝero
+Countries[NF]=Norfolkinsulo
+Countries[NG]=Niĝerio
+Countries[NI]=Nikaragvo
+Countries[NL]=Nederlando
+Countries[NO]=Norvegujo
+Countries[NP]=Nepalo
+Countries[NR]=Nauro
+Countries[NU]=Niuo
+Countries[NZ]=Nov-Zelando
+Countries[OM]=Omano
+Countries[PA]=Panamo
+Countries[PE]=Peruo
+Countries[PF]=Franca Polinezio
+Countries[PG]=Papuo-Nov-Gvineo
+Countries[PH]=Filipinoj
+Countries[PK]=Pakistano
+Countries[PL]=Pollando
+Countries[PM]=Sent-Piero kaj Mikelono
+Countries[PN]=Pitkarna Insulo
+Countries[PR]=Puerto-Riko
+Countries[PS]=Palestine
+Countries[PT]=Portugalujo
+Countries[PW]=Belaŭo
+Countries[PY]=Paragvajo
+Countries[QA]=Kataro
+Countries[RE]=Reunio
+Countries[RO]=Rumanujo
+Countries[RS]=Serbio
+Countries[RU]=Rusujo
+Countries[RW]=Ruando
+Countries[SA]=Saŭda Arabujo
+Countries[SB]=Salomonoj
+Countries[SC]=Sejŝeloj
+Countries[SD]=Sudano
+Countries[SE]=Svedujo
+Countries[SG]=Singapuro
+Countries[SH]=Sent-Heleno
+Countries[SI]=Slovenujo
+Countries[SJ]=Svalbardo kaj Jan-Majen-insulo
+Countries[SK]=Slovakujo
+Countries[SL]=Siera-Leono
+Countries[SM]=San-Marino
+Countries[SN]=Senegalo
+Countries[SO]=Somalujo
+Countries[SR]=Surinamo
+Countries[SS]=South Sudan
+Countries[ST]=Sao-Tomeo kaj Principeo
+Countries[SV]=Salvadoro
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Sirio
+Countries[SZ]=Svazilando
+Countries[TC]=Turks and Caicos Islands
+Countries[TD]=Ĉado
+Countries[TF]=Territory of the French Southern and Antarctic Lands
+Countries[TG]=Togolo
+Countries[TH]=Tajlando
+Countries[TJ]=Taĝikujo
+Countries[TK]=Tokelau
+Countries[TL]=Orienta Timoro
+Countries[TM]=Turkmenujo
+Countries[TN]=Tunizio
+Countries[TO]=Tonga
+Countries[TR]=Turkujo
+Countries[TT]=Trinidado kaj Tobago
+Countries[TV]=Tuvalo
+Countries[TW]=Tajvano
+Countries[TZ]=Tanzanio
+Countries[UA]=Ukrajno
+Countries[UG]=Ugando
+Countries[UM]=Usonaj malgrandaj insuloj
+Countries[US]=Usono
+Countries[UY]=Urugvajo
+Countries[UZ]=Uzbekujo
+Countries[VA]=Vatikano
+Countries[VC]=Sent-Vincento kaj la Grenadinoj
+Countries[VE]=Venezuelo
+Countries[VG]=Britaj Virgulininsuloj
+Countries[VI]=Usonaj Virgulininsuloj
+Countries[VN]=Vjetnamo
+Countries[VU]=Vanuatuo
+Countries[WF]=Valiso kaj Futuno
+Countries[WS]=Samoo
+Countries[XK]=Republic of Kosovo
+Countries[YE]=Jemeno
+Countries[YT]=Majoto
+Countries[ZA]=Sud-Afriko
+Countries[ZM]=Zambio
+Countries[ZW]=Zimbabvo
