--- a/share/locale/esl-MX.ini
+++ b/share/locale/esl-MX.ini
@@ -88,3 +88,259 @@ thu=jueves
 fri=viernes
 sat=sábado
 sun=domingo
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=es
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Emiratos Árabes Unidos
+Countries[AF]=Afganistán
+Countries[AG]=Antigua y Barbuda
+Countries[AI]=Anguila
+Countries[AL]=Albania
+Countries[AM]=Armenia
+Countries[AO]=Angola
+Countries[AQ]=Antártida
+Countries[AR]=Argentina
+Countries[AS]=Samoa Americana
+Countries[AT]=Austria
+Countries[AU]=Australia
+Countries[AW]=Aruba
+Countries[AX]=Islas de Åland
+Countries[AZ]=Azerbaiyán
+Countries[BA]=Bosnia y Herzegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesh
+Countries[BE]=Bélgica
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgaria
+Countries[BH]=Bahréin
+Countries[BI]=Burundi
+Countries[BJ]=Benín
+Countries[BL]=San Bartolomé
+Countries[BM]=Bermudas
+Countries[BN]=Brunéi
+Countries[BO]=Bolivia
+Countries[BQ]=Bonaire
+Countries[BR]=Brasil
+Countries[BS]=Bahamas
+Countries[BT]=Bután
+Countries[BV]=Isla Bouvet
+Countries[BW]=Botsuana
+Countries[BY]=Bielorrusia
+Countries[BZ]=Belice
+Countries[CA]=Canadá
+Countries[CC]=Islas Cocos
+Countries[CD]=Zaire
+Countries[CF]=República Centroafricana
+Countries[CG]=Congo [República]
+Countries[CH]=Suiza
+Countries[CI]=Costa de Marfil
+Countries[CK]=Islas Cook
+Countries[CL]=Chile
+Countries[CM]=Camerún
+Countries[CN]=China
+Countries[CO]=Colombia
+Countries[CR]=Costa Rica
+Countries[CU]=Cuba
+Countries[CV]=Cabo Verde
+Countries[CW]=Curazao
+Countries[CX]=Isla Christmas
+Countries[CY]=Chipre
+Countries[CZ]=Chequia
+Countries[DE]=Alemania
+Countries[DJ]=Yibuti
+Countries[DK]=Dinamarca
+Countries[DM]=Dominica
+Countries[DO]=República Dominicana
+Countries[DZ]=Argelia
+Countries[EC]=Ecuador
+Countries[EE]=Estonia
+Countries[EG]=Egipto
+Countries[EH]=Sáhara Occidental
+Countries[ER]=Eritrea
+Countries[ES]=España
+Countries[ET]=Etiopía
+Countries[FI]=Finlandia
+Countries[FJ]=Fiyi
+Countries[FK]=Islas Malvinas
+Countries[FM]=Micronesia
+Countries[FO]=Islas Feroe
+Countries[FR]=Francia
+Countries[GA]=Gabón
+Countries[GB]=Reino Unido
+Countries[GD]=Granada
+Countries[GE]=Georgia
+Countries[GF]=Guayana Francesa
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Groenlandia
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadalupe
+Countries[GQ]=Guinea Ecuatorial
+Countries[GR]=Grecia
+Countries[GS]=Islas Georgia del Sur y Sandwich del Sur
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissáu
+Countries[GY]=Guyana
+Countries[HK]=Hong Kong
+Countries[HM]=Islas Heard y McDonald
+Countries[HN]=Honduras
+Countries[HR]=Croacia
+Countries[HT]=Haití
+Countries[HU]=Hungría
+Countries[ID]=Indonesia
+Countries[IE]=Irlanda
+Countries[IL]=Israel
+Countries[IM]=Isla de Man
+Countries[IN]=India
+Countries[IO]=Territorio Británico del Océano Índico
+Countries[IQ]=Irak
+Countries[IR]=Irán
+Countries[IS]=Islandia
+Countries[IT]=Italia
+Countries[JE]=Jersey
+Countries[JM]=Jamaica
+Countries[JO]=Jordania
+Countries[JP]=Japón
+Countries[KE]=Kenia
+Countries[KG]=Kirguistán
+Countries[KH]=Camboya
+Countries[KI]=Kiribati
+Countries[KM]=Comoras
+Countries[KN]=San Cristóbal y Nieves
+Countries[KP]=Corea del Norte
+Countries[KR]=Corea del Sur
+Countries[KW]=Kuwait
+Countries[KY]=Islas Caimán
+Countries[KZ]=Kazajstán
+Countries[LA]=Laos
+Countries[LB]=Líbano
+Countries[LC]=Santa Lucía
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Lituania
+Countries[LU]=Luxemburgo
+Countries[LV]=Letonia
+Countries[LY]=Libia
+Countries[MA]=Marruecos
+Countries[MC]=Mónaco
+Countries[MD]=Moldavia
+Countries[ME]=Montenegro
+Countries[MF]=San Martín
+Countries[MG]=Madagascar
+Countries[MH]=Islas Marshall
+Countries[MK]=Macedonia
+Countries[ML]=Mali
+Countries[MM]=Myanmar [Birmania]
+Countries[MN]=Mongolia
+Countries[MO]=Macao
+Countries[MP]=Islas Marianas del Norte
+Countries[MQ]=Martinica
+Countries[MR]=Mauritania
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauricio
+Countries[MV]=Maldivas
+Countries[MW]=Malaui
+Countries[MX]=México
+Countries[MY]=Malasia
+Countries[MZ]=Mozambique
+Countries[NA]=Namibia
+Countries[NC]=Nueva Caledonia
+Countries[NE]=Níger
+Countries[NF]=Isla Norfolk
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Holanda
+Countries[NO]=Noruega
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Isla Niue
+Countries[NZ]=Nueva Zelanda
+Countries[OM]=Omán
+Countries[PA]=Panamá
+Countries[PE]=Perú
+Countries[PF]=Polinesia Francesa
+Countries[PG]=Papúa-Nueva Guinea
+Countries[PH]=Filipinas
+Countries[PK]=Pakistán
+Countries[PL]=Polonia
+Countries[PM]=San Pedro y Miquelón
+Countries[PN]=Islas Pitcairn
+Countries[PR]=Puerto Rico
+Countries[PS]=Territorios Palestinos
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Reunión
+Countries[RO]=Rumanía
+Countries[RS]=Serbia
+Countries[RU]=Rusia
+Countries[RW]=Ruanda
+Countries[SA]=Arabia Saudí
+Countries[SB]=Islas Salomón
+Countries[SC]=Seychelles
+Countries[SD]=Sudán
+Countries[SE]=Suecia
+Countries[SG]=Singapur
+Countries[SH]=Santa Elena
+Countries[SI]=Eslovenia
+Countries[SJ]=Svalbard y Jan Mayen
+Countries[SK]=Eslovaquia
+Countries[SL]=Sierra Leona
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Surinam
+Countries[SS]=Sudán del Sur
+Countries[ST]=Santo Tomé y Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=San Martín
+Countries[SY]=Siria
+Countries[SZ]=Suazilandia
+Countries[TC]=Islas Turcas y Caicos
+Countries[TD]=Chad
+Countries[TF]=Territorios Australes Franceses
+Countries[TG]=Togo
+Countries[TH]=Tailandia
+Countries[TJ]=Tayikistán
+Countries[TK]=Tokelau
+Countries[TL]=Timor Oriental
+Countries[TM]=Turkmenistán
+Countries[TN]=Túnez
+Countries[TO]=Tonga
+Countries[TR]=Turquía
+Countries[TT]=Trinidad y Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwán
+Countries[TZ]=Tanzania
+Countries[UA]=Ucrania
+Countries[UG]=Uganda
+Countries[UM]=Islas menores alejadas de los Estados Unidos
+Countries[US]=Estados Unidos
+Countries[UY]=Uruguay
+Countries[UZ]=Uzbekistán
+Countries[VA]=Ciudad del Vaticano
+Countries[VC]=San Vicente y las Granadinas
+Countries[VE]=Venezuela
+Countries[VG]=Islas Vírgenes
+Countries[VI]=Islas Vírgenes de los Estados Unidos
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis y Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosovo
+Countries[YE]=Yemen
+Countries[YT]=Mayotte
+Countries[ZA]=Sudáfrica
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbawe
