--- a/share/locale/fin-FI.ini
+++ b/share/locale/fin-FI.ini
@@ -103,3 +103,259 @@ thu=Torstai
 fri=Perjantai
 sat=Lauantai
 sun=Sunnuntai
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=fi
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Arabiemiirikunnat
+Countries[AF]=Afganistan
+Countries[AG]=Antigua ja Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albania
+Countries[AM]=Armenia
+Countries[AO]=Angola
+Countries[AQ]=Antarktis
+Countries[AR]=Argentiina
+Countries[AS]=Amerikan Samoa
+Countries[AT]=Itävalta
+Countries[AU]=Australia
+Countries[AW]=Aruba
+Countries[AX]=Ahvenanmaa
+Countries[AZ]=Azerbaidzan
+Countries[BA]=Bosnia-Hertsegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesh
+Countries[BE]=Belgia
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgaria
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint-Barthélemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei
+Countries[BO]=Bolivia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brasilia
+Countries[BS]=Bahama
+Countries[BT]=Bhutan
+Countries[BV]=Bouvet’nsaari
+Countries[BW]=Botswana
+Countries[BY]=Valko-Venäjä
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Kookossaaret
+Countries[CD]=Zaire
+Countries[CF]=Keski-Afrikan tasavalta
+Countries[CG]=Kongo – Brazzaville
+Countries[CH]=Sveitsi
+Countries[CI]=Côte d'Ivoire
+Countries[CK]=Cookinsaaret
+Countries[CL]=Chile
+Countries[CM]=Kamerun
+Countries[CN]=Kiina
+Countries[CO]=Kolumbia
+Countries[CR]=Costa Rica
+Countries[CU]=Kuuba
+Countries[CV]=Kap Verde
+Countries[CW]=Land Curaçao
+Countries[CX]=Joulusaari
+Countries[CY]=Kypros
+Countries[CZ]=Tsekin tasavalta
+Countries[DE]=Saksa
+Countries[DJ]=Djibouti
+Countries[DK]=Tanska
+Countries[DM]=Dominica
+Countries[DO]=Dominikaaninen tasavalta
+Countries[DZ]=Algeria
+Countries[EC]=Ecuador
+Countries[EE]=Viro
+Countries[EG]=Egypti
+Countries[EH]=Länsi-Sahara
+Countries[ER]=Eritrea
+Countries[ES]=Espanja
+Countries[ET]=Etiopia
+Countries[FI]=Suomen Tasavalta
+Countries[FJ]=Fidži
+Countries[FK]=Falklandinsaaret
+Countries[FM]=Mikronesia
+Countries[FO]=Färsaaret
+Countries[FR]=Ranska
+Countries[GA]=Gabon
+Countries[GB]=Britannia
+Countries[GD]=Grenada
+Countries[GE]=Georgia
+Countries[GF]=Ranskan Guayana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grönlanti
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Päiväntasaajan Guinea
+Countries[GR]=Kreikka
+Countries[GS]=Etelä-Georgia ja Eteläiset Sandwichsaaret
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hongkong
+Countries[HM]=Heard- ja McDonaldinsaaret
+Countries[HN]=Honduras
+Countries[HR]=Kroatia
+Countries[HT]=Haiti
+Countries[HU]=Unkari
+Countries[ID]=Indonesia
+Countries[IE]=Irlanti
+Countries[IL]=Israel
+Countries[IM]=Isle of Man
+Countries[IN]=Intia
+Countries[IO]=Brittiläinen Intian valtameren alue
+Countries[IQ]=Irak
+Countries[IR]=Iran
+Countries[IS]=Islanti
+Countries[IT]=Italia
+Countries[JE]=Jersey
+Countries[JM]=Jamaika
+Countries[JO]=Jordania
+Countries[JP]=Japani
+Countries[KE]=Kenia
+Countries[KG]=Kirgiisia
+Countries[KH]=Kambodza
+Countries[KI]=Kiribati
+Countries[KM]=Komorit
+Countries[KN]=Saint Kitts ja Nevis
+Countries[KP]=Pohjois-Korea
+Countries[KR]=Etelä-Korea
+Countries[KW]=Kuwait
+Countries[KY]=Caymansaaret
+Countries[KZ]=Kazakstan
+Countries[LA]=Laos
+Countries[LB]=Libanon
+Countries[LC]=Saint Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Liettua
+Countries[LU]=Luxemburg
+Countries[LV]=Latvia
+Countries[LY]=Libyan Arab Jamahiriya
+Countries[MA]=Marokko
+Countries[MC]=Monaco
+Countries[MD]=Moldova
+Countries[ME]=Montenegro
+Countries[MF]=Saint-Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Marshallinsaaret
+Countries[MK]=Entinen Jugoslavian tasavalta Makedonia
+Countries[ML]=Mali
+Countries[MM]=Myanmar [Burma]
+Countries[MN]=Mongolia
+Countries[MO]=Macao
+Countries[MP]=Pohjois-Mariaanit
+Countries[MQ]=Martinique
+Countries[MR]=Mauritania
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Malediivit
+Countries[MW]=Malawi
+Countries[MX]=Meksiko
+Countries[MY]=Malesia
+Countries[MZ]=Mosambik
+Countries[NA]=Namibia
+Countries[NC]=Uusi-Kaledonia
+Countries[NE]=Niger
+Countries[NF]=Norfolkinsaari
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Alankomaat
+Countries[NO]=Norja
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Uusi-Seelanti
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Ranskan Polynesia
+Countries[PG]=Papua-Uusi-Guinea
+Countries[PH]=Filippiinit
+Countries[PK]=Pakistan
+Countries[PL]=Puola
+Countries[PM]=Saint-Pierre ja Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Puerto Rico
+Countries[PS]=Palestiina
+Countries[PT]=Portugali
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Réunion
+Countries[RO]=Romania
+Countries[RS]=Serbia
+Countries[RU]=Venäjä
+Countries[RW]=Ruanda
+Countries[SA]=Saudi-Arabia
+Countries[SB]=Salomonsaaret
+Countries[SC]=Seychellit
+Countries[SD]=Sudan
+Countries[SE]=Ruotsi
+Countries[SG]=Singapore
+Countries[SH]=Saint Helena
+Countries[SI]=Slovenia
+Countries[SJ]=Huippuvuoret ja Jan Mayen
+Countries[SK]=Slovakia
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Suriname
+Countries[SS]=Etelä-Sudan
+Countries[ST]=Sao Tomé ja Principe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Syyria
+Countries[SZ]=Swazimaa
+Countries[TC]=Turks- ja Caicossaaret
+Countries[TD]=Tsad
+Countries[TF]=Ranskan ulkopuoliset eteläiset alueet
+Countries[TG]=Togo
+Countries[TH]=Thaimaa
+Countries[TJ]=Tadzikistan
+Countries[TK]=Tokelau
+Countries[TL]=Itä-Timor
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunisia
+Countries[TO]=Tonga
+Countries[TR]=Turkki
+Countries[TT]=Trinidad ja Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tansania
+Countries[UA]=Ukraina
+Countries[UG]=Uganda
+Countries[UM]=Yhdysvaltain pienet erillissaaret
+Countries[US]=Yhdysvallat
+Countries[UY]=Uruguay
+Countries[UZ]=Uzbekistan
+Countries[VA]=Pyhä istuin (Vatikaani)
+Countries[VC]=Saint Vincent ja Grenadiinit
+Countries[VE]=Venezuela
+Countries[VG]=Brittiläiset Neitsytsaaret
+Countries[VI]=Yhdysvaltain Neitsytsaaret
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis ja Futuna
+Countries[WS]=Samoa
+Countries[XK]=Republic of Kosovo
+Countries[YE]=Jemen
+Countries[YT]=Mayotte
+Countries[ZA]=Etelä-Afrikka
+Countries[ZM]=Sambia
+Countries[ZW]=Zimbabwe
