--- a/share/locale/ger-DE.ini
+++ b/share/locale/ger-DE.ini
@@ -88,3 +88,259 @@ thu=Donnerstag
 fri=Freitag
 sat=Samstag
 sun=Sonntag
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=de
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Vereinigte Arabische Emirate
+Countries[AF]=Afghanistan
+Countries[AG]=Antigua und Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albanien
+Countries[AM]=Armenien
+Countries[AO]=Angola
+Countries[AQ]=Antarktis
+Countries[AR]=Argentinien
+Countries[AS]=Amerikanisch-Samoa
+Countries[AT]=Österreich
+Countries[AU]=Australien
+Countries[AW]=Aruba
+Countries[AX]=Alandinseln
+Countries[AZ]=Aserbaidschan
+Countries[BA]=Bosnien und Herzegowina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesch
+Countries[BE]=Belgien
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgarien
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=St. Barthélemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei
+Countries[BO]=Bolivien
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brasilien
+Countries[BS]=Bahamas
+Countries[BT]=Bhutan
+Countries[BV]=Bouvetinsel
+Countries[BW]=Botsuana
+Countries[BY]=Belarus
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Kokosinseln
+Countries[CD]=Zaire
+Countries[CF]=Zentralafrikanische Republik
+Countries[CG]=Kongo (Republik Kongo)
+Countries[CH]=Schweiz
+Countries[CI]=Elfenbeinküste
+Countries[CK]=Cookinseln
+Countries[CL]=Chile
+Countries[CM]=Kamerun
+Countries[CN]=China
+Countries[CO]=Kolumbien
+Countries[CR]=Costa Rica
+Countries[CU]=Kuba
+Countries[CV]=Kap Verde
+Countries[CW]=Curaçao
+Countries[CX]=Weihnachtsinsel
+Countries[CY]=Zypern
+Countries[CZ]=Tschechien
+Countries[DE]=Deutschland
+Countries[DJ]=Dschibuti
+Countries[DK]=Dänemark
+Countries[DM]=Dominica
+Countries[DO]=Dominikanische Republik
+Countries[DZ]=Algerien
+Countries[EC]=Ecuador
+Countries[EE]=Estland
+Countries[EG]=Ägypten
+Countries[EH]=Westsahara
+Countries[ER]=Eritrea
+Countries[ES]=Spanien
+Countries[ET]=Äthiopien
+Countries[FI]=Finnland
+Countries[FJ]=Fidschi
+Countries[FK]=Falklandinseln
+Countries[FM]=Mikronesien
+Countries[FO]=Färöer-Inseln
+Countries[FR]=Frankreich
+Countries[GA]=Gabun
+Countries[GB]=Vereinigtes Königreich
+Countries[GD]=Grenada
+Countries[GE]=Georgien
+Countries[GF]=Französisch-Guayana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grönland
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Äquatorialguinea
+Countries[GR]=Griechenland
+Countries[GS]=Südgeorgien und die Südlichen Sandwichinseln
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hongkong
+Countries[HM]=Heard- und McDonald-Inseln
+Countries[HN]=Honduras
+Countries[HR]=Kroatien
+Countries[HT]=Haiti
+Countries[HU]=Ungarn
+Countries[ID]=Indonesien
+Countries[IE]=Irland
+Countries[IL]=Israel
+Countries[IM]=Insel Man
+Countries[IN]=Indien
+Countries[IO]=Britisches Territorium im Indischen Ozean
+Countries[IQ]=Irak
+Countries[IR]=Iran (Islamische Republik)
+Countries[IS]=Island
+Countries[IT]=Italien
+Countries[JE]=Jersey
+Countries[JM]=Jamaika
+Countries[JO]=Jordanien
+Countries[JP]=Japan
+Countries[KE]=Kenia
+Countries[KG]=Kirgistan
+Countries[KH]=Kambodscha
+Countries[KI]=Kiribati
+Countries[KM]=Komoren
+Countries[KN]=Saint Kitts und Nevis
+Countries[KP]=Nordkorea
+Countries[KR]=Südkorea
+Countries[KW]=Kuwait
+Countries[KY]=Kaimaninseln
+Countries[KZ]=Kasachstan
+Countries[LA]=Laos
+Countries[LB]=Libanon
+Countries[LC]=St. Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Litauen
+Countries[LU]=Luxemburg
+Countries[LV]=Lettland
+Countries[LY]=Libysch-Arabische Dschamahirija
+Countries[MA]=Marokko
+Countries[MC]=Monaco
+Countries[MD]=Moldau (Republik Moldau)
+Countries[ME]=Montenegro
+Countries[MF]=St. Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Marshall-Inseln
+Countries[MK]=Ehemalige jugoslawische Republik Mazedonien
+Countries[ML]=Mali
+Countries[MM]=Birma (Myanmar)
+Countries[MN]=Mongolei
+Countries[MO]=Macau
+Countries[MP]=Nördliche Marianen
+Countries[MQ]=Martinique
+Countries[MR]=Mauretanien
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Malediven
+Countries[MW]=Malawi
+Countries[MX]=Mexiko
+Countries[MY]=Malaysien
+Countries[MZ]=Mosambik
+Countries[NA]=Namibia
+Countries[NC]=Neukaledonien
+Countries[NE]=Niger
+Countries[NF]=Norfolkinsel
+Countries[NG]=Nigeria
+Countries[NI]=Nikaragua
+Countries[NL]=Niederlande
+Countries[NO]=Norwegen
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Neuseeland
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Französisch-Polynesien
+Countries[PG]=Papua-Neuguinea
+Countries[PH]=Philippinen
+Countries[PK]=Pakistan
+Countries[PL]=Polen
+Countries[PM]=St. Pierre und Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Puerto Rico
+Countries[PS]=Palästinensische Autonomiegebiete
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Katar
+Countries[RE]=Réunion
+Countries[RO]=Rumänien
+Countries[RS]=Serbien
+Countries[RU]=Russland
+Countries[RW]=Ruanda
+Countries[SA]=Saudi-Arabien
+Countries[SB]=Solomon-Inseln
+Countries[SC]=Seychellen
+Countries[SD]=Sudan
+Countries[SE]=Schweden
+Countries[SG]=Singapur
+Countries[SH]=St. Helena
+Countries[SI]=Slowenien
+Countries[SJ]=Svalbard und Jan Mayen
+Countries[SK]=Slowakei (Slowakische Republik)
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Suriname
+Countries[SS]=Südsudan
+Countries[ST]=Sao Tomé und Principe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Syrien
+Countries[SZ]=Swasiland
+Countries[TC]=Turks- und Caicosinseln
+Countries[TD]=Tschad
+Countries[TF]=Französische Süd- und Antarktisgebiete
+Countries[TG]=Togo
+Countries[TH]=Thailand
+Countries[TJ]=Tadschikistan
+Countries[TK]=Tokelau
+Countries[TL]=Timor-Leste
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunesien
+Countries[TO]=Tonga
+Countries[TR]=Türkei
+Countries[TT]=Trinidad und Tobago
+Countries[TV]=Tuwalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tansania
+Countries[UA]=Ukraine
+Countries[UG]=Uganda
+Countries[UM]=Amerikanisch-Ozeanien
+Countries[US]=USA
+Countries[UY]=Uruguay
+Countries[UZ]=Usbekistan
+Countries[VA]=Staat der Vatikanstadt
+Countries[VC]=St. Vincent und die Grenadinen
+Countries[VE]=Venezuela
+Countries[VG]=Britische Jungferninseln
+Countries[VI]=Amerikanische Jungferninseln
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis und Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosovo
+Countries[YE]=Jemen
+Countries[YT]=Mayotte
+Countries[ZA]=Republik Südafrika
+Countries[ZM]=Sambia
+Countries[ZW]=Simbabwe
