--- a/share/locale/heb-IL.ini
+++ b/share/locale/heb-IL.ini
@@ -91,3 +91,259 @@ wed=×¨×××¢×
 thu=××××©×
 fri=×©××©×
 sat=×©×××
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=he
+[CountryNames]
+
+Countries[AD]=אנדורה
+Countries[AE]=איחוד נסיכויות ערב
+Countries[AF]=אפגניסטאן
+Countries[AG]=אנטיגווה וברבודה
+Countries[AI]=אנגילה
+Countries[AL]=אלבניה
+Countries[AM]=ארמניה
+Countries[AO]=אנגולה
+Countries[AQ]=אנטארקטיקה
+Countries[AR]=ארגנטינה
+Countries[AS]=סמואה האמריקנית
+Countries[AT]=אוסטריה
+Countries[AU]=אוסטרליה
+Countries[AW]=ארובה
+Countries[AX]=איי אלנד
+Countries[AZ]=אזרביג'ן
+Countries[BA]=בוסניה והרצגובינה
+Countries[BB]=ברבדוס
+Countries[BD]=בנגלאדש
+Countries[BE]=בלגיה
+Countries[BF]=בורקינה פאסו
+Countries[BG]=בולגריה
+Countries[BH]=בחרין
+Countries[BI]=בורונדי
+Countries[BJ]=בנין
+Countries[BL]=סנט ברתולומיאו
+Countries[BM]=ברמודה
+Countries[BN]=ברוניי דארוסאלאם
+Countries[BO]=בוליביה
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=ברזיל
+Countries[BS]=איי הבהמה
+Countries[BT]=בהוטאן
+Countries[BV]=איי בובה
+Countries[BW]=בוטסוואנה
+Countries[BY]=בלרוס
+Countries[BZ]=בליז
+Countries[CA]=קנדה
+Countries[CC]=איי קוקוס
+Countries[CD]=קונגו - קינשאסה
+Countries[CF]=הרפובליקה המרכז־אפריקאית
+Countries[CG]=קונגו - ברזאויל
+Countries[CH]=שוויץ
+Countries[CI]=חוף השנהב
+Countries[CK]=איי קוק
+Countries[CL]=צ׳ילה
+Countries[CM]=קאמרון
+Countries[CN]=סין
+Countries[CO]=קולומביה
+Countries[CR]=קוסטה ריקה
+Countries[CU]=קובה
+Countries[CV]=כף ורדה
+Countries[CW]=Land Curaçao
+Countries[CX]=איי כריסטמס
+Countries[CY]=קפריסין
+Countries[CZ]=צ׳כיה
+Countries[DE]=גרמניה
+Countries[DJ]=ג׳יבוטי
+Countries[DK]=דנמרק
+Countries[DM]=דומיניקה
+Countries[DO]=הרפובליקה הדומיניקנית
+Countries[DZ]=אלגריה
+Countries[EC]=אקוודור
+Countries[EE]=אסטוניה
+Countries[EG]=מצרים
+Countries[EH]=סהרה המערבית
+Countries[ER]=אריתרה
+Countries[ES]=ספרד
+Countries[ET]=אתיופיה
+Countries[FI]=פינלנד
+Countries[FJ]=פיג׳י
+Countries[FK]=איי פוקלנד
+Countries[FM]=מיקרונזיה
+Countries[FO]=פרואר, איי
+Countries[FR]=צרפת
+Countries[GA]=גאבון
+Countries[GB]=בריטניה
+Countries[GD]=גרנאדה
+Countries[GE]=ג'ורג'יה
+Countries[GF]=גיאנה הצרפתית
+Countries[GG]=גרנסי
+Countries[GH]=גאנה
+Countries[GI]=גיברלטר
+Countries[GL]=גרינלנד
+Countries[GM]=גאמביה
+Countries[GN]=גיניאה
+Countries[GP]=גוואדלופ
+Countries[GQ]=גיניאה המשוונית
+Countries[GR]=יוון
+Countries[GS]=ג׳ורג׳יה הדרומית ואיי סנדוויץ׳ הדרומיים
+Countries[GT]=גווטמלה
+Countries[GU]=גואם
+Countries[GW]=גינאה־ביסאו
+Countries[GY]=גיאנה
+Countries[HK]=הונג קונג
+Countries[HM]=איי הרד ואיי מקדונלנד
+Countries[HN]=הונדורס
+Countries[HR]=קרואטיה
+Countries[HT]=האיטי
+Countries[HU]=הונגריה
+Countries[ID]=אינדונזיה
+Countries[IE]=אירלנד
+Countries[IL]=ישראל
+Countries[IM]=האי מן
+Countries[IN]=הודו
+Countries[IO]=טריטוריה בריטית באוקיאנוס ההודי
+Countries[IQ]=עירק
+Countries[IR]=איראן
+Countries[IS]=איסלנד
+Countries[IT]=איטליה
+Countries[JE]=ג׳רסי
+Countries[JM]=ג׳מייקה
+Countries[JO]=ירדן
+Countries[JP]=יפן
+Countries[KE]=קניה
+Countries[KG]=קירגיזסטאן
+Countries[KH]=קמבודיה
+Countries[KI]=קיריבאטי
+Countries[KM]=קומורוס
+Countries[KN]=סיינט קיטס ונביס
+Countries[KP]=קוריאה, צפון
+Countries[KR]=קוריאה, דרום
+Countries[KW]=כוויית
+Countries[KY]=איי קיימן
+Countries[KZ]=קזחסטאן
+Countries[LA]=לאוס
+Countries[LB]=לבנון
+Countries[LC]=סיינט לוצ'יה
+Countries[LI]=ליכטנשטיין
+Countries[LK]=סרי לנקה
+Countries[LR]=ליבריה
+Countries[LS]=לסותו
+Countries[LT]=ליטא
+Countries[LU]=לוקסמבורג
+Countries[LV]=לאטביה
+Countries[LY]=לוב
+Countries[MA]=מרוקו
+Countries[MC]=מונקו
+Countries[MD]=מולדובה
+Countries[ME]=מונטנגרו
+Countries[MF]=סנט מרטין
+Countries[MG]=מדגסקר
+Countries[MH]=איי מרשל
+Countries[MK]=מקדוניה
+Countries[ML]=מאלי
+Countries[MM]=מיינמר
+Countries[MN]=מונגוליה
+Countries[MO]=מקאו
+Countries[MP]=איי מריאנה הצפוניים
+Countries[MQ]=מרטיניק
+Countries[MR]=מאוריטניה
+Countries[MS]=מונסראט
+Countries[MT]=מלטה
+Countries[MU]=מאוריציוס
+Countries[MV]=מלדיבים
+Countries[MW]=מלאווי
+Countries[MX]=מקסיקו
+Countries[MY]=מלזיה
+Countries[MZ]=מוזמביק
+Countries[NA]=נאמיביה
+Countries[NC]=קלדוניה החדשה
+Countries[NE]=ניגריה
+Countries[NF]=איי נורפוק
+Countries[NG]=ניגריה
+Countries[NI]=ניקאראגואה
+Countries[NL]=הולנד
+Countries[NO]=נורווגיה
+Countries[NP]=נפאל
+Countries[NR]=נאורו
+Countries[NU]=ניאו
+Countries[NZ]=ניו זילנד
+Countries[OM]=אומן
+Countries[PA]=פנמה
+Countries[PE]=פרו
+Countries[PF]=פולינזיה הצרפתית
+Countries[PG]=גינאה החדשה פפואה
+Countries[PH]=פיליפינים
+Countries[PK]=פקיסטאן
+Countries[PL]=פולין
+Countries[PM]=סנט פייר ומיקלון
+Countries[PN]=פיטקרן
+Countries[PR]=פורטו ריקו
+Countries[PS]=השטחים הפלסטיניים
+Countries[PT]=פורטוגל
+Countries[PW]=פאלאו
+Countries[PY]=פרגואי
+Countries[QA]=קטר
+Countries[RE]=ראוניון
+Countries[RO]=רומניה
+Countries[RS]=סרביה
+Countries[RU]=חבר המדינות הרוסיות
+Countries[RW]=רואנדה
+Countries[SA]=ערב הסעודית
+Countries[SB]=שלמה, איי
+Countries[SC]=איי סיישל
+Countries[SD]=סודן
+Countries[SE]=שוודיה
+Countries[SG]=סינגפור
+Countries[SH]=סנט הלנה
+Countries[SI]=סלובניה
+Countries[SJ]=סוולבארד וז׳אן מאיין
+Countries[SK]=סלובקיה
+Countries[SL]=סיארה לאונה
+Countries[SM]=סאן מארינו
+Countries[SN]=סנגאל
+Countries[SO]=סומליה
+Countries[SR]=סורינם
+Countries[SS]=South Sudan
+Countries[ST]=סאו טומה ופרינסיפה
+Countries[SV]=אל סלבדור
+Countries[SX]=Land Sint Maarten
+Countries[SY]=סוריה
+Countries[SZ]=סוואזילנד
+Countries[TC]=איי טורקס וקאיקוס
+Countries[TD]=צ׳אד
+Countries[TF]=טריטוריות דרומיות של צרפת
+Countries[TG]=טוגו
+Countries[TH]=תאיילנד
+Countries[TJ]=טאג'יקיסטן
+Countries[TK]=טוקלאו
+Countries[TL]=טימור המזרחית
+Countries[TM]=טורקמניסטאן
+Countries[TN]=טוניסיה
+Countries[TO]=טונגה
+Countries[TR]=טורקיה
+Countries[TT]=טרינידאד וטובגו
+Countries[TV]=טובלו
+Countries[TW]=טייוואן
+Countries[TZ]=טאנזניה
+Countries[UA]=אוקראינה
+Countries[UG]=אוגנדה
+Countries[UM]=איים קטנים שלחוף ארצות הברית
+Countries[US]=ארצות הברית
+Countries[UY]=אורגוואי
+Countries[UZ]=אוזבקיסטאן
+Countries[VA]=עיר הותיקן
+Countries[VC]=סיינט וינסנט והגרנדינס
+Countries[VE]=ונצואלה
+Countries[VG]=איי הבתולה הבריטיים
+Countries[VI]=איי הבתולה האמריקניים
+Countries[VN]=וייטנאם
+Countries[VU]=ואמוטו
+Countries[WF]=איי ווליס ופוטונה
+Countries[WS]=סמואה
+Countries[XK]=קוסובו
+Countries[YE]=תימן
+Countries[YT]=מאיוט
+Countries[ZA]=דרום אפריקה
+Countries[ZM]=זמביה
+Countries[ZW]=זימבבואה
