--- a/share/locale/hin-IN.ini
+++ b/share/locale/hin-IN.ini
@@ -84,3 +84,259 @@ thu=Thursday
 fri=Friday
 sat=Saturday
 sun=Sunday
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=hi
+[CountryNames]
+
+Countries[AD]=अंडोरा
+Countries[AE]=संयुक्त अरब अमीरात
+Countries[AF]=अफ़गानिस्तान
+Countries[AG]=एंटिगुआ और बारबुडा
+Countries[AI]=एंगुइला
+Countries[AL]=अल्बेनिया
+Countries[AM]=आर्मेनिया
+Countries[AO]=अंगोला
+Countries[AQ]=अंटार्कटिका
+Countries[AR]=अर्जेंटीना
+Countries[AS]=अमेरिकी समोआ
+Countries[AT]=ऑस्ट्रिया
+Countries[AU]=ऑस्ट्रेलिया
+Countries[AW]=अरूबा
+Countries[AX]=एलैंड द्वीपसमूह
+Countries[AZ]=अज़रबैजान
+Countries[BA]=बोस्निया और हरज़ेगोविना
+Countries[BB]=बारबाडोस
+Countries[BD]=बाँग्लादेश
+Countries[BE]=बेल्जियम
+Countries[BF]=बुर्किना फ़ासो
+Countries[BG]=बल्गारिया
+Countries[BH]=बाहरेन
+Countries[BI]=बरंडी
+Countries[BJ]=बेनिन
+Countries[BL]=सेंट बार्थेलेमी
+Countries[BM]=बरमूडा
+Countries[BN]=ब्रूनइ
+Countries[BO]=बोलीविया
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=ब्राज़िल
+Countries[BS]=बहामाज़
+Countries[BT]=भूटान
+Countries[BV]=बौवेत द्वीप
+Countries[BW]=बोत्स्वाना
+Countries[BY]=बेलारूस
+Countries[BZ]=बेलीज़
+Countries[CA]=कनाडा
+Countries[CC]=कोकोस द्वीप
+Countries[CD]=कोंगो [डीआरसी]
+Countries[CF]=सेंट्रल अफ़्रीकन रिपब्लिक
+Countries[CG]=कोंगो
+Countries[CH]=स्विटज़रलैंड
+Countries[CI]=आइवरी कोस्ट
+Countries[CK]=कुक द्वीपसमूह
+Countries[CL]=चिली
+Countries[CM]=कैमरून
+Countries[CN]=चीन
+Countries[CO]=कोलम्बिया
+Countries[CR]=कोस्टारीका
+Countries[CU]=क्यूबा
+Countries[CV]=कैप वर्डे
+Countries[CW]=Land Curaçao
+Countries[CX]=क्रिसमस द्वीप
+Countries[CY]=साइप्रस
+Countries[CZ]=चेक़ गणतंत्र
+Countries[DE]=जर्मनी
+Countries[DJ]=जिबूती
+Countries[DK]=डेनमार्क
+Countries[DM]=डोमिनिक
+Countries[DO]=डॉमिनिकन गणतंत्र
+Countries[DZ]=अल्जीरिया
+Countries[EC]=इक्वाडोर
+Countries[EE]=एस्टोनिया
+Countries[EG]=मिस्त्र
+Countries[EH]=पश्चिमी सहारा
+Countries[ER]=एरीत्रिया
+Countries[ES]=स्पेन
+Countries[ET]=इथियोपिया
+Countries[FI]=फिनलैंड
+Countries[FJ]=फिजी
+Countries[FK]=फ़ॉकलैंड द्वीप
+Countries[FM]=माइक्रोनेशिया
+Countries[FO]=फरोए द्वीप
+Countries[FR]=फ़्रांस
+Countries[GA]=गैबॉन
+Countries[GB]=ब्रितन
+Countries[GD]=ग्रेनेडा
+Countries[GE]=जॉर्जिया
+Countries[GF]=फ़्रांसीसी गिआना
+Countries[GG]=ग्वेर्नसे
+Countries[GH]=घाना
+Countries[GI]=जिब्राल्टर
+Countries[GL]=ग्रीनलैण्ड
+Countries[GM]=गाम्बिया
+Countries[GN]=गिनी
+Countries[GP]=ग्वाडेलोप
+Countries[GQ]=इक्वेटोरियल गिनी
+Countries[GR]=ग्रीस
+Countries[GS]=दक्षिण जोर्जिया और दक्षिण सैंडविच द्वीपसमूह
+Countries[GT]=गोतेदाला
+Countries[GU]=गुआम
+Countries[GW]=गिनी-बिसाऊ
+Countries[GY]=गुयाना
+Countries[HK]=हाँग काँग
+Countries[HM]=हर्ड द्वीप और मैकडोनॉल्ड द्वीप
+Countries[HN]=हौंडुरस
+Countries[HR]=क्रोशिया
+Countries[HT]=हाइती
+Countries[HU]=हंगरी
+Countries[ID]=इन्डोनेशिया
+Countries[IE]=आयरलैण्ड
+Countries[IL]=इजराइल
+Countries[IM]=आइल ऑफ मैन
+Countries[IN]=भारत
+Countries[IO]=ब्रिटिश हिंद महासागरीय क्षेत्र
+Countries[IQ]=ईराक
+Countries[IR]=ईरान
+Countries[IS]=आइसलैण्ड
+Countries[IT]=इटली
+Countries[JE]=जर्सी
+Countries[JM]=जमाइका
+Countries[JO]=जॉर्डन
+Countries[JP]=जापान
+Countries[KE]=केन्या
+Countries[KG]=किरगिजस्तान
+Countries[KH]=कंबोडिया
+Countries[KI]=किरिबाती
+Countries[KM]=कोमोरोस
+Countries[KN]=सेन्ट किट्स और नेविस
+Countries[KP]=उत्तर कोरिया
+Countries[KR]=दक्षिणी कोरिया
+Countries[KW]=कुवैत
+Countries[KY]=केमैन द्वीपसमूह
+Countries[KZ]=कज़ाकस्तान
+Countries[LA]=लाओस
+Countries[LB]=लेबनान
+Countries[LC]=सेन्ट लुसिया
+Countries[LI]=लियक़्टँस्टीन
+Countries[LK]=श्री लंका
+Countries[LR]=लाइबेरिया
+Countries[LS]=लेसोथो
+Countries[LT]=लिथुआनिया
+Countries[LU]=लक्समबर्ग
+Countries[LV]=लाटविया
+Countries[LY]=लीबिया
+Countries[MA]=मोरक्को
+Countries[MC]=मोनाको
+Countries[MD]=मोल्दोवा
+Countries[ME]=मोंटेनेग्रो
+Countries[MF]=सेंट मार्टिन
+Countries[MG]=मेडागास्कर
+Countries[MH]=मार्शल द्वीप
+Countries[MK]=मैसिडोनिया
+Countries[ML]=माली
+Countries[MM]=म्याँमार
+Countries[MN]=मंगोलिया
+Countries[MO]=मकाओ
+Countries[MP]=नॉर्दन मारियाना द्वीपसमूह
+Countries[MQ]=मार्टीनिक
+Countries[MR]=मोरीतानिया
+Countries[MS]=मॉन्ट्सेराट
+Countries[MT]=माल्टा
+Countries[MU]=मौरिस
+Countries[MV]=मालदीव
+Countries[MW]=मलावी
+Countries[MX]=मेक्सिको
+Countries[MY]=मलेशिया
+Countries[MZ]=मोज़ाम्बिक
+Countries[NA]=नामीबिया
+Countries[NC]=न्यू कैलेडोनिया
+Countries[NE]=नाइजर
+Countries[NF]=नॉरफ़ॉक द्वीप
+Countries[NG]=नाइजीरिया
+Countries[NI]=निकारागुआ
+Countries[NL]=नीदरलैण्ड
+Countries[NO]=नॉर्वे
+Countries[NP]=नेपाल
+Countries[NR]=नाउरु
+Countries[NU]=नीयू
+Countries[NZ]=न्यूज़ीलैंड
+Countries[OM]=ओमान
+Countries[PA]=पनामा
+Countries[PE]=पेरु
+Countries[PF]=फ़्रांसीसी पॉलिनेशिया
+Countries[PG]=पापुआ न्यू गिनी
+Countries[PH]=फिलिपींस
+Countries[PK]=पाकिस्तान
+Countries[PL]=पोलैंड
+Countries[PM]=सेंट पिएरे और मिक्वेलन
+Countries[PN]=पिटकैर्न
+Countries[PR]=पर्टो रीको
+Countries[PS]=फ़िलिस्तीन
+Countries[PT]=पुर्तगाल
+Countries[PW]=पलाऊ
+Countries[PY]=पॅराग्वे
+Countries[QA]=कतर
+Countries[RE]=रियूनियन
+Countries[RO]=रोमानिया
+Countries[RS]=सर्बिया
+Countries[RU]=रूस
+Countries[RW]=रूआण्डा
+Countries[SA]=सऊदी अरब
+Countries[SB]=सोलोमन द्वीप
+Countries[SC]=सेशेल्स
+Countries[SD]=सूडान
+Countries[SE]=स्वीडन
+Countries[SG]=सिंगापुर
+Countries[SH]=सेंट हेलेना
+Countries[SI]=स्लोवेनिया
+Countries[SJ]=स्वालबर्ड और जान मायेन
+Countries[SK]=स्लोवाकिया
+Countries[SL]=सीएरा लिओन
+Countries[SM]=सैन मरिनो
+Countries[SN]=सेनेगल
+Countries[SO]=सोमालिया
+Countries[SR]=सूरीनाम
+Countries[SS]=South Sudan
+Countries[ST]=श?ओ टोम? अन्द फ्र?न्चिपे
+Countries[SV]=अल साल्वाडोर
+Countries[SX]=Land Sint Maarten
+Countries[SY]=सीरिया
+Countries[SZ]=स्वाज़ीलैंड
+Countries[TC]=तुर्क् और् कैकोज़ द्वीप
+Countries[TD]=चड
+Countries[TF]=फ़्रांसीसी दक्षिणी क्षेत्र
+Countries[TG]=टोगो
+Countries[TH]=थाइलैंड
+Countries[TJ]=ताजिकिस्तान
+Countries[TK]=तोकेलाउ
+Countries[TL]=पूर्वी तिमोर
+Countries[TM]=तुर्कमेनिस्तान
+Countries[TN]=ट्यूनीसिया
+Countries[TO]=टोंगा
+Countries[TR]=तुर्की
+Countries[TT]=त्रिनिदाद और टोबैगो
+Countries[TV]=तुवालु
+Countries[TW]=ताइवान
+Countries[TZ]=तंजा़निया
+Countries[UA]=उक्रेन
+Countries[UG]=यूगांडा
+Countries[UM]=युनाइटेड स्टेट्स माइनर आउटलाइंग द्वीपसमूह
+Countries[US]=संयुक्त राज्य अमेरिका
+Countries[UY]=उरूग्वे
+Countries[UZ]=उज़्बेकिस्तान
+Countries[VA]=वेटिकन सिटि
+Countries[VC]=सेंट विनसेंट एंड ग्रेनाडाइन्स
+Countries[VE]=वेनेज़्वेला
+Countries[VG]=ब्रिटिश वर्जिन द्वीपसमूह
+Countries[VI]=अमेरिकी वर्जिन टापू
+Countries[VN]=वियतनाम
+Countries[VU]=वन्वातु
+Countries[WF]=वालिस और फ़्यूचूना
+Countries[WS]=समोआ
+Countries[XK]=कोसोवो
+Countries[YE]=यमन
+Countries[YT]=मैयट
+Countries[ZA]=दक्षिण अफ़्रीका
+Countries[ZM]=ज़ाम्बिया
+Countries[ZW]=ज़िम्बाब्वे
