--- a/share/locale/hun-HU.ini
+++ b/share/locale/hun-HU.ini
@@ -88,3 +88,259 @@ thu=csütörtök
 fri=péntek
 sat=szombat
 sun=vasárnap
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=hu
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Egyesült Arab Emirátus
+Countries[AF]=Afganisztán
+Countries[AG]=Antigua és Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albánia
+Countries[AM]=Örményország
+Countries[AO]=Angóla
+Countries[AQ]=Antarktisz
+Countries[AR]=Argentína
+Countries[AS]=Amerikai Szamoa
+Countries[AT]=Ausztria
+Countries[AU]=Ausztrália
+Countries[AW]=Aruba
+Countries[AX]=Aland-szigetek
+Countries[AZ]=Azerbajdzsán
+Countries[BA]=Bosznia-Hercegovina
+Countries[BB]=Barbados
+Countries[BD]=Banglades
+Countries[BE]=Belgium
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgária
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint Barthélemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei Darussalam
+Countries[BO]=Bolívia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brazília
+Countries[BS]=Bahamák
+Countries[BT]=Bhután
+Countries[BV]=Bouvet-sziget
+Countries[BW]=Botswana
+Countries[BY]=Belorusszia
+Countries[BZ]=Beliz
+Countries[CA]=Kanada
+Countries[CC]=Kókusz-szigetek
+Countries[CD]=Kongó - Kinshasa
+Countries[CF]=Közép-afrikai Köztársaság
+Countries[CG]=Kongó [Köztársaság]
+Countries[CH]=Svájc
+Countries[CI]=Elefántcsontpart
+Countries[CK]=Cook-szigetek
+Countries[CL]=Csile
+Countries[CM]=Kamerun
+Countries[CN]=Kína
+Countries[CO]=Kolumbia
+Countries[CR]=Costa Rica
+Countries[CU]=Kuba
+Countries[CV]=Zöld-foki Köztársaság
+Countries[CW]=Land Curaçao
+Countries[CX]=Karácsony-szigetek
+Countries[CY]=Ciprus
+Countries[CZ]=Cseh Köztársaság
+Countries[DE]=Németország
+Countries[DJ]=Dzsibuti
+Countries[DK]=Dánia
+Countries[DM]=Dominika
+Countries[DO]=Dominikai Köztársaság
+Countries[DZ]=Algéria
+Countries[EC]=Ekvádor
+Countries[EE]=Észtország
+Countries[EG]=Egyiptom
+Countries[EH]=Nyugat-Szahara
+Countries[ER]=Eritrea
+Countries[ES]=Spanyolország
+Countries[ET]=Etiópia
+Countries[FI]=Finnország
+Countries[FJ]=Fidzsi
+Countries[FK]=Falkland-szigetek
+Countries[FM]=Mikronézia, Szövetségi Államok
+Countries[FO]=Feröer-szigetek
+Countries[FR]=Franciaország
+Countries[GA]=Gabon
+Countries[GB]=Egyesült Királyság
+Countries[GD]=Grenada
+Countries[GE]=Grúzia
+Countries[GF]=Francia Guyana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltár
+Countries[GL]=Grönland
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Egyenlítďi Guinea
+Countries[GR]=Görögország
+Countries[GS]=Dél Grúzia és a Déli Szendvics-szigetek
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hongkong
+Countries[HM]=Heard és McDonald Szigetek
+Countries[HN]=Honduras
+Countries[HR]=Horvátország
+Countries[HT]=Haiti
+Countries[HU]=Magyarország
+Countries[ID]=Indonézia
+Countries[IE]=Írország
+Countries[IL]=Izrael
+Countries[IM]=Man sziget
+Countries[IN]=India
+Countries[IO]=Brit Indiai-óceáni Terület
+Countries[IQ]=Irak
+Countries[IR]=Irán
+Countries[IS]=Izland
+Countries[IT]=Olaszország
+Countries[JE]=Jersey
+Countries[JM]=Jamaica
+Countries[JO]=Jordánia
+Countries[JP]=Japán
+Countries[KE]=Kenya
+Countries[KG]=Kirgizisztán
+Countries[KH]=Kambodzsa
+Countries[KI]=Kiribati
+Countries[KM]=Comor-szigetek
+Countries[KN]=Saint Kitts és Nevis
+Countries[KP]=Korea, Észak
+Countries[KR]=Korea, Dél
+Countries[KW]=Kuwait
+Countries[KY]=Kajmán-szigetek
+Countries[KZ]=Kazahsztán
+Countries[LA]=Laoszi Népi Demokratikus Köztársaság
+Countries[LB]=Libanon
+Countries[LC]=Santa Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Srí Lanka
+Countries[LR]=Libéria
+Countries[LS]=Lesotho
+Countries[LT]=Litvánia
+Countries[LU]=Luxemburg
+Countries[LV]=Lettország
+Countries[LY]=Líbiai Arab Jamahiriya
+Countries[MA]=Marokkó
+Countries[MC]=Monaco
+Countries[MD]=Moldáv Köztársaság
+Countries[ME]=Montenegró
+Countries[MF]=Saint Martin
+Countries[MG]=Madagaszkár
+Countries[MH]=Marshall-szigetek
+Countries[MK]=Macedónia, Köztársaság
+Countries[ML]=Mali
+Countries[MM]=Burma
+Countries[MN]=Mongólia
+Countries[MO]=Makaó
+Countries[MP]=Északi Mariana-szigetek
+Countries[MQ]=Martinique
+Countries[MR]=Mauritánia
+Countries[MS]=Montserrat
+Countries[MT]=Málta
+Countries[MU]=Mauritius
+Countries[MV]=Maldív-szigetek
+Countries[MW]=Malawi
+Countries[MX]=Mexikó
+Countries[MY]=Malájföld
+Countries[MZ]=Mozambik
+Countries[NA]=Namíbia
+Countries[NC]=Új-Kaledónia
+Countries[NE]=Niger
+Countries[NF]=Norfolk-sziget
+Countries[NG]=Nigéria
+Countries[NI]=Nikaragua
+Countries[NL]=Hollandia
+Countries[NO]=Norvégia
+Countries[NP]=Nepál
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Új-Zéland
+Countries[OM]=Omán
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Francia Polinézia
+Countries[PG]=Pápua Új-Guinea
+Countries[PH]=Fülöp-szigetek
+Countries[PK]=Pakisztán
+Countries[PL]=Lengyelország
+Countries[PM]=Saint Pierre és Miquelon
+Countries[PN]=Pitcairn-szigetek
+Countries[PR]=Puerto Rico
+Countries[PS]=Palesztin Terület
+Countries[PT]=Portugália
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Katar
+Countries[RE]=Reunion
+Countries[RO]=Románia
+Countries[RS]=Szerbia
+Countries[RU]=Oroszországi Föderáció
+Countries[RW]=Ruanda
+Countries[SA]=Szaud-Arábia
+Countries[SB]=Salamon-szigetek
+Countries[SC]=Seychelles
+Countries[SD]=Szudán
+Countries[SE]=Svédország
+Countries[SG]=Szingapúr
+Countries[SH]=Szent Helena
+Countries[SI]=Szlovénia
+Countries[SJ]=Spitzbergák és Jan Mayen-szigetek
+Countries[SK]=Szlovákia
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Szenegál
+Countries[SO]=Szomália
+Countries[SR]=Suriname
+Countries[SS]=South Sudan
+Countries[ST]=Sao Tomé és Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Szíriai Arab Köztársaság
+Countries[SZ]=Szváziföld
+Countries[TC]=Turks- és Caicos-szigetek
+Countries[TD]=Csád
+Countries[TF]=Francia Déli Területek
+Countries[TG]=Togo
+Countries[TH]=Thaiföld
+Countries[TJ]=Tadzsikisztán
+Countries[TK]=Tokelau
+Countries[TL]=Kelet-Timor
+Countries[TM]=Türkmenisztán
+Countries[TN]=Tunézia
+Countries[TO]=Tongai
+Countries[TR]=Törökország
+Countries[TT]=Trinidad és Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Tajvan
+Countries[TZ]=Tanzánia
+Countries[UA]=Ukrajna
+Countries[UG]=Uganda
+Countries[UM]=Amerikai Csendes-óceáni Szigetek
+Countries[US]=Egyesült Államok
+Countries[UY]=Uruguay
+Countries[UZ]=Üzbegisztán
+Countries[VA]=Vatikán
+Countries[VC]=Saint Vincent, Grenadines
+Countries[VE]=Venezuela
+Countries[VG]=Brit Virgin-szigetek
+Countries[VI]=Amerikai Virgin-szigetek
+Countries[VN]=Vietnám
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis- és Futuna-szigetek
+Countries[WS]=Samoa
+Countries[XK]=Koszovó
+Countries[YE]=Jemen
+Countries[YT]=Mayotte
+Countries[ZA]=Dél-Afrika
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
