--- a/share/locale/ita-IT.ini
+++ b/share/locale/ita-IT.ini
@@ -89,3 +89,259 @@ thu=Giovedì
 fri=Venerdì
 sat=Sabato
 sun=Domenica
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=it
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Emirati Arabi Uniti
+Countries[AF]=Afghanistan
+Countries[AG]=Antigua e Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albania
+Countries[AM]=Armenia
+Countries[AO]=Angola
+Countries[AQ]=Antartide
+Countries[AR]=Argentina
+Countries[AS]=Samoa Americane
+Countries[AT]=Austria
+Countries[AU]=Australia
+Countries[AW]=Aruba
+Countries[AX]=Isole Aland
+Countries[AZ]=Azerbaigian
+Countries[BA]=Bosnia Erzegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesh
+Countries[BE]=Belgio
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgaria
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=San Bartolomeo
+Countries[BM]=Bermuda
+Countries[BN]=Brunei
+Countries[BO]=Bolivia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brasile
+Countries[BS]=Bahamas
+Countries[BT]=Bhutan
+Countries[BV]=Isola Bouvet
+Countries[BW]=Botswana
+Countries[BY]=Bielorussia
+Countries[BZ]=Belize
+Countries[CA]=Canada
+Countries[CC]=Isole Cocos
+Countries[CD]=Zaire
+Countries[CF]=Repubblica Centrafricana
+Countries[CG]=Congo
+Countries[CH]=Svizzera
+Countries[CI]=Costa d'Avorio
+Countries[CK]=Isole Cook
+Countries[CL]=Cile
+Countries[CM]=Camerun
+Countries[CN]=Cina
+Countries[CO]=Colombia
+Countries[CR]=Costa Rica
+Countries[CU]=Cuba
+Countries[CV]=Capo Verde
+Countries[CW]=Land Curaçao
+Countries[CX]=Isola di Christmas
+Countries[CY]=Cipro
+Countries[CZ]=Repubblica Ceca
+Countries[DE]=Germania
+Countries[DJ]=Gibuti
+Countries[DK]=Danimarca
+Countries[DM]=Dominica
+Countries[DO]=Repubblica Dominicana
+Countries[DZ]=Algeria
+Countries[EC]=Ecuador
+Countries[EE]=Estonia
+Countries[EG]=Egitto
+Countries[EH]=Sahara Occidentale
+Countries[ER]=Eritrea
+Countries[ES]=Spagna
+Countries[ET]=Etiopia
+Countries[FI]=Finlandia
+Countries[FJ]=Figi
+Countries[FK]=Isole Falkland
+Countries[FM]=Micronesia
+Countries[FO]=Isole Faroe
+Countries[FR]=Francia
+Countries[GA]=Gabon
+Countries[GB]=Regno Unito
+Countries[GD]=Grenada
+Countries[GE]=Georgia
+Countries[GF]=Guiana Francese
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibilterra
+Countries[GL]=Groenlandia
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadalupa
+Countries[GQ]=Guinea Equatoriale
+Countries[GR]=Grecia
+Countries[GS]=Georgia del Sud e Isole Sandwich del Sud
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hong-Kong
+Countries[HM]=Isole Heard ed Isole McDonald
+Countries[HN]=Honduras
+Countries[HR]=Croazia
+Countries[HT]=Haiti
+Countries[HU]=Ungheria
+Countries[ID]=Indonesia
+Countries[IE]=Irlanda
+Countries[IL]=Israele
+Countries[IM]=Isola di Man
+Countries[IN]=India
+Countries[IO]=Territorio Britannico dell’Oceano Indiano
+Countries[IQ]=Iraq
+Countries[IR]=Iran (Repubblica Islamica)
+Countries[IS]=Islanda
+Countries[IT]=Italia
+Countries[JE]=Jersey
+Countries[JM]=Giamaica
+Countries[JO]=Giordania
+Countries[JP]=Giappone
+Countries[KE]=Kenya
+Countries[KG]=Kirghizistan
+Countries[KH]=Cambogia
+Countries[KI]=Kiribati
+Countries[KM]=Comore
+Countries[KN]=Saint Kitts e Nevis
+Countries[KP]=Corea, Repubblica Popolare Democratica
+Countries[KR]=Corea (Repubblica)
+Countries[KW]=Kuwait
+Countries[KY]=Isole Cayman
+Countries[KZ]=Kazakistan
+Countries[LA]=Laos
+Countries[LB]=Libano
+Countries[LC]=Santa Lucia
+Countries[LI]=Lichtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Lituania
+Countries[LU]=Lussemburgo
+Countries[LV]=Lettonia
+Countries[LY]=Libia, Repubblica Araba
+Countries[MA]=Marocco
+Countries[MC]=Monaco
+Countries[MD]=Moldavia
+Countries[ME]=Montenegro
+Countries[MF]=Saint Martin
+Countries[MG]=Madagascar
+Countries[MH]=Isole Marshall
+Countries[MK]=Macedonia, Ex Repubblica Jugoslava
+Countries[ML]=Mali
+Countries[MM]=Birmania
+Countries[MN]=Mongolia
+Countries[MO]=Macao
+Countries[MP]=Isole Marianne Settentrionali
+Countries[MQ]=Martinica
+Countries[MR]=Mauritania
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Maldive
+Countries[MW]=Malawi
+Countries[MX]=Messico
+Countries[MY]=Malesia
+Countries[MZ]=Mozambico
+Countries[NA]=Namibia
+Countries[NC]=Nuova Caledonia
+Countries[NE]=Niger
+Countries[NF]=Isola Norfolk
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Paesi Bassi
+Countries[NO]=Norvegia
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Nuova Zelanda
+Countries[OM]=Oman
+Countries[PA]=Panamá
+Countries[PE]=Perù
+Countries[PF]=Polinesia francese
+Countries[PG]=Papua Nuova Guinea
+Countries[PH]=Filippine
+Countries[PK]=Pakistan
+Countries[PL]=Polonia
+Countries[PM]=Saint Pierre e Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Portorico
+Countries[PS]=Territori palestinesi
+Countries[PT]=Portogallo
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Réunion
+Countries[RO]=Romania
+Countries[RS]=Serbia
+Countries[RU]=Russia
+Countries[RW]=Ruanda
+Countries[SA]=Arabia Saudita
+Countries[SB]=Salomone, isole
+Countries[SC]=Seychelles
+Countries[SD]=Sudan
+Countries[SE]=Svezia
+Countries[SG]=Singapore
+Countries[SH]=Sant’Elena
+Countries[SI]=Slovenia
+Countries[SJ]=Svalbard e Jan Mayen
+Countries[SK]=Slovacchia (Repubblica Slovacca)
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Suriname
+Countries[SS]=South Sudan
+Countries[ST]=Sao Tomè e Principe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Siria
+Countries[SZ]=Swaziland
+Countries[TC]=Isole Turks e Caicos
+Countries[TD]=Ciad
+Countries[TF]=Territori australi francesi
+Countries[TG]=Togo
+Countries[TH]=Thailandia
+Countries[TJ]=Tagikistan
+Countries[TK]=Tokelau
+Countries[TL]=Timor Est
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunisia
+Countries[TO]=Tonga
+Countries[TR]=Turchia
+Countries[TT]=Trinidad e Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tanzania
+Countries[UA]=Ucraina
+Countries[UG]=Uganda
+Countries[UM]=Isole Minori lontane dagli Stati Uniti
+Countries[US]=Stati Uniti
+Countries[UY]=Uruguay
+Countries[UZ]=Uzbekistan
+Countries[VA]=Santa Sede (Città del Vaticano)
+Countries[VC]=Saint Vincent e Grenadines
+Countries[VE]=Venezuela
+Countries[VG]=Isole Vergini Britanniche
+Countries[VI]=Isole Vergini Americane
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis e Futuna
+Countries[WS]=Samoa
+Countries[XK]=Cossovo
+Countries[YE]=Yemen
+Countries[YT]=Mayotte
+Countries[ZA]=Sudafrica
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
