--- a/share/locale/jpn-JP.ini
+++ b/share/locale/jpn-JP.ini
@@ -83,3 +83,259 @@ thu=木曜日
 fri=金曜日
 sat=土曜日
 sun=日曜日
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=ja
+[CountryNames]
+
+Countries[AD]=アンドラ
+Countries[AE]=アラブ首長国連邦
+Countries[AF]=アフガニスタン
+Countries[AG]=アンティグアバブーダ
+Countries[AI]=アンギラ
+Countries[AL]=アルバニア共和国
+Countries[AM]=アルメニア共和国
+Countries[AO]=アンゴラ共和国
+Countries[AQ]=南極
+Countries[AR]=アルゼンチン共和国
+Countries[AS]=米領サモア
+Countries[AT]=オーストリア共和国
+Countries[AU]=オーストラリア
+Countries[AW]=アルバ島
+Countries[AX]=オーランド諸島
+Countries[AZ]=アゼルバイジャン共和国
+Countries[BA]=ボスニア・ヘルツェゴビナ共和国
+Countries[BB]=バルバドス
+Countries[BD]=バングラディッシュ人民共和国
+Countries[BE]=ベルギー王国
+Countries[BF]=ブルキナファソ
+Countries[BG]=ブルガリア共和国
+Countries[BH]=バーレーン
+Countries[BI]=ブルンジ共和国
+Countries[BJ]=ベニン共和国
+Countries[BL]=サン・バルテルミー
+Countries[BM]=バミューダ
+Countries[BN]=ブルネイ
+Countries[BO]=ボリビア共和国
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=ブラジル連邦共和国
+Countries[BS]=バハマ国
+Countries[BT]=ブータン王国
+Countries[BV]=ブーベ島
+Countries[BW]=ボツワナ共和国
+Countries[BY]=ベラルーシ共和国
+Countries[BZ]=ベリーズ
+Countries[CA]=カナダ
+Countries[CC]=ココス[キーリング]諸島
+Countries[CD]=コンゴ民主共和国
+Countries[CF]=中央アフリカ共和国
+Countries[CG]=コンゴ
+Countries[CH]=スイス連邦
+Countries[CI]=象牙海岸
+Countries[CK]=クック諸島
+Countries[CL]=チリ共和国
+Countries[CM]=カメルーン共和国
+Countries[CN]=中国
+Countries[CO]=コロンビア共和国
+Countries[CR]=コスタリカ
+Countries[CU]=キューバ共和国
+Countries[CV]=カーボベルデ
+Countries[CW]=Land Curaçao
+Countries[CX]=クリスマス島
+Countries[CY]=キプロス共和国
+Countries[CZ]=チェコ共和国
+Countries[DE]=ドイツ連邦共和国
+Countries[DJ]=ジブチ
+Countries[DK]=デンマーク王国
+Countries[DM]=ドミニカ国
+Countries[DO]=ドミニカ共和国
+Countries[DZ]=アルジェリア民主人民共和国
+Countries[EC]=エクアドル共和国
+Countries[EE]=エストニア共和国
+Countries[EG]=エジプト・アラブ共和国
+Countries[EH]=西サハラ
+Countries[ER]=エリトリア
+Countries[ES]=スペイン
+Countries[ET]=エチオピア
+Countries[FI]=フィンランド共和国
+Countries[FJ]=フィジー
+Countries[FK]=フォークランド諸島
+Countries[FM]=ミクロネシア連邦
+Countries[FO]=フェロー諸島
+Countries[FR]=フランス共和国
+Countries[GA]=ガボン共和国
+Countries[GB]=イギリス
+Countries[GD]=グレナダ
+Countries[GE]=グルジア共和国
+Countries[GF]=仏領ギアナ
+Countries[GG]=ガーンジー
+Countries[GH]=ガーナ共和国
+Countries[GI]=ジブラルタル
+Countries[GL]=グリーンランド
+Countries[GM]=ガンビア共和国
+Countries[GN]=ギニア共和国
+Countries[GP]=グアドループ
+Countries[GQ]=赤道ギニア共和国
+Countries[GR]=ギリシャ共和国
+Countries[GS]=南ジョージア島・南サンドイッチ諸島
+Countries[GT]=グアテマラ
+Countries[GU]=グアム
+Countries[GW]=ギニアビサウ共和国
+Countries[GY]=ガイアナ
+Countries[HK]=香港
+Countries[HM]=ハード島・マクドナルド諸島
+Countries[HN]=ホンジュラス共和国
+Countries[HR]=クロアチア共和国
+Countries[HT]=ハイチ共和国
+Countries[HU]=ハンガリー共和国
+Countries[ID]=インドネシア共和国
+Countries[IE]=アイルランド
+Countries[IL]=イスラエル国
+Countries[IM]=マン島
+Countries[IN]=インド
+Countries[IO]=英領インド洋地域
+Countries[IQ]=イラク共和国
+Countries[IR]=イラン・イスラム共和国
+Countries[IS]=アイスランド共和国
+Countries[IT]=イタリア共和国
+Countries[JE]=ジャージー
+Countries[JM]=ジャマイカ
+Countries[JO]=ヨルダン・ハシミテ王国
+Countries[JP]=日本
+Countries[KE]=ケニア共和国
+Countries[KG]=キルギス共和国
+Countries[KH]=カンボジア国
+Countries[KI]=キリバス共和国
+Countries[KM]=コモロ・イスラム連邦共和国
+Countries[KN]=セントクリストファー・ネビス
+Countries[KP]=韓国、朝鮮民主主義人民共和国
+Countries[KR]=韓国、大韓民国
+Countries[KW]=クウェート
+Countries[KY]=ケイマン諸島
+Countries[KZ]=カザフスタン共和国
+Countries[LA]=ラオス
+Countries[LB]=レバノン共和国
+Countries[LC]=セントルシア
+Countries[LI]=リヒテンシュタイン公国
+Countries[LK]=スリランカ民主社会主義共和国
+Countries[LR]=リベリア共和国
+Countries[LS]=レソト王国
+Countries[LT]=リトアニア共和国
+Countries[LU]=ルクセンブルグ
+Countries[LV]=ラトビア共和国
+Countries[LY]=社会主義人民リビア・アラブ国
+Countries[MA]=モロッコ王国
+Countries[MC]=モナコ
+Countries[MD]=モルドバ共和国
+Countries[ME]=モンテネグロ
+Countries[MF]=セント・マーチン
+Countries[MG]=マダガスカル共和国
+Countries[MH]=マーシャル諸島共和国
+Countries[MK]=マケドニア旧ユーゴスラビア共和国
+Countries[ML]=マリ
+Countries[MM]=ミャンマー連邦
+Countries[MN]=モンゴル
+Countries[MO]=マカオ
+Countries[MP]=北マリアナ諸島
+Countries[MQ]=マルティニーク島
+Countries[MR]=モーリタニア・イスラム共和国
+Countries[MS]=モントセラト島
+Countries[MT]=マルタ
+Countries[MU]=モーリシャス
+Countries[MV]=モルジブ
+Countries[MW]=マラウイ共和国
+Countries[MX]=メキシコ合衆国
+Countries[MY]=マレーシア
+Countries[MZ]=モザンビーク共和国
+Countries[NA]=ナミビア共和国
+Countries[NC]=ニューカレドニア
+Countries[NE]=ニジェール共和国
+Countries[NF]=ノーフォーク島
+Countries[NG]=ナイジェリア連邦共和国
+Countries[NI]=ニカラグア共和国
+Countries[NL]=オランダ王国
+Countries[NO]=ノルウェー王国
+Countries[NP]=ネパール王国
+Countries[NR]=ナウル
+Countries[NU]=ニウエ島
+Countries[NZ]=ニュージーランド
+Countries[OM]=オマーン国
+Countries[PA]=パナマ
+Countries[PE]=ペルー共和国
+Countries[PF]=仏領ポリネシア
+Countries[PG]=パプア・ニューギニア
+Countries[PH]=フィリピン共和国
+Countries[PK]=パキスタン・イスラム共和国
+Countries[PL]=ポーランド共和国
+Countries[PM]=サンピエール島・ミクロン島
+Countries[PN]=ピトケアン島
+Countries[PR]=プエルトリコ
+Countries[PS]=パレスチナ
+Countries[PT]=ポルトガル共和国
+Countries[PW]=パラオ
+Countries[PY]=パラグアイ共和国
+Countries[QA]=カタール
+Countries[RE]=レユニオン島
+Countries[RO]=ルーマニア
+Countries[RS]=セルビア
+Countries[RU]=ロシア
+Countries[RW]=ルワンダ
+Countries[SA]=サウジアラビア王国
+Countries[SB]=ソロモン諸島
+Countries[SC]=セイシェル
+Countries[SD]=スーダン共和国
+Countries[SE]=スウェーデン王国
+Countries[SG]=シンガポール
+Countries[SH]=セントヘレナ
+Countries[SI]=スロベニア
+Countries[SJ]=スバールバル諸島・ヤンマイエン島
+Countries[SK]=スロバキア (スロバキア共和国)
+Countries[SL]=シエラレオネ
+Countries[SM]=サンマリノ共和国
+Countries[SN]=セネガル共和国
+Countries[SO]=ソマリア
+Countries[SR]=スリナム共和国
+Countries[SS]=South Sudan
+Countries[ST]=サントメ プリンシペ
+Countries[SV]=エルサルバドル
+Countries[SX]=Land Sint Maarten
+Countries[SY]=シリア・アラブ共和国
+Countries[SZ]=スワジランド王国
+Countries[TC]=タークス諸島・カイコス諸島
+Countries[TD]=チャド共和国
+Countries[TF]=仏領極南諸島
+Countries[TG]=トーゴ共和国
+Countries[TH]=タイ
+Countries[TJ]=タジキスタン共和国
+Countries[TK]=トケラウ諸島
+Countries[TL]=東ティモール共和国
+Countries[TM]=トルクメニスタン
+Countries[TN]=チュニジア共和国
+Countries[TO]=トンガ王国
+Countries[TR]=トルコ共和国
+Countries[TT]=トリニダード・トバゴ共和国
+Countries[TV]=ツバル
+Countries[TW]=台湾
+Countries[TZ]=タンザニア連合共和国
+Countries[UA]=ウクライナ共和国
+Countries[UG]=ウガンダ共和国
+Countries[UM]=米領太平洋諸島
+Countries[US]=アメリカ合衆国
+Countries[UY]=ウルグアイ共和国
+Countries[UZ]=ウズベキスタン共和国
+Countries[VA]=ローマ法王庁 (バチカン市国)
+Countries[VC]=セントビンセント・グレナディーン諸島
+Countries[VE]=ベネズエラ共和国
+Countries[VG]=英領ヴァージン諸島
+Countries[VI]=米領ヴァージン諸島
+Countries[VN]=ベトナム
+Countries[VU]=バヌアツ共和国
+Countries[WF]=ワリー エ フトゥーナ諸島
+Countries[WS]=西サモア
+Countries[XK]=コソボ
+Countries[YE]=イエメン共和国
+Countries[YT]=マヨット島
+Countries[ZA]=南アフリカ
+Countries[ZM]=ザンビア共和国
+Countries[ZW]=ジンバブエ共和国
