--- a/share/locale/kor-KR.ini
+++ b/share/locale/kor-KR.ini
@@ -83,3 +83,259 @@ thu=목요일
 fri=금요일
 sat=토요일
 sun=일요일
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=ko
+[CountryNames]
+
+Countries[AD]=안도라
+Countries[AE]=아랍에미리트 연합
+Countries[AF]=아프가니스탄
+Countries[AG]=안티가 바부다
+Countries[AI]=안길라
+Countries[AL]=알바니아
+Countries[AM]=아르메니아
+Countries[AO]=앙골라
+Countries[AQ]=남극 대륙
+Countries[AR]=아르헨티나
+Countries[AS]=아메리칸 사모아
+Countries[AT]=오스트리아
+Countries[AU]=호주
+Countries[AW]=아루바
+Countries[AX]=올란드 제도
+Countries[AZ]=아제르바이잔
+Countries[BA]=보스니아헤르체고비나
+Countries[BB]=바베이도스
+Countries[BD]=방글라데시
+Countries[BE]=벨기에
+Countries[BF]=부르키나 파소
+Countries[BG]=불가리아
+Countries[BH]=바레인
+Countries[BI]=부룬디
+Countries[BJ]=베넹
+Countries[BL]=생 바르텔르미
+Countries[BM]=버뮤다
+Countries[BN]=브루나이
+Countries[BO]=볼리비아
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=브라질
+Countries[BS]=바하마
+Countries[BT]=부탄
+Countries[BV]=부베
+Countries[BW]=보츠와나
+Countries[BY]=베라루스
+Countries[BZ]=벨리즈
+Countries[CA]=캐나다
+Countries[CC]=코코스제도
+Countries[CD]=콩고-킨샤사
+Countries[CF]=중앙 아프리카 공화국
+Countries[CG]=콩고
+Countries[CH]=스위스
+Countries[CI]=코트디부와르
+Countries[CK]=쿡제도
+Countries[CL]=칠레
+Countries[CM]=카메룬
+Countries[CN]=중국
+Countries[CO]=콜롬비아
+Countries[CR]=코스타리카
+Countries[CU]=쿠바
+Countries[CV]=까뽀베르데
+Countries[CW]=Land Curaçao
+Countries[CX]=크리스마스섬
+Countries[CY]=사이프러스
+Countries[CZ]=체코공화국
+Countries[DE]=독일
+Countries[DJ]=지부티
+Countries[DK]=덴마크
+Countries[DM]=도미니카
+Countries[DO]=도미니카 공화국
+Countries[DZ]=알제리
+Countries[EC]=에콰도르
+Countries[EE]=에스토니아
+Countries[EG]=이집트
+Countries[EH]=서사하라
+Countries[ER]=에리트리아
+Countries[ES]=스페인
+Countries[ET]=이디오피아
+Countries[FI]=핀란드
+Countries[FJ]=피지
+Countries[FK]=포클랜드 제도
+Countries[FM]=미크로네시아
+Countries[FO]=페로제도
+Countries[FR]=프랑스
+Countries[GA]=가봉
+Countries[GB]=영국
+Countries[GD]=그레나다
+Countries[GE]=그루지아
+Countries[GF]=프랑스령 기아나
+Countries[GG]=건지
+Countries[GH]=가나
+Countries[GI]=지브롤터
+Countries[GL]=그린랜드
+Countries[GM]=감비아
+Countries[GN]=기니
+Countries[GP]=과들루프
+Countries[GQ]=적도 기니
+Countries[GR]=그리스
+Countries[GS]=사우스조지아 사우스샌드위치 제도
+Countries[GT]=과테말라
+Countries[GU]=괌
+Countries[GW]=기네비소
+Countries[GY]=가이아나
+Countries[HK]=홍콩
+Countries[HM]=허드섬-맥도널드제도
+Countries[HN]=온두라스
+Countries[HR]=크로아티아
+Countries[HT]=하이티
+Countries[HU]=헝가리
+Countries[ID]=인도네시아
+Countries[IE]=아일랜드
+Countries[IL]=이스라엘
+Countries[IM]=맨섬
+Countries[IN]=인도
+Countries[IO]=영국령인도양식민지
+Countries[IQ]=이라크
+Countries[IR]=이란
+Countries[IS]=아이슬란드
+Countries[IT]=이탈리아
+Countries[JE]=저지
+Countries[JM]=자메이카
+Countries[JO]=요르단
+Countries[JP]=일본
+Countries[KE]=케냐
+Countries[KG]=키르기스
+Countries[KH]=캄보디아
+Countries[KI]=키리바티
+Countries[KM]=코모로스
+Countries[KN]=세인트 키츠 네비스
+Countries[KP]=조선 민주주의 인민 공화국
+Countries[KR]=한국
+Countries[KW]=쿠웨이트
+Countries[KY]=케이맨제도
+Countries[KZ]=카자흐스탄
+Countries[LA]=라오스
+Countries[LB]=레바논
+Countries[LC]=세인트 루시아
+Countries[LI]=리히텐슈타인
+Countries[LK]=스리랑카
+Countries[LR]=라이베리아
+Countries[LS]=레소토
+Countries[LT]=리투아니아
+Countries[LU]=룩셈부르크
+Countries[LV]=라트비아
+Countries[LY]=리비아
+Countries[MA]=모로코
+Countries[MC]=모나코
+Countries[MD]=몰도바
+Countries[ME]=몬테네그로
+Countries[MF]=생 마르탱
+Countries[MG]=마다카스카르
+Countries[MH]=마샬 군도
+Countries[MK]=전 유고슬라비아 마케도니아
+Countries[ML]=말리
+Countries[MM]=미얀마
+Countries[MN]=몽골
+Countries[MO]=마카오
+Countries[MP]=북마리아나제도
+Countries[MQ]=말티니크
+Countries[MR]=모리타니
+Countries[MS]=몬트세라트
+Countries[MT]=몰타
+Countries[MU]=모리셔스
+Countries[MV]=몰디브
+Countries[MW]=말라위
+Countries[MX]=멕시코
+Countries[MY]=말레이지아
+Countries[MZ]=모잠비크
+Countries[NA]=나미비아
+Countries[NC]=뉴 칼레도니아
+Countries[NE]=니제르
+Countries[NF]=노퍽섬
+Countries[NG]=나이지리아
+Countries[NI]=니카라과
+Countries[NL]=네덜란드
+Countries[NO]=노르웨이
+Countries[NP]=네팔
+Countries[NR]=나우루
+Countries[NU]=니우에
+Countries[NZ]=뉴질랜드
+Countries[OM]=오만
+Countries[PA]=파나마
+Countries[PE]=페루
+Countries[PF]=프랑스령 폴리네시아
+Countries[PG]=파푸아뉴기니
+Countries[PH]=필리핀
+Countries[PK]=파키스탄
+Countries[PL]=폴란드
+Countries[PM]=세인트피에르-미케롱
+Countries[PN]=핏케언섬
+Countries[PR]=푸에르토리코
+Countries[PS]=팔레스타인 지구
+Countries[PT]=포르트칼
+Countries[PW]=팔라우
+Countries[PY]=파라과이
+Countries[QA]=카타르
+Countries[RE]=리유니온
+Countries[RO]=루마니아
+Countries[RS]=세르비아
+Countries[RU]=러시아
+Countries[RW]=르완다
+Countries[SA]=사우디 아라비아
+Countries[SB]=솔로몬
+Countries[SC]=세이쉘
+Countries[SD]=수단
+Countries[SE]=스웨덴
+Countries[SG]=싱가포르
+Countries[SH]=세인트헬레나
+Countries[SI]=슬로베니아
+Countries[SJ]=스발바르제도-얀마웬섬
+Countries[SK]=슬로바키아
+Countries[SL]=시에라 리온
+Countries[SM]=산마리노
+Countries[SN]=세네갈
+Countries[SO]=소말리아
+Countries[SR]=수리남
+Countries[SS]=South Sudan
+Countries[ST]=상토메 프린스페
+Countries[SV]=엘살바도르
+Countries[SX]=Land Sint Maarten
+Countries[SY]=시리아
+Countries[SZ]=스와질랜드
+Countries[TC]=터크스케이커스제도
+Countries[TD]=챠드
+Countries[TF]=프랑스 남부 지방
+Countries[TG]=토고
+Countries[TH]=태국
+Countries[TJ]=타지크스탄
+Countries[TK]=토켈라우
+Countries[TL]=동티모르
+Countries[TM]=투르크멘
+Countries[TN]=튀니지
+Countries[TO]=통가
+Countries[TR]=터키
+Countries[TT]=트리니다드 토바고
+Countries[TV]=투발루
+Countries[TW]=대만
+Countries[TZ]=탄자니아
+Countries[UA]=우크라이나
+Countries[UG]=우간다
+Countries[UM]=미국령 해외 제도
+Countries[US]=미국
+Countries[UY]=우루과이
+Countries[UZ]=우즈베키스탄
+Countries[VA]=바티칸시티
+Countries[VC]=세인트 빈센트 그레나딘
+Countries[VE]=베네주엘라
+Countries[VG]=영국령 버진 아일랜드
+Countries[VI]=미국령 버진 아일랜드
+Countries[VN]=베트남
+Countries[VU]=바누아투
+Countries[WF]=왈리스-푸투나 제도
+Countries[WS]=사모아
+Countries[XK]=Republic of Kosovo
+Countries[YE]=예멘
+Countries[YT]=마요티
+Countries[ZA]=남아공
+Countries[ZM]=잠비아
+Countries[ZW]=짐바브웨
