--- a/share/locale/pol-PL.ini
+++ b/share/locale/pol-PL.ini
@@ -90,3 +90,259 @@ thu=Czwartek
 fri=Piątek
 sat=Sobota
 sun=Niedziela
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=pl
+[CountryNames]
+
+Countries[AD]=Andora
+Countries[AE]=Zjednoczone Emiraty Arabskie
+Countries[AF]=Afganistan
+Countries[AG]=Antigua i Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albania
+Countries[AM]=Armenia
+Countries[AO]=Angola
+Countries[AQ]=Antarktyka
+Countries[AR]=Argentyna
+Countries[AS]=Samoa Amerykańskie
+Countries[AT]=Austria
+Countries[AU]=Australia
+Countries[AW]=Aruba
+Countries[AX]=Wyspy Alandzkie
+Countries[AZ]=Azerbejdżan
+Countries[BA]=Bośnia i Hercegowina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesz
+Countries[BE]=Belgia
+Countries[BF]=Burkina Faso
+Countries[BG]=Bułgaria
+Countries[BH]=Bahrajn
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint Barthélemy
+Countries[BM]=Bermudy
+Countries[BN]=Brunei Darussalam
+Countries[BO]=Boliwia
+Countries[BQ]=Bonaire, Sint Eustatius i Saba
+Countries[BR]=Brazylia
+Countries[BS]=Bahamy
+Countries[BT]=Bhutan
+Countries[BV]=Wyspa Bouveta
+Countries[BW]=Botswana
+Countries[BY]=Białoruś
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Wyspy Kokosowe
+Countries[CD]=Kongo, Republika Demokratyczna
+Countries[CF]=Republika Środkowej Afryki
+Countries[CG]=Kongo
+Countries[CH]=Szwajcaria
+Countries[CI]=Wybrzeże Kości Słoniowej
+Countries[CK]=Wyspy Cooka
+Countries[CL]=Chile
+Countries[CM]=Kamerun
+Countries[CN]=Chiny
+Countries[CO]=Kolumbia
+Countries[CR]=Kostaryka
+Countries[CU]=Kuba
+Countries[CV]=Republika Zielonego Przylądka
+Countries[CW]=Curaçao
+Countries[CX]=Wyspa Bożego Narodzenia
+Countries[CY]=Cypr
+Countries[CZ]=Republika Czeska
+Countries[DE]=Niemcy
+Countries[DJ]=Dżibuti
+Countries[DK]=Dania
+Countries[DM]=Dominika
+Countries[DO]=Republika Dominikany
+Countries[DZ]=Algieria
+Countries[EC]=Ekwador
+Countries[EE]=Estonia
+Countries[EG]=Egipt
+Countries[EH]=Sahara Zachodnia
+Countries[ER]=Erytrea
+Countries[ES]=Hiszpania
+Countries[ET]=Etiopia
+Countries[FI]=Finlandia
+Countries[FJ]=Fidżi
+Countries[FK]=Falklandy
+Countries[FM]=Federalne Stany Mikronezji
+Countries[FO]=Wyspy Owcze
+Countries[FR]=Francja
+Countries[GA]=Gabon
+Countries[GB]=Zjednoczone Królestwo Wielkiej Brytanii
+Countries[GD]=Grenada
+Countries[GE]=Gruzja
+Countries[GF]=Gujana Francuska
+Countries[GG]=Wyspa Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grenlandia
+Countries[GM]=Gambia
+Countries[GN]=Gwinea
+Countries[GP]=Gwadelupa
+Countries[GQ]=Gwinea Równikowa
+Countries[GR]=Grecja
+Countries[GS]=Georgia Południowa i Sandwich Południowy
+Countries[GT]=Gwatemala
+Countries[GU]=Guam
+Countries[GW]=Gwinea Bissau
+Countries[GY]=Gujana
+Countries[HK]=Hongkong
+Countries[HM]=Wyspy Heard i McDonalda
+Countries[HN]=Honduras
+Countries[HR]=Chorwacja
+Countries[HT]=Haiti
+Countries[HU]=Węgry
+Countries[ID]=Indonezja
+Countries[IE]=Irlandia
+Countries[IL]=Izrael
+Countries[IM]=Wyspa Man
+Countries[IN]=Indie
+Countries[IO]=Terytorium Brytyjskie Oceanu Indyjskiego
+Countries[IQ]=Irak
+Countries[IR]=Iran
+Countries[IS]=Islandia
+Countries[IT]=Włochy
+Countries[JE]=Wyspa Jersey
+Countries[JM]=Jamajka
+Countries[JO]=Jordania
+Countries[JP]=Japonia
+Countries[KE]=Kenia
+Countries[KG]=Kirgistan
+Countries[KH]=Kambodża
+Countries[KI]=Kiribati
+Countries[KM]=Komory
+Countries[KN]=Saint Kitts i Nevis
+Countries[KP]=Koreańska Republika Ludowo-Demokratyczna
+Countries[KR]=Republika Korei
+Countries[KW]=Kuwejt
+Countries[KY]=Kajmany
+Countries[KZ]=Kazachstan
+Countries[LA]=Laos
+Countries[LB]=Liban
+Countries[LC]=Saint Lucia
+Countries[LI]=Lichtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesoto
+Countries[LT]=Litwa
+Countries[LU]=Luksemburg
+Countries[LV]=Łotwa
+Countries[LY]=Libijska
+Countries[MA]=Maroko
+Countries[MC]=Monako
+Countries[MD]=Mołdawia, Republika
+Countries[ME]=Czarnogóra
+Countries[MF]=Sint Maarten
+Countries[MG]=Madagaskar
+Countries[MH]=Wyspy Marshalla
+Countries[MK]=Była Jugosłowiańska Republika Macedonii
+Countries[ML]=Mali
+Countries[MM]=Myanmar
+Countries[MN]=Mongolia
+Countries[MO]=Makau
+Countries[MP]=Mariany Północne
+Countries[MQ]=Martynika
+Countries[MR]=Mauretania
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Malediwy
+Countries[MW]=Malawi
+Countries[MX]=Meksyk
+Countries[MY]=Malezja
+Countries[MZ]=Mozambik
+Countries[NA]=Namibia
+Countries[NC]=Nowa Kaledonia
+Countries[NE]=Niger
+Countries[NF]=Norfolk
+Countries[NG]=Nigeria
+Countries[NI]=Nikaragua
+Countries[NL]=Holandia
+Countries[NO]=Norwegia
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Nowa Zelandia
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Polinezja Francuska
+Countries[PG]=Papua Nowa Gwinea
+Countries[PH]=Filipiny
+Countries[PK]=Pakistan
+Countries[PL]=Rzeczpospolita Polska
+Countries[PM]=Saint-Pierre i Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Portoryko
+Countries[PS]=Terytoria Palestyńskie
+Countries[PT]=Portugalia
+Countries[PW]=Palau
+Countries[PY]=Paragwaj
+Countries[QA]=Katar
+Countries[RE]=Reunion
+Countries[RO]=Rumunia
+Countries[RS]=Serbia
+Countries[RU]=Rosja
+Countries[RW]=Rwanda
+Countries[SA]=Arabia Saudyjska
+Countries[SB]=Wyspy Salomona
+Countries[SC]=Seszele
+Countries[SD]=Sudan
+Countries[SE]=Szwecja
+Countries[SG]=Singapur
+Countries[SH]=Wyspa Świętej Heleny
+Countries[SI]=Słowenia
+Countries[SJ]=Svalbard i Jan Mayen
+Countries[SK]=Słowacja
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Surinam
+Countries[SS]=Sudan Południowy
+Countries[ST]=Wyspy Świętego Tomasza i Książęca
+Countries[SV]=Salwador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Syria
+Countries[SZ]=Suazi
+Countries[TC]=Turks i Caicos
+Countries[TD]=Czad
+Countries[TF]=Francuskie Terytoria Południowe
+Countries[TG]=Togo
+Countries[TH]=Tajlandia
+Countries[TJ]=Tadżykistan
+Countries[TK]=Tokelau
+Countries[TL]=Timor Wschodni
+Countries[TM]=Turkmenia
+Countries[TN]=Tunezja
+Countries[TO]=Tonga
+Countries[TR]=Turcja
+Countries[TT]=Trinidad i Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Tajwan
+Countries[TZ]=Tanzania
+Countries[UA]=Ukraina
+Countries[UG]=Uganda
+Countries[UM]=Dalekie Wyspy Mniejsze Stanów Zjednoczonych
+Countries[US]=Stany Zjednoczone
+Countries[UY]=Urugwaj
+Countries[UZ]=Uzbekistan
+Countries[VA]=Stolica Apostolska (Watykan)
+Countries[VC]=Saint Vincent and the Grenadines
+Countries[VE]=Wenezuela
+Countries[VG]=Brytyjskie Wyspy Dziewicze
+Countries[VI]=Wyspy Dziewicze Stanów Zjednoczonych
+Countries[VN]=Wietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wyspy Wallis i Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosowo
+Countries[YE]=Jemen
+Countries[YT]=Majotta
+Countries[ZA]=Afryka Południowa
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
