--- a/share/locale/rus-RU.ini
+++ b/share/locale/rus-RU.ini
@@ -119,3 +119,258 @@ thu=Четверг
 fri=Пятница
 sat=Суббота
 sun=Воскресенье
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=ru
+[CountryNames]
+
+Countries[AD]=Андорра
+Countries[AE]=ОАЭ
+Countries[AF]=Афганистан
+Countries[AG]=Антигуа и Барбуда
+Countries[AI]=Ангилья
+Countries[AL]=Албания
+Countries[AM]=Армения
+Countries[AO]=Ангола
+Countries[AQ]=Антарктида
+Countries[AR]=Аргентина
+Countries[AS]=Американское Самоа
+Countries[AT]=Австрия
+Countries[AU]=Австралия
+Countries[AW]=Аруба
+Countries[AX]=Аланды
+Countries[AZ]=Азербайджан
+Countries[BA]=Босния
+Countries[BB]=Барбадос
+Countries[BD]=Бангладеш
+Countries[BE]=Бельгия
+Countries[BF]=Буркина Фасо
+Countries[BG]=Болгария
+Countries[BH]=Бахрейн
+Countries[BI]=Бурунди
+Countries[BJ]=Бенин
+Countries[BL]=Остров Святого Бартоломея
+Countries[BM]=Бермудские о-ва
+Countries[BN]=Бруней Даруссалам
+Countries[BO]=Боливия
+Countries[BQ]=Бонайре, Синт-Эстатиус и Саба
+Countries[BR]=Бразилия
+Countries[BS]=Багамы
+Countries[BT]=Бутан
+Countries[BV]=Остров Буве
+Countries[BW]=Ботсвана
+Countries[BY]=Беларусь
+Countries[BZ]=Белиз
+Countries[CA]=Канада
+Countries[CC]=Кокосовые о-ва
+Countries[CD]=Заир
+Countries[CF]=ЦАР
+Countries[CG]=Конго
+Countries[CH]=Швейцария
+Countries[CI]=Кот-д'Ивуар
+Countries[CK]=Острова Кука
+Countries[CL]=Чили
+Countries[CM]=Камерун
+Countries[CN]=Китай
+Countries[CO]=Колумбия
+Countries[CR]=Коста-Рика
+Countries[CU]=Куба
+Countries[CV]=Острова Зеленого Мыса
+Countries[CW]=Кюрасао
+Countries[CX]=Остров Рождества
+Countries[CY]=Кипр
+Countries[CZ]=Чешская Республика
+Countries[DE]=Германия
+Countries[DJ]=Джибути
+Countries[DK]=Дания
+Countries[DM]=Остров Доминика
+Countries[DO]=Доминиканская Республика
+Countries[DZ]=Алжир
+Countries[EC]=Эквадор
+Countries[EE]=Эстония
+Countries[EG]=Египет
+Countries[EH]=Западная Сахара
+Countries[ER]=Эритрея
+Countries[ES]=Испания
+Countries[ET]=Эфиопия
+Countries[FI]=Финляндия
+Countries[FJ]=Фиджи
+Countries[FK]=Фолклендские о-ва
+Countries[FM]=Микронезия
+Countries[FO]=Фарерские о-ва
+Countries[FR]=Франция
+Countries[GA]=Габон
+Countries[GB]=Великобритания
+Countries[GD]=Гренада
+Countries[GE]=Грузия
+Countries[GF]=Французская Гвиана
+Countries[GG]=Гернси
+Countries[GH]=Гана
+Countries[GI]=Гибралтар
+Countries[GL]=Гренландия
+Countries[GM]=Гамбия
+Countries[GN]=Гвинея
+Countries[GP]=Гваделупа
+Countries[GQ]=Экваториальная Гвинея
+Countries[GR]=Греция
+Countries[GS]=Южная Джорджия и Южные Сандвичевы Острова
+Countries[GT]=Гватемала
+Countries[GU]=Гуам
+Countries[GW]=Гвинея-Биссау
+Countries[GY]=Гайана
+Countries[HK]=Гонконг
+Countries[HM]=Острова Херд и Макдональд
+Countries[HN]=Гондурас
+Countries[HR]=Хорватия
+Countries[HT]=Гаити
+Countries[HU]=Венгрия
+Countries[ID]=Индонезия
+Countries[IE]=Ирландия
+Countries[IL]=Израиль
+Countries[IM]=Мэн, о-в
+Countries[IN]=Индия
+Countries[IO]=Британская территория в Индийском океане
+Countries[IQ]=Ирак
+Countries[IR]=Иран
+Countries[IS]=Исландия
+Countries[IT]=Италия
+Countries[JE]=Джерси
+Countries[JM]=Ямайка
+Countries[JO]=Иордания
+Countries[JP]=Япония
+Countries[KE]=Кения
+Countries[KG]=Кыргызстан
+Countries[KH]=Камбоджа
+Countries[KI]=Кирибати
+Countries[KM]=Коморские о-ва
+Countries[KN]=Сент-Киттс и Невис
+Countries[KP]=Северная Корея
+Countries[KR]=Южная Корея
+Countries[KW]=Кувейт
+Countries[KY]=Каймановы Острова
+Countries[KZ]=Казахстан
+Countries[LA]=Лаос
+Countries[LB]=Ливан
+Countries[LC]=Сент-Люсия
+Countries[LI]=Лихтенштейн
+Countries[LK]=Шри-Ланка
+Countries[LR]=Либерия
+Countries[LS]=Лесото
+Countries[LT]=Литва
+Countries[LU]=Люксембург
+Countries[LV]=Латвия
+Countries[LY]=Ливия
+Countries[MA]=Марокко
+Countries[MC]=Монако
+Countries[MD]=Молдова
+Countries[ME]=Черногория
+Countries[MF]=Остров Святого Мартина
+Countries[MG]=Мадагаскар
+Countries[MH]=Маршалловы о-ва
+Countries[MK]=Македония
+Countries[ML]=Мали
+Countries[MM]=Мьянма
+Countries[MN]=Монголия
+Countries[MO]=Макао
+Countries[MP]=Северные Марианские о-ва
+Countries[MQ]=Мартиника
+Countries[MR]=Мавритания
+Countries[MS]=Монсеррат
+Countries[MT]=Мальта
+Countries[MU]=Маврикий
+Countries[MV]=Мальдивские о-ва
+Countries[MW]=Малави
+Countries[MX]=Мексика
+Countries[MY]=Малайзия
+Countries[MZ]=Мозамбик
+Countries[NA]=Намибия
+Countries[NC]=Новая Каледония
+Countries[NE]=Нигерия
+Countries[NF]=Остров Норфолк
+Countries[NG]=Нигерия
+Countries[NI]=Никарагуа
+Countries[NL]=Нидерланды
+Countries[NO]=Норвегия
+Countries[NP]=Непал
+Countries[NR]=Науру
+Countries[NU]=Ниуе
+Countries[NZ]=Новая Зеландия
+Countries[OM]=Оман
+Countries[PA]=Панама
+Countries[PE]=Перу
+Countries[PF]=Французская Полинезия
+Countries[PG]=Папуа – Новая Гвинея
+Countries[PH]=Филиппины
+Countries[PK]=Пакистан
+Countries[PL]=Польша
+Countries[PM]=Сен-Пьер и Микелон
+Countries[PN]=Питкэрн
+Countries[PR]=Пуэрто-Рико
+Countries[PS]=Палестинские территории
+Countries[PT]=Португалия
+Countries[PW]=Палау
+Countries[PY]=Парагвай
+Countries[QA]=Катар
+Countries[RE]=Реюньон
+Countries[RO]=Румыния
+Countries[RS]=Сербия
+Countries[RU]=Россия
+Countries[RW]=Руанда
+Countries[SA]=Саудовская Аравия
+Countries[SB]=Соломонские острова
+Countries[SC]=Сейшельские о-ва
+Countries[SD]=Судан
+Countries[SE]=Швеция
+Countries[SG]=Сингапур
+Countries[SH]=Остров Святой Елены
+Countries[SI]=Словения
+Countries[SJ]=Свальбард и Ян-Майен
+Countries[SK]=Словакия
+Countries[SL]=Сьерра-Леоне
+Countries[SM]=Сан-Марино
+Countries[SN]=Сенегал
+Countries[SO]=Сомали
+Countries[SR]=Суринам
+Countries[SS]=Южный Судан
+Countries[ST]=Сан-Томе и Принсипе
+Countries[SV]=Сальвадор
+Countries[SX]=Синт-Мартен
+Countries[SY]=Сирийская Арабская Республика
+Countries[SZ]=Свазиленд
+Countries[TC]=Острова Тёркс и Кайкос
+Countries[TD]=Чад
+Countries[TF]=Французские Южные Территории
+Countries[TG]=Того
+Countries[TH]=Тайланд
+Countries[TJ]=Таджикистан
+Countries[TK]=Токелау
+Countries[TL]=Восточный Тимор
+Countries[TM]=Туркменистан
+Countries[TN]=Тунис
+Countries[TO]=Тонга
+Countries[TR]=Турция
+Countries[TT]=Тринидад и Тобаго
+Countries[TV]=Тувалу
+Countries[TW]=Тайвань
+Countries[TZ]=Танзания
+Countries[UA]=Украина
+Countries[UG]=Уганда
+Countries[UM]=Внешние малые острова (США)
+Countries[US]=США
+Countries[UY]=Уругвай
+Countries[UZ]=Узбекистан
+Countries[VA]=Ватикан
+Countries[VC]=Сент-Винсент и Гренадины
+Countries[VE]=Венесуэла
+Countries[VG]=Британские Виргинские о-ва
+Countries[VI]=Виргинские о-ва (США)
+Countries[VN]=Вьетнам
+Countries[VU]=Вануату
+Countries[WF]=Уоллис и Футуна
+Countries[WS]=Самоа
+Countries[XK]=Косово
+Countries[YE]=Йемен
+Countries[YT]=Майотта
+Countries[ZA]=ЮАР
+Countries[ZM]=Замбия
+Countries[ZW]=Зимбабве
