--- a/share/locale/slk-SK.ini
+++ b/share/locale/slk-SK.ini
@@ -88,3 +88,259 @@ thu=štvrtok
 fri=piatok
 sat=sobota
 sun=nedeľa
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=sk
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Spojené arabské emiráty
+Countries[AF]=Afganistan
+Countries[AG]=Antigua a Barbados
+Countries[AI]=Anguilla
+Countries[AL]=Albánsko
+Countries[AM]=Arménsko
+Countries[AO]=Angola
+Countries[AQ]=Antarctica
+Countries[AR]=Argentína
+Countries[AS]=Americká Samoa
+Countries[AT]=Rakúsko
+Countries[AU]=Austrália
+Countries[AW]=Aruba
+Countries[AX]=Alandské ostrovy
+Countries[AZ]=Azerbajdžan
+Countries[BA]=Bosna a Hercegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladéš
+Countries[BE]=Belgicko
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulharsko
+Countries[BH]=Bahrajn
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Svätý Bartolomej
+Countries[BM]=Bermudy
+Countries[BN]=Brunej
+Countries[BO]=Bolívia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brazília
+Countries[BS]=Bahamy
+Countries[BT]=Bhután
+Countries[BV]=Bouvetov ostrov
+Countries[BW]=Botswana
+Countries[BY]=Bielorusko
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Kokosové ostrovy
+Countries[CD]=Kongo, demokratická republika
+Countries[CF]=Stredoafrická republika
+Countries[CG]=Kongo
+Countries[CH]=Švajčiarsko
+Countries[CI]=Pobrežie Slonoviny
+Countries[CK]=Cookove ostrovy
+Countries[CL]=Čile
+Countries[CM]=Kamerun
+Countries[CN]=Čína
+Countries[CO]=Kolumbia
+Countries[CR]=Kostarika
+Countries[CU]=Kuba
+Countries[CV]=Kapverdy
+Countries[CW]=Land Curaçao
+Countries[CX]=Vianočný ostrov
+Countries[CY]=Cyprus
+Countries[CZ]=Česká republika
+Countries[DE]=Nemecko
+Countries[DJ]=Džibuti
+Countries[DK]=Dánsko
+Countries[DM]=Dominika
+Countries[DO]=Dominikánska republika
+Countries[DZ]=Alžírsko
+Countries[EC]=Ekvádor
+Countries[EE]=Estónsko
+Countries[EG]=Egypt
+Countries[EH]=Západná Sahara
+Countries[ER]=Eritrea
+Countries[ES]=Španielsko
+Countries[ET]=Etiópia
+Countries[FI]=Fínsko
+Countries[FJ]=Fidži
+Countries[FK]=Falklandské ostrovy
+Countries[FM]=Mikronézia
+Countries[FO]=Faerské ostrovy
+Countries[FR]=Francúzsko
+Countries[GA]=Gabon
+Countries[GB]=Spojené kráľovstvo
+Countries[GD]=Grenada
+Countries[GE]=Gruzínsko
+Countries[GF]=Francúzska Guayana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltár
+Countries[GL]=Grónsko
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Rovníková Guinea
+Countries[GR]=Grécko
+Countries[GS]=Južná Georgia a Južné Sandwichove ostrovy
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guayana
+Countries[HK]=Hong Kong
+Countries[HM]=Heardove ostrovy a McDonaldove ostrovy
+Countries[HN]=Honduras
+Countries[HR]=Chorvátsko
+Countries[HT]=Haiti
+Countries[HU]=Maďarsko
+Countries[ID]=Indonézia
+Countries[IE]=Írsko
+Countries[IL]=Izrael
+Countries[IM]=Ostrov Man
+Countries[IN]=India
+Countries[IO]=Britské územie v Indickom oceáne
+Countries[IQ]=Irak
+Countries[IR]=Irán
+Countries[IS]=Island
+Countries[IT]=Taliansko
+Countries[JE]=Jersey
+Countries[JM]=Jamajka
+Countries[JO]=Jordánsko
+Countries[JP]=Japonsko
+Countries[KE]=Keňa
+Countries[KG]=Kirgizsko
+Countries[KH]=Kambodža
+Countries[KI]=Kiribati
+Countries[KM]=Komory
+Countries[KN]=Sv. Kitts a Nevis
+Countries[KP]=Severná Kórea
+Countries[KR]=Južná Kórea
+Countries[KW]=Kuvajt
+Countries[KY]=Kajmanské ostrovy
+Countries[KZ]=Kazachstan
+Countries[LA]=Laoská ľudovodemokratická republika
+Countries[LB]=Libanon
+Countries[LC]=Svätá Lucia
+Countries[LI]=Lichtenštajnsko
+Countries[LK]=Srí Lanka
+Countries[LR]=Libéria
+Countries[LS]=Lesotho
+Countries[LT]=Litva
+Countries[LU]=Luxembursko
+Countries[LV]=Lotyšsko
+Countries[LY]=Lýbijská arabská džamahírija
+Countries[MA]=Maroko
+Countries[MC]=Monako
+Countries[MD]=Moldavsko, republika
+Countries[ME]=Čierna Hora
+Countries[MF]=Svätý Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Marshallove ostrovy
+Countries[MK]=Macedónsko, republika
+Countries[ML]=Mali
+Countries[MM]=Myanmar
+Countries[MN]=Mongolsko
+Countries[MO]=Makao
+Countries[MP]=Severné Mariány
+Countries[MQ]=Martinik
+Countries[MR]=Mauritánia
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Maurícius
+Countries[MV]=Maldivy
+Countries[MW]=Malawi
+Countries[MX]=Maxiko
+Countries[MY]=Malajzia
+Countries[MZ]=Mozambik
+Countries[NA]=Namíbia
+Countries[NC]=Nová Kaledónia
+Countries[NE]=Niger
+Countries[NF]=Norfolkov ostrov
+Countries[NG]=Nigéria
+Countries[NI]=Nikaragua
+Countries[NL]=Holandsko
+Countries[NO]=Nórsko
+Countries[NP]=Nepál
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Nový Zéland
+Countries[OM]=Omán
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Francúzska Polynézia
+Countries[PG]=Papua Nová Guinea
+Countries[PH]=Filipíny
+Countries[PK]=Pakistan
+Countries[PL]=Poľsko
+Countries[PM]=Saint Pierre a Miquelon
+Countries[PN]=Pitcairnove ostrovy
+Countries[PR]=Portoriko
+Countries[PS]=Palestínske územie
+Countries[PT]=Portugalsko
+Countries[PW]=Palau
+Countries[PY]=Paraguaj
+Countries[QA]=Katar
+Countries[RE]=Reunion
+Countries[RO]=Rumunsko
+Countries[RS]=Srbsko
+Countries[RU]=Rusko
+Countries[RW]=Rwanda
+Countries[SA]=Saudská Arábia
+Countries[SB]=Šalamúnove ostrovy
+Countries[SC]=Seychelské ostrovy
+Countries[SD]=Sudán
+Countries[SE]=Švédsko
+Countries[SG]=Singapur
+Countries[SH]=Svätá Helena
+Countries[SI]=Slovinsko
+Countries[SJ]=Špicbergy a Jan Mayen
+Countries[SK]=Slovenská republika
+Countries[SL]=Sierra Leone
+Countries[SM]=San Maríno
+Countries[SN]=Senegal
+Countries[SO]=Somálsko
+Countries[SR]=Surinam
+Countries[SS]=South Sudan
+Countries[ST]=Svätý Tom a Principe
+Countries[SV]=Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Sýrska arabská republika
+Countries[SZ]=Svazijsko
+Countries[TC]=Turks a Caicos
+Countries[TD]=Čad
+Countries[TF]=Francúzske južné územia
+Countries[TG]=Togo
+Countries[TH]=Thajsko
+Countries[TJ]=Tadžikistan
+Countries[TK]=Tokelau
+Countries[TL]=Východný Timor
+Countries[TM]=Turkménsko
+Countries[TN]=Tunisko
+Countries[TO]=Tonga
+Countries[TR]=Turecko
+Countries[TT]=Trinidad a Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Tajwan
+Countries[TZ]=Tanzánia
+Countries[UA]=Ukrajina
+Countries[UG]=Uganda
+Countries[UM]=Menšie odľahlé ostrovy USA
+Countries[US]=Spojené štáty americké
+Countries[UY]=Uruguaj
+Countries[UZ]=Uzbekistan
+Countries[VA]=Vatikán
+Countries[VC]=Svätý Vincent a Grenadíny
+Countries[VE]=Venezuela
+Countries[VG]=Britské panenské ostrovy
+Countries[VI]=Panenské ostrovy - USA
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis a Futuna
+Countries[WS]=Samoa
+Countries[XK]=Republic of Kosovo
+Countries[YE]=Jemen
+Countries[YT]=Mayotte
+Countries[ZA]=Južná Afrika
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
