--- a/share/locale/srp-RS.ini
+++ b/share/locale/srp-RS.ini
@@ -103,3 +103,258 @@ thu=Четвртак
 fri=Петак
 sat=Субота
 sun=Недеља
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=sr
+[CountryNames]
+
+Countries[AD]=Андора
+Countries[AE]=Уједињени Арапски Емирати
+Countries[AF]=Авганистан
+Countries[AG]=Антигве и Барбуда
+Countries[AI]=Ангвила
+Countries[AL]=Албанија
+Countries[AM]=Арменија
+Countries[AO]=Ангола
+Countries[AQ]=Антарктик
+Countries[AR]=Аргентина
+Countries[AS]=Америчка Самоа
+Countries[AT]=Аустрија
+Countries[AU]=Аустралија
+Countries[AW]=Аруба
+Countries[AX]=Оландска Острва
+Countries[AZ]=Азербејџан
+Countries[BA]=Босна и Херцеговина
+Countries[BB]=Барбадос
+Countries[BD]=Бангладеш
+Countries[BE]=Белгија
+Countries[BF]=Буркина Фасо
+Countries[BG]=Бугарска
+Countries[BH]=Бахреин
+Countries[BI]=Бурунди
+Countries[BJ]=Бенин
+Countries[BL]=Свети Бартоломеј
+Countries[BM]=Бермуда
+Countries[BN]=Брунеј
+Countries[BO]=Боливија
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Браѕил
+Countries[BS]=Бахами
+Countries[BT]=Бутан
+Countries[BV]=Буве Острва
+Countries[BW]=Боцвана
+Countries[BY]=Белорусија
+Countries[BZ]=Белисе
+Countries[CA]=Канада
+Countries[CC]=Кокос (Келинг) Острва
+Countries[CD]=Конго, Демократска Република
+Countries[CF]=Централна Афричка Република
+Countries[CG]=Конго - Бразавил
+Countries[CH]=Швајцарска
+Countries[CI]=Обала Слоноваче
+Countries[CK]=Кукова Острва
+Countries[CL]=Чиле
+Countries[CM]=Камерун
+Countries[CN]=Кина
+Countries[CO]=Колумбија
+Countries[CR]=Костарика
+Countries[CU]=Куба
+Countries[CV]=Капе Верде
+Countries[CW]=Land Curaçao
+Countries[CX]=Божићна острва
+Countries[CY]=Кипар
+Countries[CZ]=Чешка
+Countries[DE]=Немачка
+Countries[DJ]=Џибути
+Countries[DK]=Данска
+Countries[DM]=Доминика
+Countries[DO]=Доминиканска Република
+Countries[DZ]=Алжир
+Countries[EC]=Еквадор
+Countries[EE]=Естонија
+Countries[EG]=Египат
+Countries[EH]=Западна Сахара
+Countries[ER]=Еритреа
+Countries[ES]=Шпанија
+Countries[ET]=Етиопија
+Countries[FI]=Финска
+Countries[FJ]=Фиџи
+Countries[FK]=Фокландска острва
+Countries[FM]=Микронезија
+Countries[FO]=Фарска Острва
+Countries[FR]=Француска
+Countries[GA]=Габон
+Countries[GB]=Велика Британија
+Countries[GD]=Гренада
+Countries[GE]=Грузија
+Countries[GF]=Француска Гвајана
+Countries[GG]=Гурнси
+Countries[GH]=Гана
+Countries[GI]=Гибралтар
+Countries[GL]=Гренланд
+Countries[GM]=Гамбија
+Countries[GN]=Гвинеја
+Countries[GP]=Гваделупе
+Countries[GQ]=Екваторијална Гвинеја
+Countries[GR]=Грчка
+Countries[GS]=Јужна Џорџија и Јужна Сендвич Острва
+Countries[GT]=Гватемала
+Countries[GU]=Гуам
+Countries[GW]=Гвинеа-Бисау
+Countries[GY]=Гвајана
+Countries[HK]=Хонг Конг
+Countries[HM]=Херд и Мекдоналд Острва
+Countries[HN]=Хондурас
+Countries[HR]=Хрватска
+Countries[HT]=Хаити
+Countries[HU]=Мађарска
+Countries[ID]=Индонезија
+Countries[IE]=Ирска
+Countries[IL]=Израел
+Countries[IM]=Острво Човека
+Countries[IN]=Индија
+Countries[IO]=Британска територија у Индијском океану
+Countries[IQ]=Ирак
+Countries[IR]=Иран
+Countries[IS]=Исланд
+Countries[IT]=Италија
+Countries[JE]=Џерси
+Countries[JM]=Јамајка
+Countries[JO]=Јордан
+Countries[JP]=Јапан
+Countries[KE]=Кенија
+Countries[KG]=Киргистан
+Countries[KH]=Камбоџа
+Countries[KI]=Кирибати
+Countries[KM]=Коморос
+Countries[KN]=Сент Китс и Невис
+Countries[KP]=Северна Кореја
+Countries[KR]=Јужна Кореја
+Countries[KW]=Кувајт
+Countries[KY]=Кајманска Острва
+Countries[KZ]=Казахстан
+Countries[LA]=Лаос
+Countries[LB]=Либан
+Countries[LC]=Света Луција
+Countries[LI]=Лихтенштајн
+Countries[LK]=Шри Ланка
+Countries[LR]=Либериа
+Countries[LS]=Лесото
+Countries[LT]=Литванија
+Countries[LU]=Луксембург
+Countries[LV]=Летонија
+Countries[LY]=Либија
+Countries[MA]=Мароко
+Countries[MC]=Монако
+Countries[MD]=Молдавија
+Countries[ME]=Црна Гора
+Countries[MF]=Сент Мартин
+Countries[MG]=Мадагаскар
+Countries[MH]=Маршалска Острва
+Countries[MK]=Македонија
+Countries[ML]=Мали
+Countries[MM]=Мијанмар [Бурма]
+Countries[MN]=Монголија
+Countries[MO]=Макао
+Countries[MP]=Северна Маријанска Острва
+Countries[MQ]=Мартиник
+Countries[MR]=Мауританија
+Countries[MS]=Монсерат
+Countries[MT]=Малта
+Countries[MU]=Маурицијус
+Countries[MV]=Малдиви
+Countries[MW]=Малави
+Countries[MX]=Мексико
+Countries[MY]=Малезија
+Countries[MZ]=Мозамбик
+Countries[NA]=Намибија
+Countries[NC]=Нова Каледонија
+Countries[NE]=Нигер
+Countries[NF]=Норфолк Острво
+Countries[NG]=Нигерија
+Countries[NI]=Никарагва
+Countries[NL]=Холандија
+Countries[NO]=Норвешка
+Countries[NP]=Непал
+Countries[NR]=Науру
+Countries[NU]=Ниуе
+Countries[NZ]=Нови Зеланд
+Countries[OM]=Оман
+Countries[PA]=Панама
+Countries[PE]=Перу
+Countries[PF]=Француска Полинезија
+Countries[PG]=Папуа Нова Гвинеја
+Countries[PH]=Филипини
+Countries[PK]=Пакистан
+Countries[PL]=Пољска
+Countries[PM]=Сен Пјер и Микелон
+Countries[PN]=Питкерн
+Countries[PR]=Порто Рико
+Countries[PS]=Палестинске територије
+Countries[PT]=Португал
+Countries[PW]=Палау
+Countries[PY]=Парагвај
+Countries[QA]=Катар
+Countries[RE]=Реинион
+Countries[RO]=Румунија
+Countries[RS]=Србија
+Countries[RU]=Русија
+Countries[RW]=Руанда
+Countries[SA]=Саудијска Арабија
+Countries[SB]=Соломонска Острва
+Countries[SC]=Сејшели
+Countries[SD]=Судан
+Countries[SE]=Шведска
+Countries[SG]=Сингапур
+Countries[SH]=Света Јелена
+Countries[SI]=Словенија
+Countries[SJ]=Свалбард и Јанмајен Острва
+Countries[SK]=Словачка
+Countries[SL]=Сиера Леоне
+Countries[SM]=Сан Марино
+Countries[SN]=Сенегал
+Countries[SO]=Сомалија
+Countries[SR]=Суринами
+Countries[SS]=South Sudan
+Countries[ST]=Сао Томе и Принципи
+Countries[SV]=Салвадор
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Сирија
+Countries[SZ]=Свазиленд
+Countries[TC]=Туркс и Кајкос Острва
+Countries[TD]=Чад
+Countries[TF]=Француске Јужне Територије
+Countries[TG]=Того
+Countries[TH]=Тајланд
+Countries[TJ]=Таџикистан
+Countries[TK]=Токелау
+Countries[TL]=Тимор-Лесте
+Countries[TM]=Туркменистан
+Countries[TN]=Тунис
+Countries[TO]=Тонга
+Countries[TR]=Турска
+Countries[TT]=Тринидад и Тобаго
+Countries[TV]=Тувалу
+Countries[TW]=Тајван
+Countries[TZ]=Танзанија
+Countries[UA]=Украјина
+Countries[UG]=Уганда
+Countries[UM]=Мања удаљена острва САД
+Countries[US]=Сједињене Државе
+Countries[UY]=Уругвај
+Countries[UZ]=Узбекистан
+Countries[VA]=Ватикан
+Countries[VC]=Свети Винсент и Гренадине
+Countries[VE]=Венецуела
+Countries[VG]=Британска Девичанска Острва
+Countries[VI]=С.А.Д. Девичанска Острва
+Countries[VN]=Вијетнам
+Countries[VU]=Ванату
+Countries[WF]=Валис и Футуна Острва
+Countries[WS]=Самоа
+Countries[XK]=Republika Kosovo
+Countries[YE]=Јемен
+Countries[YT]=Мајоте
+Countries[ZA]=Јужна Африка
+Countries[ZM]=Замбија
+Countries[ZW]=Зимбабве
