--- a/share/locale/swe-SE.ini
+++ b/share/locale/swe-SE.ini
@@ -100,3 +100,259 @@ thu=torsdag
 fri=fredag
 sat=lördag
 sun=söndag
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=sv
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Förenade Arabemiraten
+Countries[AF]=Afghanistan
+Countries[AG]=Antigua och Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albanien
+Countries[AM]=Armenien
+Countries[AO]=Angola
+Countries[AQ]=Antarktis
+Countries[AR]=Argentina
+Countries[AS]=Amerikanska Samoa
+Countries[AT]=Österrike
+Countries[AU]=Australien
+Countries[AW]=Aruba
+Countries[AX]=Ålands län
+Countries[AZ]=Azerbajdzjan
+Countries[BA]=Bosnien-Hercegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesh
+Countries[BE]=Belgien
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgarien
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=S:t Barthélemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei
+Countries[BO]=Bolivia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brasilien
+Countries[BS]=Bahamas
+Countries[BT]=Bhutan
+Countries[BV]=Bouvetön
+Countries[BW]=Botswana
+Countries[BY]=Vitryssland
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Kokosöarna
+Countries[CD]=Demokratiska Republiken Kongo
+Countries[CF]=Centralafrikanska republiken
+Countries[CG]=Kongo
+Countries[CH]=Schweiz
+Countries[CI]=Elfenbenskusten
+Countries[CK]=Cooköarna
+Countries[CL]=Chile
+Countries[CM]=Kamerun
+Countries[CN]=Kina
+Countries[CO]=Colombia
+Countries[CR]=Costa Rica
+Countries[CU]=Kuba
+Countries[CV]=Kap Verde
+Countries[CW]=Land Curaçao
+Countries[CX]=Julön
+Countries[CY]=Cypern
+Countries[CZ]=Tjeckien
+Countries[DE]=Tyskland
+Countries[DJ]=Djibouti
+Countries[DK]=Danmark
+Countries[DM]=Dominica
+Countries[DO]=Dominikanska republiken
+Countries[DZ]=Algeriet
+Countries[EC]=Ecuador
+Countries[EE]=Estland
+Countries[EG]=Egypten
+Countries[EH]=Västsahara
+Countries[ER]=Eritrea
+Countries[ES]=Spanien
+Countries[ET]=Etiopien
+Countries[FI]=Finland
+Countries[FJ]=Fiji
+Countries[FK]=Falklandsöarna
+Countries[FM]=Mikronesien
+Countries[FO]=Färöarna
+Countries[FR]=Frankrike
+Countries[GA]=Gabon
+Countries[GB]=Storbritannien
+Countries[GD]=Grenada
+Countries[GE]=Georgien
+Countries[GF]=Franska Guyana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grönland
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Ekvatorialguinea
+Countries[GR]=Grekland
+Countries[GS]=Sydgeorgien och Sydsandwichöarna
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hongkong
+Countries[HM]=Heard- och McDonaldöarna
+Countries[HN]=Honduras
+Countries[HR]=Kroatien
+Countries[HT]=Haiti
+Countries[HU]=Ungern
+Countries[ID]=Indonesien
+Countries[IE]=Irland
+Countries[IL]=Israel
+Countries[IM]=Isle of Man
+Countries[IN]=Indien
+Countries[IO]=Brittiska Indiska oceanöarna
+Countries[IQ]=Irak
+Countries[IR]=Iran
+Countries[IS]=Island
+Countries[IT]=Italien
+Countries[JE]=Jersey
+Countries[JM]=Jamaica
+Countries[JO]=Jordanien
+Countries[JP]=Japan
+Countries[KE]=Kenya
+Countries[KG]=Kirgizistan
+Countries[KH]=Kambodja
+Countries[KI]=Kiribati
+Countries[KM]=Komorerna
+Countries[KN]=Saint Kitts och Nevis
+Countries[KP]=Nordkorea
+Countries[KR]=Sydkorea
+Countries[KW]=Kuwait
+Countries[KY]=Caymanöarna
+Countries[KZ]=Kazakstan
+Countries[LA]=Laos
+Countries[LB]=Libanon
+Countries[LC]=Saint Lucia
+Countries[LI]=Lichtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Litauen
+Countries[LU]=Luxemburg
+Countries[LV]=Lettland
+Countries[LY]=Libyen
+Countries[MA]=Marocko
+Countries[MC]=Monaco
+Countries[MD]=Moldavien
+Countries[ME]=Montenegro
+Countries[MF]=S:t Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Marshallöarna
+Countries[MK]=Makedonien
+Countries[ML]=Mali
+Countries[MM]=Myanmar
+Countries[MN]=Mongoliet
+Countries[MO]=Macao
+Countries[MP]=Nordmarianerna
+Countries[MQ]=Martinique
+Countries[MR]=Mauretanien
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Maldiverna
+Countries[MW]=Malawi
+Countries[MX]=Mexiko
+Countries[MY]=Malaysia
+Countries[MZ]=Moçambique
+Countries[NA]=Namibia
+Countries[NC]=Nya Kaledonien
+Countries[NE]=Niger
+Countries[NF]=Norfolkön
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Nederländerna
+Countries[NO]=Norge
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Nya Zeeland
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Franska Polynesien
+Countries[PG]=Papua Nya Guinea
+Countries[PH]=Filippinerna
+Countries[PK]=Pakistan
+Countries[PL]=Polen
+Countries[PM]=S:t Pierre och Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Puerto Rico
+Countries[PS]=Palestinska territoriet
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Réunion
+Countries[RO]=Rumänien
+Countries[RS]=Serbien
+Countries[RU]=Ryssland
+Countries[RW]=Rwanda
+Countries[SA]=Saudiarabien
+Countries[SB]=Salomonöarna
+Countries[SC]=Seychellerna
+Countries[SD]=Sudan
+Countries[SE]=Sverige
+Countries[SG]=Singapore
+Countries[SH]=S:t Helena
+Countries[SI]=Slovenien
+Countries[SJ]=Svalbard och Jan Mayen
+Countries[SK]=Slovakien
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Surinam
+Countries[SS]=Sydsudan
+Countries[ST]=Sao Tomé och Principe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Syrien
+Countries[SZ]=Swaziland
+Countries[TC]=Turks- och Caicosöarna
+Countries[TD]=Tchad
+Countries[TF]=Franska Sydterritorierna
+Countries[TG]=Togo
+Countries[TH]=Thailand
+Countries[TJ]=Tadzjikistan
+Countries[TK]=Tokelau
+Countries[TL]=Östtimor
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunisien
+Countries[TO]=Tonga
+Countries[TR]=Turkiet
+Countries[TT]=Trinidad och Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tanzania
+Countries[UA]=Ukraina
+Countries[UG]=Uganda
+Countries[UM]=USA:s yttre öar
+Countries[US]=USA
+Countries[UY]=Uruguay
+Countries[UZ]=Uzbekistan
+Countries[VA]=Vatikanen
+Countries[VC]=S:t Vincent och Grenadinerna
+Countries[VE]=Venezuela
+Countries[VG]=Brittiska Jungfruöarna
+Countries[VI]=Amerikanska Jungfruöarna
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis och Futuna
+Countries[WS]=Samoa
+Countries[XK]=Republic of Kosovo
+Countries[YE]=Yemen
+Countries[YT]=Mayotte
+Countries[ZA]=Sydafrika
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
