--- a/share/locale/tur-TR.ini
+++ b/share/locale/tur-TR.ini
@@ -105,3 +105,259 @@ thu=perşembe
 fri=cuma
 sat=cumartesi
 sun=pazar
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=tr
+[CountryNames]
+
+Countries[AD]=Andora
+Countries[AE]=Birleşik Arap Emirlikleri
+Countries[AF]=Afganistan
+Countries[AG]=Antigua ve Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Arnavutluk
+Countries[AM]=Ermenistan
+Countries[AO]=Angola
+Countries[AQ]=Antarktika
+Countries[AR]=Arjantin
+Countries[AS]=Amerikan Samoası
+Countries[AT]=Avusturya
+Countries[AU]=Avustralya
+Countries[AW]=Aruba
+Countries[AX]=Aland Adaları
+Countries[AZ]=Azerbaycan
+Countries[BA]=Bosna Hersek
+Countries[BB]=Barbados
+Countries[BD]=Bangladeş
+Countries[BE]=Belçika
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgaristan
+Countries[BH]=Bahreyn
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint Barthelemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei
+Countries[BO]=Bolivya
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brezilya
+Countries[BS]=Bahamalar
+Countries[BT]=Bhutan
+Countries[BV]=Bouvet Adası
+Countries[BW]=Botswana
+Countries[BY]=Beyaz Rusya
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Cocos Adaları
+Countries[CD]=Kongo Cumhuriyeti
+Countries[CF]=Orta Afrika Cumhuriyeti
+Countries[CG]=Kongo - Brazzaville
+Countries[CH]=İsviçre
+Countries[CI]=Fildişi Sahilleri
+Countries[CK]=Cook Adaları
+Countries[CL]=Şili
+Countries[CM]=Kamerun
+Countries[CN]=Çin
+Countries[CO]=Kolombiya
+Countries[CR]=Kosta Rika
+Countries[CU]=Küba
+Countries[CV]=Yeşilburun
+Countries[CW]=Land Curaçao
+Countries[CX]=Christmas Adası
+Countries[CY]=Kıbrıs
+Countries[CZ]=Çek Cumhuriyeti
+Countries[DE]=Almanya
+Countries[DJ]=Cibuti
+Countries[DK]=Danimarka
+Countries[DM]=Dominika
+Countries[DO]=Dominik Cumhuriyeti
+Countries[DZ]=Cezayir
+Countries[EC]=Ekvador
+Countries[EE]=Estonya
+Countries[EG]=Mısır
+Countries[EH]=Batı Sahara
+Countries[ER]=Eritre
+Countries[ES]=İspanya
+Countries[ET]=Etiyopya
+Countries[FI]=Finlandiya
+Countries[FJ]=Fiji
+Countries[FK]=Falkland Adaları
+Countries[FM]=Mikronezya Federal Eyaletleri
+Countries[FO]=Faroe Adaları
+Countries[FR]=Fransa
+Countries[GA]=Gabon
+Countries[GB]=İngiltere
+Countries[GD]=Granada
+Countries[GE]=Gürcistan
+Countries[GF]=Fransız Guyanası
+Countries[GG]=Guernsey
+Countries[GH]=Gana
+Countries[GI]=Cebelitarık
+Countries[GL]=Grönland
+Countries[GM]=Gambia
+Countries[GN]=Gine
+Countries[GP]=Guadalupe
+Countries[GQ]=Ekvator Ginesi
+Countries[GR]=Yunanistan
+Countries[GS]=Güney Georgia ve Güney Sandwich Adaları
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Gine-Biso
+Countries[GY]=Guyana
+Countries[HK]=Hong Kong
+Countries[HM]=Heard Adası ve McDonald Adaları
+Countries[HN]=Honduras
+Countries[HR]=Hırvatistan
+Countries[HT]=Haiti
+Countries[HU]=Macaristan
+Countries[ID]=Endonezya
+Countries[IE]=İrlanda
+Countries[IL]=İsrail
+Countries[IM]=Man Adası
+Countries[IN]=Hindistan
+Countries[IO]=İngiliz Hint Okyanusu Bölgesi
+Countries[IQ]=Irak
+Countries[IR]=İran
+Countries[IS]=İzlanda
+Countries[IT]=İtalya
+Countries[JE]=Jersey
+Countries[JM]=Jamaika
+Countries[JO]=Ürdün
+Countries[JP]=Japonya
+Countries[KE]=Kenya
+Countries[KG]=Kırgızistan
+Countries[KH]=Kamboçya
+Countries[KI]=Kiribati
+Countries[KM]=Komoros
+Countries[KN]=Saint Kitts ve Nevis
+Countries[KP]=Kuzey Kore
+Countries[KR]=Güney Kore
+Countries[KW]=Kuveyt
+Countries[KY]=Cayman Adaları
+Countries[KZ]=Kazakistan
+Countries[LA]=Laos
+Countries[LB]=Lübnan
+Countries[LC]=Saint Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberya
+Countries[LS]=Lesotho
+Countries[LT]=Litvanya
+Countries[LU]=Lüksemburg
+Countries[LV]=Letonya
+Countries[LY]=Libya
+Countries[MA]=Fas
+Countries[MC]=Monako
+Countries[MD]=Moldovya
+Countries[ME]=Karadağ
+Countries[MF]=Saint Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Marshall Adaları
+Countries[MK]=Makedonya
+Countries[ML]=Mali
+Countries[MM]=Birmanya
+Countries[MN]=Moğolistan
+Countries[MO]=Macau
+Countries[MP]=Kuzey Mariana Adaları
+Countries[MQ]=Martinik
+Countries[MR]=Moritanya
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Maldivler
+Countries[MW]=Malavi
+Countries[MX]=Meksika
+Countries[MY]=Malezya
+Countries[MZ]=Mozambik
+Countries[NA]=Namibya
+Countries[NC]=Yeni Kaledonya
+Countries[NE]=Nijer
+Countries[NF]=Norfolk Adası
+Countries[NG]=Nijerya
+Countries[NI]=Nikaragua
+Countries[NL]=Hollanda
+Countries[NO]=Norveç
+Countries[NP]=Nepal
+Countries[NR]=Nauru Adası
+Countries[NU]=Niue Adaları
+Countries[NZ]=Yeni Zelanda
+Countries[OM]=Umman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Fransız Polinezyası
+Countries[PG]=Papua Yeni Gine
+Countries[PH]=Filipinler
+Countries[PK]=Pakistan
+Countries[PL]=Polonya
+Countries[PM]=Saint Pierre ve Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Porto Riko
+Countries[PS]=Filistin Bölgesi
+Countries[PT]=Portekiz
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Katar
+Countries[RE]=Reunion
+Countries[RO]=Romanya
+Countries[RS]=Sırbistan
+Countries[RU]=Rusya
+Countries[RW]=Ruanda
+Countries[SA]=Suudi Arabistan
+Countries[SB]=Solomon Adaları
+Countries[SC]=Seychelles
+Countries[SD]=Sudan
+Countries[SE]=İsveç
+Countries[SG]=Singapur
+Countries[SH]=Saint Helena
+Countries[SI]=Slovenya
+Countries[SJ]=Svalbard ve Jan Mayen Adaları
+Countries[SK]=Slovakya
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somali
+Countries[SR]=Surinam
+Countries[SS]=South Sudan
+Countries[ST]=São Tomé and Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Suriye
+Countries[SZ]=Svaziland
+Countries[TC]=Turks ve Caicos Adaları
+Countries[TD]=Çad
+Countries[TF]=Fransız Güney Bölgeleri
+Countries[TG]=Togo
+Countries[TH]=Tayland
+Countries[TJ]=Tacikistan
+Countries[TK]=Tokelau
+Countries[TL]=Doğu Timor
+Countries[TM]=Türkmenistan
+Countries[TN]=Tunus
+Countries[TO]=Tonga
+Countries[TR]=Türkiye Cumhuriyeti
+Countries[TT]=Trinidad ve Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Tayvan
+Countries[TZ]=Tanzanya
+Countries[UA]=Ukrayna
+Countries[UG]=Uganda
+Countries[UM]=Amerika Birleşik Devletleri Küçük Dış Adaları
+Countries[US]=ABD
+Countries[UY]=Uruguay
+Countries[UZ]=Özbekistan
+Countries[VA]=Vatikan
+Countries[VC]=Saint Vincent ve Grenadines
+Countries[VE]=Venezuela
+Countries[VG]=İngiliz Virgin Adaları
+Countries[VI]=ABD Virgin Adaları
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis ve Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosova
+Countries[YE]=Yemen
+Countries[YT]=Mayotte
+Countries[ZA]=Güney Afrika
+Countries[ZM]=Zambiya
+Countries[ZW]=Zimbabve
