--- a/share/locale/ukr-UA.ini
+++ b/share/locale/ukr-UA.ini
@@ -90,3 +90,259 @@ thu=Четвер
 fri=П'ятниця
 sat=Субота
 sun=Неділя
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=uk
+[CountryNames]
+
+Countries[AD]=Андорра
+Countries[AE]=Обʼєднані Арабські Емірати
+Countries[AF]=Афганістан
+Countries[AG]=Антігуа і Барбуда
+Countries[AI]=Ангілья
+Countries[AL]=Албанія
+Countries[AM]=Вірменія
+Countries[AO]=Ангола
+Countries[AQ]=Антарктида
+Countries[AR]=Аргентина
+Countries[AS]=Американське Самоа
+Countries[AT]=Австрія
+Countries[AU]=Австралія
+Countries[AW]=Аруба
+Countries[AX]=Аландські острови
+Countries[AZ]=Азербайджан
+Countries[BA]=Боснія та Герцоговина
+Countries[BB]=Барбадос
+Countries[BD]=Бангладеш
+Countries[BE]=Бельгія
+Countries[BF]=Буркіна-Фасо
+Countries[BG]=Болгарія
+Countries[BH]=Бахрейн
+Countries[BI]=Бурунді
+Countries[BJ]=Бенін
+Countries[BL]=Сен-Бартельмі
+Countries[BM]=Бермуди
+Countries[BN]=Бруней
+Countries[BO]=Болівія
+Countries[BQ]=Нідерландські Карибські острови
+Countries[BR]=Бразілія
+Countries[BS]=Багами
+Countries[BT]=Бутан
+Countries[BV]=Острів Буве
+Countries[BW]=Ботсвана
+Countries[BY]=Білорусь
+Countries[BZ]=Беліз
+Countries[CA]=Канада
+Countries[CC]=Кокосові острови
+Countries[CD]=Демократична республіка Конго
+Countries[CF]=Центральноафриканська Республіка
+Countries[CG]=Конґо - Браззавіль
+Countries[CH]=Швейцарія
+Countries[CI]=Кот д’Івуар
+Countries[CK]=Острови Кука
+Countries[CL]=Чілі
+Countries[CM]=Камерун
+Countries[CN]=Китай
+Countries[CO]=Колумбія
+Countries[CR]=Коста-Рика
+Countries[CU]=Куба
+Countries[CV]=Кабо-Верде
+Countries[CW]=Кюрасао
+Countries[CX]=Острів Різдва
+Countries[CY]=Кіпр
+Countries[CZ]=Чеська республіка
+Countries[DE]=Німеччина
+Countries[DJ]=Джібуті
+Countries[DK]=Данія
+Countries[DM]=Домінік
+Countries[DO]=Домініканська Республіка
+Countries[DZ]=Алжирія
+Countries[EC]=Еквадор
+Countries[EE]=Естонія
+Countries[EG]=Єгипет
+Countries[EH]=Західна Сахара
+Countries[ER]=Ерітрея
+Countries[ES]=Іспанія
+Countries[ET]=Ефіопія
+Countries[FI]=Фінляндія
+Countries[FJ]=Фіджі
+Countries[FK]=Фолклендські острови
+Countries[FM]=Мікронезія
+Countries[FO]=Острови Фаро
+Countries[FR]=Франція
+Countries[GA]=Габон
+Countries[GB]=Сполучене Королівство
+Countries[GD]=Гренада
+Countries[GE]=Грузія
+Countries[GF]=Французька Гвіана
+Countries[GG]=Гернсі
+Countries[GH]=Гана
+Countries[GI]=Гібралтар
+Countries[GL]=Ґренландія
+Countries[GM]=Гамбія
+Countries[GN]=Ґвінея
+Countries[GP]=Гваделупа
+Countries[GQ]=Екваторіальна Ґвінея
+Countries[GR]=Греція
+Countries[GS]=Південна Джорджія та Південні Сандвічеві Острови
+Countries[GT]=Гватемала
+Countries[GU]=Гуам
+Countries[GW]=Гвінея-Бісау
+Countries[GY]=Гайана
+Countries[HK]=Гонконґ
+Countries[HM]=Острови Херд і Мак-Дональд
+Countries[HN]=Гондурас
+Countries[HR]=Хорватія
+Countries[HT]=Гаїті
+Countries[HU]=Угорщина
+Countries[ID]=Індонезія
+Countries[IE]=Ірландія
+Countries[IL]=Ізраїль
+Countries[IM]=Острів Мен
+Countries[IN]=Індія
+Countries[IO]=Британські території Індійського океану
+Countries[IQ]=Ірак
+Countries[IR]=Іран, Ісламська Республіка
+Countries[IS]=Ісландія
+Countries[IT]=Італія
+Countries[JE]=Джерсі
+Countries[JM]=Ямайка
+Countries[JO]=Йорданія
+Countries[JP]=Японія
+Countries[KE]=Кенія
+Countries[KG]=Киргізстан
+Countries[KH]=Камбоджа
+Countries[KI]=Кірибаті
+Countries[KM]=Комори
+Countries[KN]=Сент Кітс і Невіс
+Countries[KP]=Корейська Народно-Демократична Республіка
+Countries[KR]=Південня Корея
+Countries[KW]=Кувейт
+Countries[KY]=Кайманові острови
+Countries[KZ]=Казахстан
+Countries[LA]=Лаоська Народно-Демократична Республіка
+Countries[LB]=Ліван
+Countries[LC]=Санта Лючія
+Countries[LI]=Ліхтенштейн
+Countries[LK]=Шрі Ланка
+Countries[LR]=Ліберія
+Countries[LS]=Лесото
+Countries[LT]=Литва
+Countries[LU]=Люксембург
+Countries[LV]=Латвія
+Countries[LY]=Лівійська Арабська Джамахірія
+Countries[MA]=Мороко
+Countries[MC]=Монако
+Countries[MD]=Молдова
+Countries[ME]=Чорногорія
+Countries[MF]=Острів Святого Мартіна
+Countries[MG]=Мадагаскар
+Countries[MH]=Маршаллові Острови
+Countries[MK]=Македонія, колишня Югославська Республіка
+Countries[ML]=Малі
+Countries[MM]=Мʼянма [Бірма]
+Countries[MN]=Монголія
+Countries[MO]=Макао
+Countries[MP]=Північні Маріанські острови
+Countries[MQ]=Мартиніка
+Countries[MR]=Мавританія
+Countries[MS]=Монсеррат
+Countries[MT]=Мальта
+Countries[MU]=Маврикій
+Countries[MV]=Мальдіви
+Countries[MW]=Малаві
+Countries[MX]=Мексика
+Countries[MY]=Малайзія
+Countries[MZ]=Мозамбік
+Countries[NA]=Намібія
+Countries[NC]=Нова Каледонія
+Countries[NE]=Нігер
+Countries[NF]=Острів Норфолк
+Countries[NG]=Нігерія
+Countries[NI]=Нікарагуа
+Countries[NL]=Нідерланди
+Countries[NO]=Норвегія
+Countries[NP]=Непал
+Countries[NR]=Науру
+Countries[NU]=Нія
+Countries[NZ]=Нова Зеландія
+Countries[OM]=Оман
+Countries[PA]=Панама
+Countries[PE]=Перу
+Countries[PF]=Французька Полінезія
+Countries[PG]=Папуа Нова Гвінея
+Countries[PH]=Філіпіни
+Countries[PK]=Пакістан
+Countries[PL]=Польща
+Countries[PM]=Сен-Пʼєр і Мікелон
+Countries[PN]=Острови Піткерн
+Countries[PR]=Пуерто-Ріко
+Countries[PS]=Палестина
+Countries[PT]=Португалія
+Countries[PW]=Палау
+Countries[PY]=Парагвай
+Countries[QA]=Катар
+Countries[RE]=Реюньйон
+Countries[RO]=Румунія
+Countries[RS]=Сербія
+Countries[RU]=Російська Федерація
+Countries[RW]=Руанда
+Countries[SA]=Саудівська Аравія
+Countries[SB]=Соломонові Острови
+Countries[SC]=Сейшели
+Countries[SD]=Судан
+Countries[SE]=Швеція
+Countries[SG]=Сінгапур
+Countries[SH]=Острів Святої Єлени
+Countries[SI]=Словенія
+Countries[SJ]=Острови Свальбард та Ян-Маєн
+Countries[SK]=Словакія
+Countries[SL]=С'єра Леоне
+Countries[SM]=Сан-Маріно
+Countries[SN]=Сенегал
+Countries[SO]=Сомалі
+Countries[SR]=Сурінам
+Countries[SS]=Південний Судан
+Countries[ST]=Сан Томе та Принсіпі
+Countries[SV]=Сальвадор
+Countries[SX]=Сінт-Мартен
+Countries[SY]=Сирійська Арабська Республіка
+Countries[SZ]=Свазіленд
+Countries[TC]=Теркс і Кайкос
+Countries[TD]=Республіка Чад
+Countries[TF]=Французькі Південні Території
+Countries[TG]=Того
+Countries[TH]=Тайланд
+Countries[TJ]=Таджикістан
+Countries[TK]=Токелау
+Countries[TL]=Тімор-Лешті
+Countries[TM]=Туркменистан
+Countries[TN]=Туніс
+Countries[TO]=Тонга
+Countries[TR]=Туреччина
+Countries[TT]=Трінідад і Тобаго
+Countries[TV]=Тувалу
+Countries[TW]=Тайвань
+Countries[TZ]=Обʼєднана Республіка Танзанія
+Countries[UA]=Ukrayina
+Countries[UG]=Уганда
+Countries[UM]=Віддалені Острови США
+Countries[US]=Сполучені Штати Америки
+Countries[UY]=Уругвай
+Countries[UZ]=Узбекістан
+Countries[VA]=Місто Ватикан
+Countries[VC]=Сент-Вінсент і Ґренадіни
+Countries[VE]=Венесуела
+Countries[VG]=Віргінські острови Британії
+Countries[VI]=Віргінські острови США
+Countries[VN]=Вʼєтнам
+Countries[VU]=Вануату
+Countries[WF]=Уолліс і Футуна
+Countries[WS]=Самоа
+Countries[XK]=Косово
+Countries[YE]=Ємен
+Countries[YT]=Майот
+Countries[ZA]=Південна Африка
+Countries[ZM]=Замбія
+Countries[ZW]=Зімбабве
