--- a/share/locale/dan-DK.ini
+++ b/share/locale/dan-DK.ini
@@ -101,3 +101,259 @@ thu=torsdag
 fri=fredag
 sat=lørdag
 sun=søndag
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=da
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Forenede Arabiske Emirater
+Countries[AF]=Afghanistan
+Countries[AG]=Antigua og Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albanien
+Countries[AM]=Armenien
+Countries[AO]=Angola
+Countries[AQ]=Antarktis
+Countries[AR]=Argentina
+Countries[AS]=Amerikansk Samoa
+Countries[AT]=Østrig
+Countries[AU]=Australien
+Countries[AW]=Aruba
+Countries[AX]=Åland
+Countries[AZ]=Aserbajdsjan
+Countries[BA]=Bosnien-Hercegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesh
+Countries[BE]=Belgien
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgarien
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint Barthélemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei Darussalam
+Countries[BO]=Bolivia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brasilien
+Countries[BS]=Bahamas
+Countries[BT]=Bhutan
+Countries[BV]=Bouvetø
+Countries[BW]=Botswana
+Countries[BY]=Hviderusland
+Countries[BZ]=Belize
+Countries[CA]=Canada
+Countries[CC]=Cocosøerne
+Countries[CD]=Zaire
+Countries[CF]=Centralafrikanske Republik
+Countries[CG]=Congo-Brazzaville
+Countries[CH]=Schweiz
+Countries[CI]=Elfenbenskysten
+Countries[CK]=Cook-øerne
+Countries[CL]=Chile
+Countries[CM]=Cameroon
+Countries[CN]=Kina
+Countries[CO]=Colombia
+Countries[CR]=Costa Rica
+Countries[CU]=Cuba
+Countries[CV]=Kap Verde
+Countries[CW]=Land Curaçao
+Countries[CX]=Juleøen
+Countries[CY]=Cypern
+Countries[CZ]=Tjekkiet
+Countries[DE]=Tyskland
+Countries[DJ]=Djibouti
+Countries[DK]=Danmark
+Countries[DM]=Dominica
+Countries[DO]=Den Dominikanske Republik
+Countries[DZ]=Algeriet
+Countries[EC]=Ecuador
+Countries[EE]=Estland
+Countries[EG]=Egypten
+Countries[EH]=Vestsahara
+Countries[ER]=Eritrea
+Countries[ES]=Spanien
+Countries[ET]=Etiopien
+Countries[FI]=Finland
+Countries[FJ]=Fiji-øerne
+Countries[FK]=Falklandsøerne
+Countries[FM]=Mikronesiens Forenede Stater
+Countries[FO]=Færøerne
+Countries[FR]=Frankrig
+Countries[GA]=Gabon
+Countries[GB]=Storbritannien
+Countries[GD]=Grenada
+Countries[GE]=Georgien
+Countries[GF]=Fransk Guyana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grønland
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Ækvatorial Guinea
+Countries[GR]=Grækenland
+Countries[GS]=South Georgia og De Sydlige Sandwichøer
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hongkong
+Countries[HM]=Heard- og McDonald-øerne
+Countries[HN]=Honduras
+Countries[HR]=Kroatien
+Countries[HT]=Haiti
+Countries[HU]=Ungarn
+Countries[ID]=Indonesien
+Countries[IE]=Irland
+Countries[IL]=Israel
+Countries[IM]=Isle of Man
+Countries[IN]=Indien
+Countries[IO]=Det Britiske Territorium i Det Indiske Ocean
+Countries[IQ]=Irak
+Countries[IR]=Den Islamiske Republik Iran
+Countries[IS]=Island
+Countries[IT]=Italien
+Countries[JE]=Jersey
+Countries[JM]=Jamaica
+Countries[JO]=Jordan
+Countries[JP]=Japan
+Countries[KE]=Kenya
+Countries[KG]=Kirgisistan
+Countries[KH]=Cambodja
+Countries[KI]=Kiribati
+Countries[KM]=Comorerne
+Countries[KN]=Saint Kitts og Nevis
+Countries[KP]=Den demokratiske folkerepublik Korea (Nordkorea)
+Countries[KR]=Republikken Korea (Sydkorea)
+Countries[KW]=Kuwait
+Countries[KY]=Caymanøerne
+Countries[KZ]=Kasakhstan
+Countries[LA]=Laos
+Countries[LB]=Libanon
+Countries[LC]=Saint Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Litauen
+Countries[LU]=Luxembourg
+Countries[LV]=Letland
+Countries[LY]=Libyan Arab Jamahiriya
+Countries[MA]=Marokko
+Countries[MC]=Monaco
+Countries[MD]=Moldova
+Countries[ME]=Montenegro
+Countries[MF]=Saint Martin
+Countries[MG]=Madagascar
+Countries[MH]=Marshalløerne
+Countries[MK]=Makedonien
+Countries[ML]=Mali
+Countries[MM]=Myanmar
+Countries[MN]=Mongoliet
+Countries[MO]=Macao
+Countries[MP]=Nordmarianerne
+Countries[MQ]=Martinique
+Countries[MR]=Mauretanien
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Maldiverne
+Countries[MW]=Malawi
+Countries[MX]=Mexico
+Countries[MY]=Malaysia
+Countries[MZ]=Moçambique
+Countries[NA]=Namibia
+Countries[NC]=Ny Caledonien
+Countries[NE]=Niger
+Countries[NF]=Norfolk Island
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Holland
+Countries[NO]=Norge
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Ny Zeeland
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Fransk Polynesien
+Countries[PG]=Papua Ny Guinea
+Countries[PH]=Filippinerne
+Countries[PK]=Pakistan
+Countries[PL]=Polen
+Countries[PM]=Saint Pierre og Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Puerto Rico
+Countries[PS]=De palæstinensiske områder
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Reunion
+Countries[RO]=Rumænien
+Countries[RS]=Serbia
+Countries[RU]=Rusland
+Countries[RW]=Rwanda
+Countries[SA]=Saudi-Arabien
+Countries[SB]=Salomonøerne
+Countries[SC]=Seychellerne
+Countries[SD]=Sudan
+Countries[SE]=Sverige
+Countries[SG]=Singapore
+Countries[SH]=St. Helena
+Countries[SI]=Slovenien
+Countries[SJ]=Svalbard og Jan Mayen
+Countries[SK]=Slovakiet
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Surinam
+Countries[SS]=South Sudan
+Countries[ST]=Sao Tomé og Principe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Syrien
+Countries[SZ]=Swaziland
+Countries[TC]=Turks- og Caicosøerne
+Countries[TD]=Tchad
+Countries[TF]=Franske Besiddelser i Det Sydlige Indiske Ocean
+Countries[TG]=Togo
+Countries[TH]=Thailand
+Countries[TJ]=Tajikistan
+Countries[TK]=Tokelau
+Countries[TL]=Timor-Leste
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunis
+Countries[TO]=Tonga
+Countries[TR]=Tyrkiet
+Countries[TT]=Trinidad og Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tanzania
+Countries[UA]=Ukraine
+Countries[UG]=Uganda
+Countries[UM]=Mindre amerikanske oversøiske øer
+Countries[US]=Amerikas Forenede Stater
+Countries[UY]=Uruguay
+Countries[UZ]=Usbekistan
+Countries[VA]=Pavestolen (Vatikanstaten)
+Countries[VC]=St. Vincent og Grenadinerne
+Countries[VE]=Venezuela
+Countries[VG]=De britiske jomfruøer
+Countries[VI]=De amerikanske jomfruøer
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis og Futunaøerne
+Countries[WS]=Samoa
+Countries[XK]=Kosovo
+Countries[YE]=Yemen
+Countries[YT]=Mayotte
+Countries[ZA]=Sydafrika
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
