--- a/share/locale/fre-FR.ini
+++ b/share/locale/fre-FR.ini
@@ -102,3 +102,259 @@ thu=jeudi
 fri=vendredi
 sat=samedi
 sun=dimanche
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=fr
+[CountryNames]
+
+Countries[AD]=Andorre
+Countries[AE]=Émirats Arabes Unis
+Countries[AF]=Afghanistan
+Countries[AG]=Antigua et Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albanie
+Countries[AM]=Arménie
+Countries[AO]=Angola
+Countries[AQ]=Antarctique
+Countries[AR]=Argentine
+Countries[AS]=Samoa américaines
+Countries[AT]=Autriche
+Countries[AU]=Australie
+Countries[AW]=Aruba
+Countries[AX]=Îles Åland
+Countries[AZ]=Azerbaïdjan
+Countries[BA]=Bosnie-Herzégovine
+Countries[BB]=Barbade
+Countries[BD]=Bangladesh
+Countries[BE]=Belgique
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgarie
+Countries[BH]=Bahreïn
+Countries[BI]=Burundi
+Countries[BJ]=Bénin
+Countries[BL]=Saint-Barthélémy
+Countries[BM]=Bermudes
+Countries[BN]=Brunéi Darussalam
+Countries[BO]=Bolivie
+Countries[BQ]=Bonaire, Saint-Eustache et Saba
+Countries[BR]=Brésil
+Countries[BS]=Bahamas
+Countries[BT]=Bhutan
+Countries[BV]=Île Bouvet
+Countries[BW]=Botswana
+Countries[BY]=Biélorussie
+Countries[BZ]=Belize
+Countries[CA]=Canada
+Countries[CC]=Îles Cocos
+Countries[CD]=Congo-Kinshasa
+Countries[CF]=Centrafrique
+Countries[CG]=Congo
+Countries[CH]=Suisse
+Countries[CI]=Côte d'Ivoire
+Countries[CK]=Îles Cook
+Countries[CL]=Chili
+Countries[CM]=Cameroun
+Countries[CN]=Chine
+Countries[CO]=Colombie
+Countries[CR]=Costa Rica
+Countries[CU]=Cuba
+Countries[CV]=Cap-Vert
+Countries[CW]=Curaçao
+Countries[CX]=Île Christmas
+Countries[CY]=Chypre
+Countries[CZ]=Tchéquie
+Countries[DE]=Allemagne
+Countries[DJ]=Djibouti
+Countries[DK]=Danemark
+Countries[DM]=Dominique
+Countries[DO]=République Dominicaine
+Countries[DZ]=Algérie
+Countries[EC]=Équateur
+Countries[EE]=Estonie
+Countries[EG]=Égypte
+Countries[EH]=Sahara Occidental
+Countries[ER]=Érythrée
+Countries[ES]=Espagne
+Countries[ET]=Éthiopie
+Countries[FI]=Finlande
+Countries[FJ]=Îles Fidji
+Countries[FK]=Îles Malouines
+Countries[FM]=Micronésie
+Countries[FO]=Îles Féroé
+Countries[FR]=France
+Countries[GA]=Gabon
+Countries[GB]=Royaume-Uni
+Countries[GD]=Grenade
+Countries[GE]=Géorgie
+Countries[GF]=Guyane
+Countries[GG]=Guernesey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Groenland
+Countries[GM]=Gambie
+Countries[GN]=Guinée
+Countries[GP]=Guadeloupe
+Countries[GQ]=Guinée équatoriale
+Countries[GR]=Grèce
+Countries[GS]=Géorgie du Sud et les îles Sandwich du Sud
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinée-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hong Kong
+Countries[HM]=Île Heard et îles McDonald
+Countries[HN]=Honduras
+Countries[HR]=Croatie
+Countries[HT]=Haïti
+Countries[HU]=Hongrie
+Countries[ID]=Indonésie
+Countries[IE]=Irlande
+Countries[IL]=Israël
+Countries[IM]=Man (Île)
+Countries[IN]=Inde
+Countries[IO]=Territoire britannique de l'océan Indien
+Countries[IQ]=Irak
+Countries[IR]=Iran
+Countries[IS]=Islande
+Countries[IT]=Italie
+Countries[JE]=Jersey
+Countries[JM]=Jamaïque
+Countries[JO]=Jordanie
+Countries[JP]=Japon
+Countries[KE]=Kenya
+Countries[KG]=Kirghizistan
+Countries[KH]=Cambodge
+Countries[KI]=Kiribati
+Countries[KM]=Comores
+Countries[KN]=Saint-Christophe-et-Niévès
+Countries[KP]=Corée du Nord
+Countries[KR]=Corée du Sud
+Countries[KW]=Koweït
+Countries[KY]=Îles Caïmans
+Countries[KZ]=Kazakhstan
+Countries[LA]=Laos
+Countries[LB]=Liban
+Countries[LC]=Sainte-Lucie
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Lituanie
+Countries[LU]=Luxembourg
+Countries[LV]=Lettonie
+Countries[LY]=Libye
+Countries[MA]=Maroc
+Countries[MC]=Monaco
+Countries[MD]=Moldavie
+Countries[ME]=Monténégro
+Countries[MF]=Saint-Martin
+Countries[MG]=Madagascar
+Countries[MH]=Îles Marshall
+Countries[MK]=Macédoine
+Countries[ML]=Mali
+Countries[MM]=Myanmar
+Countries[MN]=Mongolie
+Countries[MO]=Macao
+Countries[MP]=Îles Mariannes du Nord
+Countries[MQ]=Martinique
+Countries[MR]=Mauritanie
+Countries[MS]=Montserrat
+Countries[MT]=Malte
+Countries[MU]=Maurice
+Countries[MV]=Maldives
+Countries[MW]=Malawi
+Countries[MX]=Mexique
+Countries[MY]=Malaisie
+Countries[MZ]=Mozambique
+Countries[NA]=Namibie
+Countries[NC]=Nouvelle-Calédonie
+Countries[NE]=Niger
+Countries[NF]=Île Norfolk
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Pays-Bas
+Countries[NO]=Norvège
+Countries[NP]=Népal
+Countries[NR]=Nauru
+Countries[NU]=Nioué
+Countries[NZ]=Nouvelle-Zélande
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Pérou
+Countries[PF]=Polynésie Française
+Countries[PG]=Papouasie-Nouvelle Guinée
+Countries[PH]=Philippines
+Countries[PK]=Pakistan
+Countries[PL]=Pologne
+Countries[PM]=Saint-Pierre et Miquelon
+Countries[PN]=Îles Pitcairn
+Countries[PR]=Porto Rico
+Countries[PS]=Territoire palestinien
+Countries[PT]=Portugal
+Countries[PW]=Palaos
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Réunion
+Countries[RO]=Roumanie
+Countries[RS]=Serbie
+Countries[RU]=Russie
+Countries[RW]=Rwanda
+Countries[SA]=Arabie saoudite
+Countries[SB]=Îles Salomon
+Countries[SC]=Seychelles
+Countries[SD]=Soudan
+Countries[SE]=Suède
+Countries[SG]=Singapour
+Countries[SH]=Sainte-Hélène
+Countries[SI]=Slovénie
+Countries[SJ]=Svalbard et Île Jan Mayen
+Countries[SK]=Slovaquie
+Countries[SL]=Sierra Leone
+Countries[SM]=Saint-Marin
+Countries[SN]=Sénégal
+Countries[SO]=Somalie
+Countries[SR]=Surinam
+Countries[SS]=Sud-Soudan
+Countries[ST]=São Tomé-et-Príncipe
+Countries[SV]=Salvador
+Countries[SX]=Saint-Martin
+Countries[SY]=Syrie
+Countries[SZ]=Swaziland
+Countries[TC]=Îles Turques-et-Caïques
+Countries[TD]=Tchad
+Countries[TF]=Terres Australes et Antarctiques Françaises
+Countries[TG]=Togo
+Countries[TH]=Thaïlande
+Countries[TJ]=Tadjikistan
+Countries[TK]=Tokelau
+Countries[TL]=Timor Oriental
+Countries[TM]=Turkménistan
+Countries[TN]=Tunisie
+Countries[TO]=Tonga
+Countries[TR]=Turquie
+Countries[TT]=Trinidad et Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taïwan
+Countries[TZ]=Tanzanie
+Countries[UA]=Ukraine
+Countries[UG]=Ouganda
+Countries[UM]=Îles mineures éloignées des États-Unis
+Countries[US]=États-Unis
+Countries[UY]=Uruguay
+Countries[UZ]=Ouzbékistan
+Countries[VA]=Vatican
+Countries[VC]=Saint-Vincent-et-les Grenadines
+Countries[VE]=Vénézuéla
+Countries[VG]=Îles Vierges
+Countries[VI]=Îles Vierges des États-Unis
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis-et-Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosovo
+Countries[YE]=Yémen
+Countries[YT]=Mayotte
+Countries[ZA]=Afrique du Sud
+Countries[ZM]=Zambie
+Countries[ZW]=Zimbabwe
