--- a/share/locale/ind-ID.ini
+++ b/share/locale/ind-ID.ini
@@ -86,3 +86,259 @@ thu=Kamis
 fri=Jumat
 sat=Sabtu
 sun=Minggu
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=id
+[CountryNames]
+
+Countries[AD]=Andora
+Countries[AE]=Uni Emirat Arab
+Countries[AF]=Afghanistan
+Countries[AG]=Antigua dan Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albania
+Countries[AM]=Armenia
+Countries[AO]=Angola
+Countries[AQ]=Antarktika
+Countries[AR]=Argentina
+Countries[AS]=Samoa Amerika
+Countries[AT]=Austria
+Countries[AU]=Australia
+Countries[AW]=Aruba
+Countries[AX]=Kepulauan Aland
+Countries[AZ]=Azerbaijan
+Countries[BA]=Bosnia dan Herzegovina
+Countries[BB]=Barbados
+Countries[BD]=Banglades
+Countries[BE]=Belgia
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgaria
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint Barthelemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei
+Countries[BO]=Bolivia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brazil
+Countries[BS]=Bahamas
+Countries[BT]=Bhutan
+Countries[BV]=Pulau Bouvet
+Countries[BW]=Botswana
+Countries[BY]=Belarusia
+Countries[BZ]=Belize
+Countries[CA]=Kanada
+Countries[CC]=Kepulauan Cocos
+Countries[CD]=Kongo - Kinshasa
+Countries[CF]=Republik Afrika Tengah
+Countries[CG]=Kongo - Republik
+Countries[CH]=Swiss
+Countries[CI]=Côte d'Ivoire
+Countries[CK]=Kepulauan Cook
+Countries[CL]=Cile
+Countries[CM]=Kamerun
+Countries[CN]=Cina
+Countries[CO]=Kolumbia
+Countries[CR]=Kosta Rika
+Countries[CU]=Kuba
+Countries[CV]=Tanjung Verde
+Countries[CW]=Land Curaçao
+Countries[CX]=Pulau Christmas
+Countries[CY]=Cyprus
+Countries[CZ]=Republik Ceko
+Countries[DE]=Jerman
+Countries[DJ]=Jibuti
+Countries[DK]=Denmark
+Countries[DM]=Dominika
+Countries[DO]=Republik Dominika
+Countries[DZ]=Algeria
+Countries[EC]=Ekuador
+Countries[EE]=Estonia
+Countries[EG]=Mesir
+Countries[EH]=Sahara Barat
+Countries[ER]=Eritrea
+Countries[ES]=Spanyol
+Countries[ET]=Etiopia
+Countries[FI]=Finlandia
+Countries[FJ]=Fiji
+Countries[FK]=Kepulauan Malvinas
+Countries[FM]=Mikronesia
+Countries[FO]=Kepulauan Faroe
+Countries[FR]=Prancis
+Countries[GA]=Gabon
+Countries[GB]=Kerajaan Inggris
+Countries[GD]=Grenada
+Countries[GE]=Georgia
+Countries[GF]=Guyana Perancis
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grinlandia
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Equatorial Guinea
+Countries[GR]=Yunani
+Countries[GS]=Kepulauan South Sandwich dan South Georgia
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hong Kong
+Countries[HM]=Pulau Heard dan Kepulauan McDonald
+Countries[HN]=Honduras
+Countries[HR]=Kroasia
+Countries[HT]=Haiti
+Countries[HU]=Hungaria
+Countries[ID]=Indonesia
+Countries[IE]=Irlandia
+Countries[IL]=Israel
+Countries[IM]=Isle of Man
+Countries[IN]=India
+Countries[IO]=Wilayah Inggris di Samudra Hindia
+Countries[IQ]=Iraq
+Countries[IR]=Iran
+Countries[IS]=Islandia
+Countries[IT]=Itali
+Countries[JE]=Jersey
+Countries[JM]=Jamaika
+Countries[JO]=Yordania
+Countries[JP]=Jepang
+Countries[KE]=Kenya
+Countries[KG]=Kyrgystan
+Countries[KH]=Kamboja
+Countries[KI]=Kiribati
+Countries[KM]=Komoros
+Countries[KN]=Santa Kitts dan Nevis
+Countries[KP]=Korea Utara
+Countries[KR]=Korea Selatan
+Countries[KW]=Kuwait
+Countries[KY]=Kepulauan Kayman
+Countries[KZ]=Kazakstan
+Countries[LA]=Laos
+Countries[LB]=Libanon
+Countries[LC]=Saint Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Langka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Lithuania
+Countries[LU]=Luksemburg
+Countries[LV]=Latvia
+Countries[LY]=Libia
+Countries[MA]=Maroko
+Countries[MC]=Monaco
+Countries[MD]=Moldova
+Countries[ME]=Montenegro
+Countries[MF]=Saint Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Kepulauan Marshall
+Countries[MK]=Makedonia
+Countries[ML]=Mali
+Countries[MM]=Myanmar
+Countries[MN]=Mongolia
+Countries[MO]=Macao
+Countries[MP]=Kepulauan Mariana Utara
+Countries[MQ]=Martinique
+Countries[MR]=Mauritania
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Maldives
+Countries[MW]=Malawi
+Countries[MX]=Mexico
+Countries[MY]=Malaysia
+Countries[MZ]=Mozambique
+Countries[NA]=Namibia
+Countries[NC]=Kaledonia Baru
+Countries[NE]=Niger
+Countries[NF]=Kepulauan Norfolk
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Netherlands
+Countries[NO]=Norwegia
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Selandia Baru
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Polinesia Prancis
+Countries[PG]=Nugini Papua Nugini
+Countries[PH]=Filipina
+Countries[PK]=Pakistan
+Countries[PL]=Polandia
+Countries[PM]=Saint Pierre dan Miquelon
+Countries[PN]=Kepulauan Pitcairn
+Countries[PR]=Puerto Riko
+Countries[PS]=Otoritas Palestina
+Countries[PT]=Portugis
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Réunion
+Countries[RO]=Romania
+Countries[RS]=Serbia
+Countries[RU]=Rusia
+Countries[RW]=Rwanda
+Countries[SA]=Arab Saudi
+Countries[SB]=Kepulauan Solomon
+Countries[SC]=Seychelles
+Countries[SD]=Sudan
+Countries[SE]=Sweden
+Countries[SG]=Singapura
+Countries[SH]=Saint Helena
+Countries[SI]=Slovenia
+Countries[SJ]=Kepulauan Svalbard dan Jan Mayen
+Countries[SK]=Slovakia
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Suriname
+Countries[SS]=South Sudan
+Countries[ST]=São Tomé and Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Siria
+Countries[SZ]=Swaziland
+Countries[TC]=Kepulauan Turks dan Caicos
+Countries[TD]=Chad
+Countries[TF]=Teritori Kutub Selatan Prancis
+Countries[TG]=Togo
+Countries[TH]=Thailand
+Countries[TJ]=Tajikistan
+Countries[TK]=Tokelau
+Countries[TL]=Timor Leste
+Countries[TM]=Turkimenistan
+Countries[TN]=Tunisia
+Countries[TO]=Bahasa Tonga
+Countries[TR]=Turkey
+Countries[TT]=Trinidad dan Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tanzania
+Countries[UA]=Ukrania
+Countries[UG]=Uganda
+Countries[UM]=Kepulauan Kecil Terluar Amerika Serikat
+Countries[US]=Amerika Serikat
+Countries[UY]=Uruguay
+Countries[UZ]=Uzbekistan
+Countries[VA]=Kota Vatikan
+Countries[VC]=Santa Vincent dan Grenadin
+Countries[VE]=Venezuela
+Countries[VG]=Kepulauan Virgin Inggris
+Countries[VI]=Kepulauan U.S. Virgin
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Kepulauan Wallis dan Futuna
+Countries[WS]=Samoa
+Countries[XK]=Republic of Kosovo
+Countries[YE]=Yaman
+Countries[YT]=Mayotte
+Countries[ZA]=Afrika Selatan
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
