--- a/share/locale/nor-NO.ini
+++ b/share/locale/nor-NO.ini
@@ -106,3 +106,259 @@ thu=torsdag
 fri=fredag
 sat=lørdag
 sun=søndag
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=nb
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=De forente arabiske emirater
+Countries[AF]=Afghanistan
+Countries[AG]=Antigua og Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albania
+Countries[AM]=Armenia
+Countries[AO]=Angola
+Countries[AQ]=Antarktis
+Countries[AR]=Argentina
+Countries[AS]=Amerikansk Samoa
+Countries[AT]=Østerrike
+Countries[AU]=Australia
+Countries[AW]=Aruba
+Countries[AX]=Åland
+Countries[AZ]=Aserbajdsjan
+Countries[BA]=Bosnia-Hercegovina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesh
+Countries[BE]=Belgia
+Countries[BF]=Burkina Faso
+Countries[BG]=Bulgaria
+Countries[BH]=Bahrein
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=Saint Barthélemy
+Countries[BM]=Bermuda
+Countries[BN]=Brunei Darussalam
+Countries[BO]=Bolivia
+Countries[BQ]=Bonaire, Saint Eustatius and Saba
+Countries[BR]=Brasil
+Countries[BS]=Bahamas
+Countries[BT]=Bhutan
+Countries[BV]=Bouvetøya
+Countries[BW]=Botswana
+Countries[BY]=Hviterussland
+Countries[BZ]=Belize
+Countries[CA]=Canada
+Countries[CC]=Kokosøyene
+Countries[CD]=Kongo
+Countries[CF]=Den sentralafrikanske republikk
+Countries[CG]=Republikken Kongo
+Countries[CH]=Sveits
+Countries[CI]=Elfenbenskysten
+Countries[CK]=Cookøyene
+Countries[CL]=Chile
+Countries[CM]=Kamerun
+Countries[CN]=Kina
+Countries[CO]=Colombia
+Countries[CR]=Costa Rica
+Countries[CU]=Cuba
+Countries[CV]=Kapp Verde
+Countries[CW]=Land Curaçao
+Countries[CX]=Christmasøya
+Countries[CY]=Kypros
+Countries[CZ]=Tsjekkia
+Countries[DE]=Tyskland
+Countries[DJ]=Djibouti
+Countries[DK]=Danmark
+Countries[DM]=Dominica
+Countries[DO]=Den dominikanske republikk
+Countries[DZ]=Algerie
+Countries[EC]=Ecuador
+Countries[EE]=Estland
+Countries[EG]=Egypt
+Countries[EH]=Vest-Sahara
+Countries[ER]=Eritrea
+Countries[ES]=Spania
+Countries[ET]=Etiopia
+Countries[FI]=Finland
+Countries[FJ]=Fiji
+Countries[FK]=Falklandsøyene
+Countries[FM]=Mikronesiaføderasjonen
+Countries[FO]=Færøyene
+Countries[FR]=Frankrike
+Countries[GA]=Gabon
+Countries[GB]=Storbritannia
+Countries[GD]=Grenada
+Countries[GE]=Georgia
+Countries[GF]=Fransk Guyana
+Countries[GG]=Guernsey
+Countries[GH]=Ghana
+Countries[GI]=Gibraltar
+Countries[GL]=Grønland
+Countries[GM]=Gambia
+Countries[GN]=Guinea
+Countries[GP]=Guadeloupe
+Countries[GQ]=Ekvatorial-Guinea
+Countries[GR]=Hellas
+Countries[GS]=Sør-Georgia og de sørlige Sandwich-øyene
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=Guinea-Bissau
+Countries[GY]=Guyana
+Countries[HK]=Hongkong
+Countries[HM]=Heardøya og McDonaldøyene
+Countries[HN]=Honduras
+Countries[HR]=Kroatia
+Countries[HT]=Haiti
+Countries[HU]=Ungarn
+Countries[ID]=Indonesia
+Countries[IE]=Irland
+Countries[IL]=Israel
+Countries[IM]=Man
+Countries[IN]=India
+Countries[IO]=Britiske territorier i Indiahavet
+Countries[IQ]=Irak
+Countries[IR]=Iran
+Countries[IS]=Island
+Countries[IT]=Italia
+Countries[JE]=Jersey
+Countries[JM]=Jamaica
+Countries[JO]=Jordan
+Countries[JP]=Japan
+Countries[KE]=Kenya
+Countries[KG]=Kirgisistan
+Countries[KH]=Kambodsja
+Countries[KI]=Kiribati
+Countries[KM]=Komorene
+Countries[KN]=St. Kitts og Nevis
+Countries[KP]=Nord-Korea
+Countries[KR]=Sør-Korea
+Countries[KW]=Kuwait
+Countries[KY]=Caymanøyene
+Countries[KZ]=Kasakhstan
+Countries[LA]=Laos
+Countries[LB]=Libanon
+Countries[LC]=Saint Lucia
+Countries[LI]=Liechtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Liberia
+Countries[LS]=Lesotho
+Countries[LT]=Litauen
+Countries[LU]=Luxembourg
+Countries[LV]=Latvia
+Countries[LY]=Den sosialistiske arabiske folkerepublikken Libya
+Countries[MA]=Marokko
+Countries[MC]=Monaco
+Countries[MD]=Moldova
+Countries[ME]=Montenegro
+Countries[MF]=Saint Martin
+Countries[MG]=Madagaskar
+Countries[MH]=Marshalløyene
+Countries[MK]=Makedonia
+Countries[ML]=Mali
+Countries[MM]=Burma
+Countries[MN]=Mongolia
+Countries[MO]=Macao
+Countries[MP]=Nord-Marianene
+Countries[MQ]=Martinique
+Countries[MR]=Mauritania
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Mauritius
+Countries[MV]=Maldivene
+Countries[MW]=Malawi
+Countries[MX]=Mexico
+Countries[MY]=Malaysia
+Countries[MZ]=Mosambik
+Countries[NA]=Namibia
+Countries[NC]=Ny-Caledonia
+Countries[NE]=Niger
+Countries[NF]=Norfolkøya
+Countries[NG]=Nigeria
+Countries[NI]=Nicaragua
+Countries[NL]=Nederland
+Countries[NO]=Norge
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=New Zealand
+Countries[OM]=Oman
+Countries[PA]=Panama
+Countries[PE]=Peru
+Countries[PF]=Fransk Polynesia
+Countries[PG]=Papua Ny-Guinea
+Countries[PH]=Filippinene
+Countries[PK]=Pakistan
+Countries[PL]=Polen
+Countries[PM]=St. Pierre og Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Puerto Rico
+Countries[PS]=Palestinsk territorium
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paraguay
+Countries[QA]=Qatar
+Countries[RE]=Reunion
+Countries[RO]=Romania
+Countries[RS]=Serbia
+Countries[RU]=Russland
+Countries[RW]=Rwanda
+Countries[SA]=Saudi-Arabia
+Countries[SB]=Salomonøyene
+Countries[SC]=Seychellene
+Countries[SD]=Sudan
+Countries[SE]=Sverige
+Countries[SG]=Singapore
+Countries[SH]=St. Helena
+Countries[SI]=Slovenia
+Countries[SJ]=Svalbard og Jan Mayen
+Countries[SK]=Slovakia
+Countries[SL]=Sierra Leone
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somalia
+Countries[SR]=Surinam
+Countries[SS]=South Sudan
+Countries[ST]=São Tomé og Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=Land Sint Maarten
+Countries[SY]=Syria
+Countries[SZ]=Swaziland
+Countries[TC]=Turks- og Caicosøyene
+Countries[TD]=Tsjad
+Countries[TF]=De franske sørterritorier
+Countries[TG]=Togo
+Countries[TH]=Thailand
+Countries[TJ]=Tadsjikistan
+Countries[TK]=Tokelau
+Countries[TL]=Øst-Timor
+Countries[TM]=Turkmenistan
+Countries[TN]=Tunis
+Countries[TO]=Tonga
+Countries[TR]=Tyrkia
+Countries[TT]=Trinidad og Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tanzania
+Countries[UA]=Ukraina
+Countries[UG]=Uganda
+Countries[UM]=USAs ytre småøyer
+Countries[US]=USA
+Countries[UY]=Uruguay
+Countries[UZ]=Usbekistan
+Countries[VA]=Vatikanet
+Countries[VC]=Saint Vincent og Grenadinene
+Countries[VE]=Venezuela
+Countries[VG]=De britiske jomfruøyene
+Countries[VI]=De amerikanske jomfruøyene
+Countries[VN]=Vietnam
+Countries[VU]=Vanuatu
+Countries[WF]=Wallis og Futuna
+Countries[WS]=Samoa
+Countries[XK]=Republic of Kosovo
+Countries[YE]=Jemen
+Countries[YT]=Mayotte
+Countries[ZA]=Sør-Afrika
+Countries[ZM]=Zambia
+Countries[ZW]=Zimbabwe
