--- a/share/locale/por-PT.ini
+++ b/share/locale/por-PT.ini
@@ -91,3 +91,259 @@ thu=Quinta-Feira
 fri=Sexta-Feira
 sat=Sábado
 sun=Domingo
+
+# Country Names
+# Names taken via GeoNames WebService
+# http://ws.geonames.org/countryInfo?lang=pt
+[CountryNames]
+
+Countries[AD]=Andorra
+Countries[AE]=Emirados Árabes Unidos
+Countries[AF]=Afeganistão
+Countries[AG]=Antígua e Barbuda
+Countries[AI]=Anguilla
+Countries[AL]=Albânia
+Countries[AM]=Armênia
+Countries[AO]=Angola
+Countries[AQ]=Antártida
+Countries[AR]=Argentina
+Countries[AS]=Samoa Americana
+Countries[AT]=Áustria
+Countries[AU]=Austrália
+Countries[AW]=Aruba
+Countries[AX]=Alanda
+Countries[AZ]=Azerbaijão
+Countries[BA]=Bósnia-Herzegóvina
+Countries[BB]=Barbados
+Countries[BD]=Bangladesh
+Countries[BE]=Bélgica
+Countries[BF]=Burkina Fasso
+Countries[BG]=Bulgária
+Countries[BH]=Bahrain
+Countries[BI]=Burundi
+Countries[BJ]=Benin
+Countries[BL]=São Bartolomeu
+Countries[BM]=Bermudas
+Countries[BN]=Brunei
+Countries[BO]=Bolívia
+Countries[BQ]=Bonaire
+Countries[BR]=Brasil
+Countries[BS]=Bahamas
+Countries[BT]=Butão
+Countries[BV]=Ilha Bouvet
+Countries[BW]=Botsuana
+Countries[BY]=Bielo-Rússia
+Countries[BZ]=Belize
+Countries[CA]=Canadá
+Countries[CC]=Ilhas Coco
+Countries[CD]=Congo-Kinshasa
+Countries[CF]=República Centro-Africana
+Countries[CG]=Congo
+Countries[CH]=Suíça
+Countries[CI]=Costa do Marfim
+Countries[CK]=Ilhas Cook
+Countries[CL]=Chile
+Countries[CM]=Camarões
+Countries[CN]=China
+Countries[CO]=Colômbia
+Countries[CR]=Costa Rica
+Countries[CU]=Cuba
+Countries[CV]=Cabo Verde
+Countries[CW]=Curaçao
+Countries[CX]=Ilhas Natal
+Countries[CY]=Chipre
+Countries[CZ]=República Checa
+Countries[DE]=Alemanha
+Countries[DJ]=Djibuti
+Countries[DK]=Dinamarca
+Countries[DM]=Dominica
+Countries[DO]=República Dominicana
+Countries[DZ]=Argélia
+Countries[EC]=Equador
+Countries[EE]=Estônia
+Countries[EG]=Egito
+Countries[EH]=Saara Ocidental
+Countries[ER]=Eritreia
+Countries[ES]=Espanha
+Countries[ET]=Etiópia
+Countries[FI]=Finlândia
+Countries[FJ]=Fiji
+Countries[FK]=Ilhas Malvinas
+Countries[FM]=Micronésia
+Countries[FO]=Ilhas Faroe
+Countries[FR]=França
+Countries[GA]=Gabão
+Countries[GB]=Reino Unido
+Countries[GD]=Granada
+Countries[GE]=Geórgia
+Countries[GF]=Guiana Francesa
+Countries[GG]=Guernsey
+Countries[GH]=Gana
+Countries[GI]=Gibraltar
+Countries[GL]=Gronelândia
+Countries[GM]=Gâmbia
+Countries[GN]=Guiné
+Countries[GP]=Guadalupe
+Countries[GQ]=Guiné Equatorial
+Countries[GR]=Grécia
+Countries[GS]=Geórgia do Sul e Ilhas Sandwich do Sul
+Countries[GT]=Guatemala
+Countries[GU]=Guam
+Countries[GW]=República da Guiné-Bissau
+Countries[GY]=Guiana
+Countries[HK]=Hong Kong
+Countries[HM]=Ilha Heard e Ilhas McDonald
+Countries[HN]=Honduras
+Countries[HR]=Croácia
+Countries[HT]=Haiti
+Countries[HU]=Hungria
+Countries[ID]=Indonésia
+Countries[IE]=Irlanda
+Countries[IL]=Israel
+Countries[IM]=Ilha de Man
+Countries[IN]=Índia
+Countries[IO]=Território Britânico do Oceano Índico
+Countries[IQ]=Iraque
+Countries[IR]=Irã
+Countries[IS]=Islândia
+Countries[IT]=Itália
+Countries[JE]=Jersey
+Countries[JM]=Jamaica
+Countries[JO]=Jordânia
+Countries[JP]=Japão
+Countries[KE]=Quênia
+Countries[KG]=Quirguistão
+Countries[KH]=Camboja
+Countries[KI]=Quiribati
+Countries[KM]=Ilhas Comores
+Countries[KN]=São Cristóvão e Névis
+Countries[KP]=Coréia, República Popular Democrática da
+Countries[KR]=Coréia, República da
+Countries[KW]=Kuwait
+Countries[KY]=Ilhas Caiman
+Countries[KZ]=Cazaquistão
+Countries[LA]=República Popular Democrática do Laos
+Countries[LB]=Líbano
+Countries[LC]=Santa Lúcia
+Countries[LI]=Lichtenstein
+Countries[LK]=Sri Lanka
+Countries[LR]=Libéria
+Countries[LS]=Lesoto
+Countries[LT]=Lituânia
+Countries[LU]=Luxemburgo
+Countries[LV]=Letônia
+Countries[LY]=Líbia Árabe Jamahiriya
+Countries[MA]=Marrocos
+Countries[MC]=Mônaco
+Countries[MD]=Moldova, República de
+Countries[ME]=Montenegro
+Countries[MF]=São Martinho
+Countries[MG]=Madagascar
+Countries[MH]=IlhasMarshall
+Countries[MK]=Macedônia
+Countries[ML]=Mali
+Countries[MM]=Mianmar [Birmânia]
+Countries[MN]=Mongólia
+Countries[MO]=Região Administrativa Especial de Macau
+Countries[MP]=Ilhas Marianas do Norte
+Countries[MQ]=Martinica
+Countries[MR]=Mauritânia
+Countries[MS]=Montserrat
+Countries[MT]=Malta
+Countries[MU]=Maurício
+Countries[MV]=Maldivas
+Countries[MW]=Malauí
+Countries[MX]=México
+Countries[MY]=Malásia
+Countries[MZ]=República de Moçambique
+Countries[NA]=Namíbia
+Countries[NC]=Nova Caledônia
+Countries[NE]=Níger
+Countries[NF]=Ilha Norfolk
+Countries[NG]=Nigéria
+Countries[NI]=Nicarágua
+Countries[NL]=Países Baixos
+Countries[NO]=Noruega
+Countries[NP]=Nepal
+Countries[NR]=Nauru
+Countries[NU]=Niue
+Countries[NZ]=Nova Zelândia
+Countries[OM]=Omã
+Countries[PA]=Panamá
+Countries[PE]=Peru
+Countries[PF]=Polinésia Francesa
+Countries[PG]=Papua-Nova Guiné
+Countries[PH]=Filipinas
+Countries[PK]=Paquistão
+Countries[PL]=Polônia
+Countries[PM]=Saint Pierre e Miquelon
+Countries[PN]=Pitcairn
+Countries[PR]=Porto Rico
+Countries[PS]=Territórios palestinos
+Countries[PT]=Portugal
+Countries[PW]=Palau
+Countries[PY]=Paraguai
+Countries[QA]=Catar
+Countries[RE]=Reunião
+Countries[RO]=Romênia
+Countries[RS]=Sérvia
+Countries[RU]=Rússia
+Countries[RW]=Ruanda
+Countries[SA]=Arábia Saudita
+Countries[SB]=Ilhas Salomão
+Countries[SC]=Ilhas Seychelles
+Countries[SD]=Sudão
+Countries[SE]=Suécia
+Countries[SG]=Cingapura
+Countries[SH]=Santa Helena
+Countries[SI]=Eslovênia
+Countries[SJ]=Svalbard e Jan Mayen
+Countries[SK]=Eslováquia (República Eslovaca)
+Countries[SL]=Serra Leoa
+Countries[SM]=San Marino
+Countries[SN]=Senegal
+Countries[SO]=Somália
+Countries[SR]=Suriname
+Countries[SS]=Sudão do Sul
+Countries[ST]=República Democrática de São Tomé e Príncipe
+Countries[SV]=El Salvador
+Countries[SX]=São Martinho
+Countries[SY]=Síria
+Countries[SZ]=Suazilândia
+Countries[TC]=Ilhas Turks e Caicos
+Countries[TD]=Chade
+Countries[TF]=Territórios Franceses do Sul
+Countries[TG]=Togo
+Countries[TH]=Tailândia
+Countries[TJ]=Tajiquistão
+Countries[TK]=Tokelau
+Countries[TL]=República Democrática de Timor-Leste
+Countries[TM]=Turcomenistão
+Countries[TN]=Tunísia
+Countries[TO]=Tonga
+Countries[TR]=Turquia
+Countries[TT]=Trindade e Tobago
+Countries[TV]=Tuvalu
+Countries[TW]=Taiwan
+Countries[TZ]=Tanzânia
+Countries[UA]=Ucrânia
+Countries[UG]=Uganda
+Countries[UM]=Ilhas Menores Distantes dos Estados Unidos
+Countries[US]=Estados Unidos
+Countries[UY]=Uruguai
+Countries[UZ]=Uzbequistão
+Countries[VA]=Santa Sé (Cidade-Estado do Vaticano)
+Countries[VC]=São Vincente e Granadinas
+Countries[VE]=Venezuela
+Countries[VG]=Ilhas Virgens Britânicas
+Countries[VI]=Ilhas Virgens dos EUA
+Countries[VN]=Vietnã
+Countries[VU]=Vanuatu
+Countries[WF]=Ilhas Wallis e Futuna
+Countries[WS]=Samoa
+Countries[XK]=Kosovo
+Countries[YE]=Iêmen
+Countries[YT]=Mayotte
+Countries[ZA]=África do Sul
+Countries[ZM]=Zâmbia
+Countries[ZW]=Zimbábue
